@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,12 +21,14 @@ import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.model.*;
 import org.jkiss.dbeaver.model.app.DBPProject;
+import org.jkiss.dbeaver.model.connection.DBPDriverWithLazyIcon;
 import org.jkiss.dbeaver.model.navigator.meta.DBXTreeItem;
 import org.jkiss.dbeaver.model.navigator.meta.DBXTreeNode;
-import org.jkiss.dbeaver.model.net.DBWHandlerConfiguration;
+import org.jkiss.dbeaver.model.net.DBWUtils;
 import org.jkiss.dbeaver.model.runtime.DBRProgressListener;
 import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.model.struct.DBSObject;
+import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.utils.CommonUtils;
 
 import java.util.Collection;
@@ -35,24 +37,28 @@ import java.util.List;
 /**
  * DBNDataSource
  */
-public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, DBPAdaptable
-{
+public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, DBPAdaptable {
     private static final boolean USE_ICON_DECORATIONS = false; // Disabled in #9384
 
     private final DBPDataSourceContainer dataSource;
-    private DBXTreeNode treeRoot;
+    private final DBXTreeNode treeRoot;
+    private final Runnable driverIconUpdateCallback = () -> {
+        DBNModel model = getModel();
+        if (model != null) {
+            model.fireNodeUpdate(this, this, DBNEvent.NodeChange.STRUCT_REFRESH);
+        }
+    };
 
-    public DBNDataSource(@NotNull DBNNode parentNode, @NotNull DBPDataSourceContainer dataSource)
-    {
+    public DBNDataSource(@NotNull DBNNode parentNode, @NotNull DBPDataSourceContainer dataSource) {
         super(parentNode);
         this.dataSource = dataSource;
         this.treeRoot = dataSource.getDriver().getNavigatorRoot();
         registerNode();
     }
 
+    @Nullable
     @Override
-    public DBNNode getParentNode()
-    {
+    public DBNNode getParentNode() {
         DBPDataSourceFolder folder = dataSource.getFolder();
         if (folder != null) {
             DBNLocalFolder localFolder = ((DBNProjectDatabases) super.getParentNode()).getFolderNode(folder);
@@ -78,60 +84,60 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, DBPA
         return dataSource;
     }
 
+    @Nullable
     @Override
     public Object getValueObject()
     {
         return dataSource.getDataSource();
     }
 
+    @NotNull
     @Override
     public String getChildrenType() {
         final List<DBXTreeNode> metaChildren = treeRoot.getChildren(this);
         if (CommonUtils.isEmpty(metaChildren) || metaChildren.size() > 1) {
             return "?";
         } else {
-            return metaChildren.get(0).getChildrenTypeLabel(getDataSource(), null);
+            return metaChildren.getFirst().getChildrenTypeLabel(getDataSource(), null);
         }
     }
 
+    @Nullable
     @Override
     public Class<?> getChildrenClass() {
         final List<DBXTreeNode> metaChildren = treeRoot.getChildren(null); // Use null context because we don't need to filter nodes
         if (CommonUtils.isEmpty(metaChildren) || metaChildren.size() > 1) {
             return null;
         }
-        DBXTreeNode childNode = metaChildren.get(0);
-        if (childNode instanceof DBXTreeItem) {
-            return getChildrenClass((DBXTreeItem) childNode);
+        DBXTreeNode childNode = metaChildren.getFirst();
+        if (childNode instanceof DBXTreeItem ti) {
+            return getChildrenClass(ti);
         }
         return null;
     }
 
+    @NotNull
     @Override
     public String getNodeDisplayName() {
         return dataSource.getName();
     }
 
+    @Nullable
     @Override
     public String getNodeDescription()
     {
         return dataSource.getDescription();
     }
 
+    @NotNull
     @Override
     public String getNodeFullName()
     {
         return getNodeDisplayName();
     }
 
-    @Deprecated
     @Override
-    public String getNodeItemPath() {
-        return makeDataSourceItemPath(dataSource);
-    }
-
-    @Override
-    public boolean isManagable()
+    public boolean isManageable()
     {
         return true;
     }
@@ -155,19 +161,23 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, DBPA
     }
 
     @Override
-    public boolean initializeNode(@Nullable DBRProgressMonitor monitor, DBRProgressListener onFinish) throws DBException {
+    public boolean initializeNode(@Nullable DBRProgressMonitor monitor, @Nullable DBRProgressListener onFinish) throws DBException {
         return DBUtils.initDataSource(monitor, dataSource, onFinish);
     }
 
+    @Nullable
     @Override
     public DBPImage getNodeIcon() {
+        if (dataSource.getDriver() instanceof DBPDriverWithLazyIcon lazyIcon) {
+            lazyIcon.loadIcon(driverIconUpdateCallback);
+        }
         DBPImage image = super.getNodeIcon();
         if (USE_ICON_DECORATIONS) {
             boolean hasNetworkHandlers = hasNetworkHandlers();
             if (dataSource.isConnectionReadOnly() || hasNetworkHandlers) {
-                if (image instanceof DBIconComposite) {
-                    ((DBIconComposite) image).setTopRight(hasNetworkHandlers ? DBIcon.OVER_EXTERNAL : null);
-                    ((DBIconComposite) image).setBottomLeft(dataSource.isConnectionReadOnly() ? DBIcon.OVER_LOCK : null);
+                if (image instanceof DBIconComposite ic) {
+                    ic.setTopRight(hasNetworkHandlers ? DBIcon.OVER_EXTERNAL : null);
+                    ic.setBottomLeft(dataSource.isConnectionReadOnly() ? DBIcon.OVER_LOCK : null);
                 } else {
                     image = new DBIconComposite(
                         image,
@@ -183,16 +193,11 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, DBPA
     }
 
     public boolean hasNetworkHandlers() {
-        for (DBWHandlerConfiguration handler : dataSource.getConnectionConfiguration().getHandlers()) {
-            if (handler.isEnabled()) {
-                return true;
-            }
-        }
-        return false;
+        return !DBWUtils.getActualNetworkHandlers(dataSource).isEmpty();
     }
 
     @Override
-    public <T> T getAdapter(Class<T> adapter) {
+    public <T> T getAdapter(@NotNull Class<T> adapter) {
         if (adapter == DBNDataSource.class) {
             return adapter.cast(this);
         } else if (DBPDataSourceContainer.class.isAssignableFrom(adapter)) {
@@ -215,10 +220,9 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, DBPA
     }
 
     @Override
-    public void rename(DBRProgressMonitor monitor, String newName)
-    {
+    public void rename(@NotNull DBRProgressMonitor monitor, @NotNull String newName) throws DBException {
         dataSource.setName(newName);
-        dataSource.persistConfiguration();
+        dataSource.getRegistry().updateDataSource(dataSource, false);
         dataSource.fireEvent(new DBPEvent(DBPEvent.Action.OBJECT_UPDATE, dataSource, null));
     }
 
@@ -238,23 +242,22 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, DBPA
     }
 
     @Override
-    public boolean supportsDrop(DBNNode otherNode)
-    {
+    public boolean supportsDrop(@Nullable DBNNode otherNode) {
         return otherNode == null || otherNode instanceof DBNDataSource ||
-            (otherNode instanceof DBNLocalFolder && ((DBNLocalFolder) otherNode).getFolder().canMoveTo(dataSource.getFolder()));
+            (dataSource.getFolder() != null && otherNode instanceof DBNLocalFolder oln &&
+                oln.getFolder().canMoveTo(dataSource.getFolder()));
     }
 
     @Override
-    public void dropNodes(DBRProgressMonitor monitor, Collection<DBNNode> nodes) throws DBException
-    {
+    public void dropNodes(@NotNull DBRProgressMonitor monitor, @NotNull Collection<DBNNode> nodes) {
         DBPDataSourceFolder folder = dataSource.getFolder();
         for (DBNNode node : nodes) {
-            if (node instanceof DBNDataSource) {
-                if (!((DBNDataSource) node).moveToFolder(getOwnerProject(), folder)) {
+            if (node instanceof DBNDataSource dsNode) {
+                if (!dsNode.moveToFolder(getOwnerProject(), folder)) {
                     return;
                 }
-            } else if (node instanceof DBNLocalFolder) {
-                ((DBNLocalFolder) node).getFolder().setParent(dataSource.getFolder());
+            } else if (node instanceof DBNLocalFolder lfNode) {
+                lfNode.getFolder().setParent(dataSource.getFolder());
             }
         }
         DBNModel.updateConfigAndRefreshDatabases(this);
@@ -267,10 +270,14 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, DBPA
             return false;
         }
         dataSource.setFolder(folder);
+        if (DBWorkbench.isDistributed()) {
+            return dataSource.persistConfiguration(false);
+        }
         return true;
     }
 
-    public DBNNode refreshNode(DBRProgressMonitor monitor, Object source) throws DBException
+    @Nullable
+    public DBNNode refreshNode(@NotNull DBRProgressMonitor monitor, @Nullable Object source) throws DBException
     {
         DBNNode node = super.refreshNode(monitor, source);
         if (node == this) {
@@ -285,6 +292,7 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, DBPA
         clearNode(true);
     }
 
+    @NotNull
     @Override
     public String toString() {
         return dataSource.toString();
@@ -292,16 +300,11 @@ public class DBNDataSource extends DBNDatabaseNode implements DBNContainer, DBPA
 
     public static DBNDataSource getDataSourceNode(DBNNode node) {
         for (DBNNode pn = node; pn != null; pn = pn.getParentNode()) {
-            if (pn instanceof DBNDataSource) {
-                return (DBNDataSource) pn;
+            if (pn instanceof DBNDataSource dsNode) {
+                return dsNode;
             }
         }
         return null;
-    }
-
-    @NotNull
-    public static String makeDataSourceItemPath(DBPDataSourceContainer dataSource) {
-        return NodePathType.database.getPrefix() + DBNUtils.encodeNodePath(dataSource.getId());
     }
 
 }
