@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,7 +22,6 @@ import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.model.*;
 import org.jkiss.dbeaver.model.access.DBAObject;
-import org.jkiss.dbeaver.model.dpi.DPIClientObject;
 import org.jkiss.dbeaver.model.exec.DBCException;
 import org.jkiss.dbeaver.model.exec.DBCExecutionContext;
 import org.jkiss.dbeaver.model.exec.DBExecUtils;
@@ -49,6 +48,7 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Type;
 import java.util.*;
+import java.util.function.Function;
 
 /**
  * DBNDatabaseNode
@@ -85,18 +85,20 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         super.dispose(reflect);
     }
 
+    @NotNull
     @Override
     public String getNodeType() {
         if (getObject() == null) {
             return "";
         }
         DBXTreeNode meta = getMeta();
-        return meta == null ? "" : meta.getNodeTypeLabel(getObject().getDataSource(), null); //$NON-NLS-1$
+        return meta.getNodeTypeLabel(getObject().getDataSource(), null); //$NON-NLS-1$
     }
 
+    @NotNull
     @Override
     public String getNodeDisplayName() {
-        return getPlainNodeName(false, true);
+        return CommonUtils.notNull(getPlainNodeName(false, true), "");
     }
 
     /**
@@ -105,6 +107,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
      * @param useSimpleName do not append any qualifiers to the name. Usually sued for functions like rename
      * @param showDefaults  return some default value if actual name is empty. otherwise returns null
      */
+    @Nullable
     public String getPlainNodeName(boolean useSimpleName, boolean showDefaults) {
         DBSObject object = getObject();
         if (object == null) {
@@ -112,16 +115,19 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         }
         String objectName;
         if (!useSimpleName) {
-            if (object instanceof DBPOverloadedObject) {
-                objectName = ((DBPOverloadedObject) object).getOverloadedName();
+            if (object instanceof DBPOverloadedObject ovrObject) {
+                objectName = ovrObject.getOverloadedName();
             } else if (isVirtual() &&
-                getParentNode() instanceof DBNDatabaseNode &&
+                getParentNode() instanceof DBNDatabaseNode dbNode &&
                 object.getParentObject() != null &&
-                object.getParentObject() != ((DBNDatabaseNode) getParentNode()).getValueObject())
+                object.getParentObject() != dbNode.getValueObject())
             {
                 objectName = object.getParentObject().getName() + "." + object.getName();
             } else {
-                if (object instanceof DBSEntity && object.getDataSource().getContainer().getNavigatorSettings().isMergeEntities()) {
+                DBPDataSource dataSource = object.getDataSource();
+                if (object instanceof DBSEntity && dataSource != null &&
+                    dataSource.getContainer().getNavigatorSettings().isMergeEntities()
+                ) {
                     objectName = DBUtils.getObjectFullName(object, DBPEvaluationContext.UI);
                 } else {
                     objectName = object.getName();
@@ -134,58 +140,53 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         if (showDefaults && CommonUtils.isEmpty(objectName)) {
             objectName = object.toString();
             if (CommonUtils.isEmpty(objectName)) {
-                objectName = object.getClass().getName() + "@" + object.hashCode(); //$NON-NLS-1$
-            }
-        }
-/*
-        if (object instanceof DBPUniqueObject) {
-            String uniqueName = ((DBPUniqueObject) object).getUniqueName();
-            if (!uniqueName.equals(objectName)) {
-                if (uniqueName.startsWith(objectName)) {
-                    uniqueName = uniqueName.substring(objectName.length());
+                if (!object.isPersisted()) {
+                    objectName = ""; //$NON-NLS-1$
+                } else {
+                    objectName = "...?"; //$NON-NLS-1$
                 }
-                objectName += " (" + uniqueName + ")";
             }
         }
-*/
         return objectName;
     }
 
+    @Nullable
     @Override
     public String getNodeBriefInfo() {
-        if (getObject() instanceof DBPToolTipObject) {
-            return ((DBPToolTipObject) getObject()).getObjectToolTip();
+        if (getObject() instanceof DBPToolTipObject ttObject) {
+            return ttObject.getObjectToolTip();
         } else {
             return super.getNodeBriefInfo();
         }
     }
 
+    @NotNull
     @Override
     public String getNodeFullName() {
-        if (getObject() instanceof DBPQualifiedObject) {
-            return ((DBPQualifiedObject) getObject()).getFullyQualifiedName(DBPEvaluationContext.UI);
+        if (getObject() instanceof DBPQualifiedObject qo) {
+            return qo.getFullyQualifiedName(DBPEvaluationContext.UI);
         } else {
             return super.getNodeFullName();
         }
     }
 
+    @Nullable
     @Override
     public String getNodeDescription() {
         return getObject() == null ? null : getObject().getDescription();
     }
 
+    @Nullable
     @Override
     public DBPImage getNodeIcon() {
         final DBSObject object = getObject();
         DBPImage image = DBValueFormatting.getObjectImage(object, false);
         if (image == null) {
             DBXTreeNode meta = getMeta();
-            if (meta != null) {
-                image = meta.getIcon(this);
-            }
+            image = meta.getIcon(this);
         }
-        if (image != null && object instanceof DBPStatefulObject) {
-            image = DBNModel.getStateOverlayImage(image, ((DBPStatefulObject) object).getObjectState());
+        if (image != null && object instanceof DBPStatefulObject so) {
+            image = DBNModel.getStateOverlayImage(image, so.getObjectState());
         }
         return image;
     }
@@ -200,8 +201,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         return !isDisposed() && this.getMeta().hasChildren(this, true);
     }
 
-    public boolean hasChildren(DBRProgressMonitor monitor, DBXTreeNode childType)
-        throws DBException {
+    public boolean hasChildren(@NotNull DBRProgressMonitor monitor, @NotNull DBXTreeNode childType) throws DBException {
         if (isDisposed()) {
             return false;
         }
@@ -216,6 +216,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         return false;
     }
 
+    @Nullable
     @Override
     public DBNDatabaseNode[] getChildren(@NotNull DBRProgressMonitor monitor) throws DBException {
         boolean needsLoad;
@@ -248,11 +249,12 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         // Do nothing
     }
 
+    @Nullable
     DBNDatabaseNode[] getChildNodes() {
         return childNodes;
     }
 
-    boolean hasChildItem(DBSObject object) {
+    boolean hasChildItem(@NotNull DBSObject object) {
         if (childNodes != null) {
             for (DBNDatabaseNode child : childNodes) {
                 if (child.getObject() == object) {
@@ -263,7 +265,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         return false;
     }
 
-    void addChildItem(DBSObject object) {
+    void addChildItem(@NotNull DBSObject object) {
         DBXTreeNode metaChildren = getItemsMeta();
         if (metaChildren == null) {
             // There is no item meta. Maybe we are under some folder structure
@@ -271,7 +273,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
             metaChildren = getFolderMeta(object.getClass());
         }
         if (metaChildren != null) {
-            final DBNDatabaseItem newChild = new DBNDatabaseItem(this, metaChildren, object, false);
+            final DBNDatabaseItem newChild = new DBNDatabaseItem(this, metaChildren, object);
             synchronized (this) {
                 childNodes = ArrayUtils.add(DBNDatabaseNode.class, childNodes, newChild);
             }
@@ -281,7 +283,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         }
     }
 
-    void removeChildItem(DBSObject object) {
+    void removeChildItem(@NotNull DBSObject object) {
         DBNNode childNode = null;
         synchronized (this) {
             if (!ArrayUtils.isEmpty(childNodes)) {
@@ -327,7 +329,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         return locked || super.isLocked();
     }
 
-    public boolean initializeNode(DBRProgressMonitor monitor, DBRProgressListener onFinish) throws DBException {
+    public boolean initializeNode(@Nullable DBRProgressMonitor monitor, @Nullable DBRProgressListener onFinish) throws DBException {
         if (onFinish != null) {
             onFinish.onTaskFinished(Status.OK_STATUS);
         }
@@ -346,27 +348,23 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
      * @return real refreshed node or null if nothing was refreshed
      * @throws DBException on any internal exception
      */
+    @Nullable
     @Override
-    public DBNNode refreshNode(DBRProgressMonitor monitor, Object source) throws DBException {
+    public DBNNode refreshNode(@NotNull DBRProgressMonitor monitor, @Nullable Object source) throws DBException {
         if (isLocked()) {
             log.warn("Attempt to refresh locked node '" + getNodeDisplayName() + "'"); //$NON-NLS-1$ //$NON-NLS-2$
             return null;
         }
         DBSObject object = getObject();
-        if (object instanceof DBPRefreshableObject) {
+        if (object instanceof DBPRefreshableObject refreshableObject) {
             DBPDataSource dataSource = object.getDataSource();
             if (object.isPersisted() && dataSource != null) {
                 DBSObject[] newObject = new DBSObject[1];
-                DBExecUtils.tryExecuteRecover(monitor, dataSource, param -> {
-                    try {
-                        newObject[0] = ((DBPRefreshableObject) object).refreshObject(monitor);
-                    } catch (DBException e) {
-                        throw new InvocationTargetException(e);
-                    }
-                });
+                DBExecUtils.tryExecuteRecover(monitor, dataSource, param ->
+                    newObject[0] = refreshableObject.refreshObject(monitor));
                 if (newObject[0] == null) {
-                    if (parentNode instanceof DBNDatabaseNode) {
-                        ((DBNDatabaseNode) parentNode).removeChildItem(object);
+                    if (parentNode instanceof DBNDatabaseNode dbNode) {
+                        dbNode.removeChildItem(object);
                     }
                     return null;
                 } else {
@@ -384,7 +382,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
     }
 
     private void refreshNodeContent(final DBRProgressMonitor monitor, DBSObject newObject, Object source, boolean reflect)
-        throws DBException {
+    throws DBException {
         if (isDisposed()) {
             return;
         }
@@ -417,11 +415,11 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
     }
 
     private void loadChildren(
-        DBRProgressMonitor monitor,
-        final DBXTreeNode meta,
-        final DBNDatabaseNode[] oldList,
-        final List<DBNDatabaseNode> toList,
-        Object source,
+        @NotNull DBRProgressMonitor monitor,
+        @NotNull DBXTreeNode meta,
+        @Nullable DBNDatabaseNode[] oldList,
+        @NotNull List<DBNDatabaseNode> toList,
+        @NotNull Object source,
         boolean reflect
     ) throws DBException {
         if (monitor.isCanceled()) {
@@ -446,7 +444,6 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
             // disposed?
             return;
         }
-        monitor.beginTask(ModelMessages.model_navigator_load_items_, childMetas.size());
         DBPDataSourceContainer container = getDataSourceContainer();
         DBNBrowseSettings navSettings = container.getNavigatorSettings();
         final boolean showSystem = navSettings.isShowSystemObjects();
@@ -455,15 +452,14 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         boolean mergeEntities = navSettings.isMergeEntities();
         boolean supportsOptionalFolders = false;
         DBPDataSource dataSource = container.getDataSource();
-        if (dataSource instanceof DBPDataSourceWithOptionalElements) {
-            supportsOptionalFolders = ((DBPDataSourceWithOptionalElements) dataSource).hasOptionalFolders();
+        if (dataSource instanceof DBPDataSourceWithOptionalElements swoe) {
+            supportsOptionalFolders = swoe.hasOptionalFolders();
         }
 
         for (DBXTreeNode child : childMetas) {
             if (monitor.isCanceled()) {
                 break;
             }
-            monitor.subTask(ModelMessages.model_navigator_load_ + " " + child.getChildrenTypeLabel(object.getDataSource(), null));
             if (showOnlyEntities && !isEntityMeta(child)) {
                 continue;
             }
@@ -494,55 +490,52 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
                             log.error("Optional item '" + optionalPath + "' not found in folder " + child.getId());
                         } else {
                             Object optionalValue = extractPropertyValue(monitor, getValueObject(), optionalItem);
-                            if (optionalValue == null || (optionalValue instanceof Collection && ((Collection<?>) optionalValue).isEmpty())) {
+                            if (optionalValue == null || (optionalValue instanceof Collection<?> col && col.isEmpty())) {
                                 // Go on next DBX level
                                 loadChildren(monitor, optionalItem, oldList, toList, source, reflect);
                                 continue;
                             }
                         }
                     }
-
-                    if (oldList == null) {
-                        // Load new folders only if there are no old ones
-                        toList.add(
-                            new DBNDatabaseFolder(this, (DBXTreeFolder) child));
-                    } else {
-                        for (DBNDatabaseNode oldFolder : oldList) {
-                            if (oldFolder.getMeta() == child) {
-                                oldFolder.reloadChildren(monitor, source, reflect);
-                                toList.add(oldFolder);
-                                break;
-                            }
-                        }
-                    }
+                    addNewOrRefreshOldNode(monitor, oldList, toList, source, reflect, treeFolder, n -> new DBNDatabaseFolder(this, n));
                 }
-            } else if (child instanceof DBXTreeObject) {
+            } else if (child instanceof DBXTreeObject treeObject) {
                 if (hideFolders) {
                     continue;
                 }
-                if (oldList == null) {
-                    // Load new objects only if there are no old ones
-                    toList.add(
-                        new DBNDatabaseObject(this, (DBXTreeObject) child));
-                } else {
-                    for (DBNDatabaseNode oldObject : oldList) {
-                        if (oldObject.getMeta().equals(child)) {
-                            oldObject.reloadChildren(monitor, source, reflect);
-                            toList.add(oldObject);
-                            break;
-                        }
-                    }
-                }
+                addNewOrRefreshOldNode(monitor, oldList, toList, source, reflect, treeObject, n -> new DBNDatabaseObject(this, n));
             } else {
                 log.warn("Unsupported meta node type: " + child); //$NON-NLS-1$
             }
-            monitor.worked(1);
         }
-        monitor.done();
 
         if (reflect && filtered) {
             getModel().fireNodeUpdate(this, this, DBNEvent.NodeChange.REFRESH);
         }
+    }
+
+    private <T extends DBXTreeNode> void addNewOrRefreshOldNode(
+        @NotNull DBRProgressMonitor monitor,
+        @Nullable DBNDatabaseNode[] oldList,
+        @NotNull List<DBNDatabaseNode> toList,
+        @NotNull Object source,
+        boolean reflect,
+        @NotNull T child,
+        @NotNull Function<? super T, DBNDatabaseNode> factory
+    ) throws DBException {
+        if (oldList != null) {
+            // Try to find old object with the same meta
+            for (DBNDatabaseNode oldObject : oldList) {
+                if (oldObject.getMeta().equals(child)) {
+                    oldObject.reloadChildren(monitor, source, reflect);
+                    toList.add(oldObject);
+                    return;
+                }
+            }
+        }
+
+        // Load new object
+        toList.add(factory.apply(child));
     }
 
     public boolean isDynamicStructObject() {
@@ -550,7 +543,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         if (meta instanceof DBXTreeFolder folder) {
             List<DBXTreeNode> children = folder.getChildren(this);
             if (children.size() == 1) {
-                meta = children.get(0);
+                meta = children.getFirst();
             }
         }
         if (meta instanceof DBXTreeItem item) {
@@ -605,10 +598,10 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
 
     private boolean isEntityMeta(DBXTreeNode node) {
         Class<?> nodeChildClass = null;
-        if (node instanceof DBXTreeItem) {
-            nodeChildClass = getChildrenClass((DBXTreeItem) node);
-        } else if (node instanceof DBXTreeFolder) {
-            nodeChildClass = getFolderChildrenClass((DBXTreeFolder) node);
+        if (node instanceof DBXTreeItem treeItem) {
+            nodeChildClass = getChildrenClass(treeItem);
+        } else if (node instanceof DBXTreeFolder treeFolder) {
+            nodeChildClass = getFolderChildrenClass(treeFolder);
         }
         if (nodeChildClass == null) {
             return false;
@@ -617,12 +610,12 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         return
             (DBSObjectContainer.class.isAssignableFrom(nodeChildClass) &&
                 !DBSPackage.class.isAssignableFrom(nodeChildClass)) ||
-            (DBSEntity.class.isAssignableFrom(nodeChildClass) &&
-                !DBSDataType.class.isAssignableFrom(nodeChildClass) &&
-                !DBSSequence.class.isAssignableFrom(nodeChildClass) &&
-                !DBSPackage.class.isAssignableFrom(nodeChildClass)) ||
-            DBSEntityAttribute.class.isAssignableFrom(nodeChildClass) ||
-            DBSInstance.class.isAssignableFrom(nodeChildClass);
+                (DBSEntity.class.isAssignableFrom(nodeChildClass) &&
+                    !DBSDataType.class.isAssignableFrom(nodeChildClass) &&
+                    !DBSSequence.class.isAssignableFrom(nodeChildClass) &&
+                    !DBSPackage.class.isAssignableFrom(nodeChildClass)) ||
+                DBSEntityAttribute.class.isAssignableFrom(nodeChildClass) ||
+                DBSInstance.class.isAssignableFrom(nodeChildClass);
     }
 
     /**
@@ -630,7 +623,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
      *
      * @param monitor progress monitor
      * @param meta    items meta info
-     * @param toList previous child items
+     * @param oldListCmp previous child items
      * @param toList  list ot add new items   @return true on success
      * @param showSystem include system objects
      * @param reflect @return true on success
@@ -646,7 +639,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         boolean hideFolders,
         boolean mergeEntities,
         boolean reflect)
-        throws DBException {
+    throws DBException {
         if (this.isDisposed())
         {
             // Property reading can take really long time so this node can be disposed at this moment -
@@ -675,7 +668,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         if (propertyValue == null) {
             return false;
         }
-        if (!(propertyValue instanceof Collection<?>)) {
+        if (!(propertyValue instanceof Collection<?> itemList)) {
             log.warn("Bad property '" + meta.getPropertyName() + "' value: " + propertyValue.getClass().getName()); //$NON-NLS-1$ //$NON-NLS-2$
             return false;
         }
@@ -685,7 +678,6 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         if (filter != null && dataSource != null) {
             filter.setCaseSensitive(dataSource.getSQLDialect().hasCaseSensitiveFiltration());
         }
-        final Collection<?> itemList = (Collection<?>) propertyValue;
         if (itemList.isEmpty()) {
             return false;
         }
@@ -702,7 +694,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
             if (childItem == null) {
                 continue;
             }
-            if (!(childItem instanceof DBSObject)) {
+            if (!(childItem instanceof DBSObject object)) {
                 log.warn("Bad item type: " + childItem.getClass().getName()); //$NON-NLS-1$
                 continue;
             }
@@ -711,7 +703,8 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
                 continue;
             }
             if ((!showSystem && DBUtils.isSystemObject(childItem)) &&
-                !(itemList.size() == 1 && (childItem instanceof DBSSchema || childItem instanceof DBSCatalog))) { // Show system catalog/schema in case when only one object in the itemList
+                !(itemList.size() == 1 && (childItem instanceof DBSSchema || childItem instanceof DBSCatalog))) {
+                // Show system catalog/schema in case when only one object in the itemList
                 // Skip system objects
                 continue;
             }
@@ -723,26 +716,31 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
                 // Skip schemas in merge entities mode
                 continue;
             }
-            if (filter != null && !filter.matches(((DBSObject) childItem).getName())) {
-                // Doesn't match filter
-                continue;
+            if (filter != null) {
+                boolean isMatchingFilter;
+                if (childItem instanceof DBPOverloadedObject overloadedObject) {
+                    isMatchingFilter = filter.matchesAny(
+                        object.getName(),
+                        overloadedObject.getOverloadedName()
+                    );
+                } else {
+                    isMatchingFilter = filter.matches(object.getName());
+                }
+                if (!isMatchingFilter) {
+                    continue;
+                }
             }
-            DBSObject object = (DBSObject) childItem;
             boolean added = false;
             if (!oldList.isEmpty()) {
                 // Check that new object is a replacement of old one
                 for (Iterator<DBNDatabaseNode> iterator = oldList.iterator(); iterator.hasNext(); ) {
                     DBNDatabaseNode oldChild = iterator.next();
                     if (oldChild.getMeta() == meta && equalObjects(oldChild.getObject(), object)) {
-                        boolean updated = oldChild.reloadObject(monitor, object);
+                        oldChild.reloadObject(monitor, object);
 
                         if (oldChild.hasChildren(false) && !oldChild.needsInitialization()) {
                             // Refresh children recursive
                             oldChild.reloadChildren(monitor, source, reflect);
-                        }
-                        if (updated && reflect) {
-                            // FIXME: do not update all refreshed items in (it is too expensive)
-                            //getModel().fireNodeUpdate(source, oldChild, DBNEvent.NodeChange.REFRESH);
                         }
 
                         toList.add(oldChild);
@@ -754,7 +752,7 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
             }
             if (!added) {
                 // Simply add new item
-                DBNDatabaseItem treeItem = new DBNDatabaseItem(this, meta, object, oldList != null);
+                DBNDatabaseItem treeItem = new DBNDatabaseItem(this, meta, object);
                 toList.add(treeItem);
             }
         }
@@ -764,6 +762,14 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
             for (DBNDatabaseNode oldChild : oldList) {
                 if (oldChild.getMeta() != meta) {
                     // Wrong type
+                    continue;
+                }
+                if (isNonPersistedChild(oldChild)) {
+                    // Preserve newly-created (non-persisted) child across refresh.
+                    // Its underlying DBSObject isn't visible to the database query yet,
+                    // so the matching loop above can't find it. Disposing it would close
+                    // the in-progress entity editor and lose the user's work (#40920).
+                    toList.add(oldChild);
                     continue;
                 }
                 boolean found = false;
@@ -782,6 +788,13 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         return true;
     }
 
+    // Preserve in-progress (non-persisted) children across a parent-node refresh: the
+    // database query can't see them yet, but the user's open editor depends on them.
+    private static boolean isNonPersistedChild(@NotNull DBNDatabaseNode child) {
+        DBSObject object = child.getObject();
+        return object != null && !object.isPersisted();
+    }
+
     @Nullable
     @Override
     public DBCExecutionContext getExecutionContext() {
@@ -794,8 +807,8 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
     @NotNull
     public DBPDataSourceContainer getDataSourceContainer() {
         for (DBNNode p = getParentNode(); p != null; p = p.getParentNode()) {
-            if (p instanceof DBNDataSource) {
-                return ((DBNDataSource) p).getDataSourceContainer();
+            if (p instanceof DBNDataSource dataSource) {
+                return dataSource.getDataSourceContainer();
             }
         }
         throw new IllegalStateException("No parent datasource node");
@@ -807,8 +820,8 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         if (object != null) {
             return object.getDataSource();
         }
-        if (parentNode instanceof DBNDatabaseNode) {
-            return ((DBNDatabaseNode) parentNode).getDataSource();
+        if (parentNode instanceof DBNDatabaseNode dbNode) {
+            return dbNode.getDataSource();
         }
         throw new IllegalStateException("No datasource is associated with database node " + this);
     }
@@ -817,17 +830,20 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         DBPDataSourceContainer dataSource = getDataSourceContainer();
         Class<?> childrenClass = this.getChildrenOrFolderClass(meta);
         if (childrenClass != null) {
-            Object valueObject = getValueObject();
-            DBSObject parentObject = null;
-            if (valueObject instanceof DBSObject && !(valueObject instanceof DBPDataSource)) {
-                parentObject = (DBSObject) valueObject;
-            }
-            return dataSource.getObjectFilter(childrenClass, parentObject, firstMatch);
+            return dataSource.getObjectFilter(childrenClass, getFilterObject(), firstMatch);
         }
         return null;
     }
 
-    public boolean setNodeFilter(DBXTreeItem meta, DBSObjectFilter filter, boolean saveConfiguration) {
+    @Nullable
+    public DBSObject getFilterObject() {
+        Object valueObject = getValueObject();
+        return valueObject instanceof DBSObject dbsObject && !(valueObject instanceof DBPDataSource)
+            ? dbsObject : null;
+    }
+
+
+    public boolean setNodeFilter(DBXTreeItem meta, @Nullable DBSObjectFilter filter, boolean saveConfiguration) {
         DBPDataSourceContainer dataSource = getDataSourceContainer();
         Class<?> childrenClass = this.getChildrenOrFolderClass(meta);
         if (childrenClass != null) {
@@ -864,43 +880,8 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         return nodeId;
     }
 
-    @Deprecated
-    @Override
-    public String getNodeItemPath() {
-        StringBuilder pathName = new StringBuilder(100);
-
-        for (DBNNode node = this; node instanceof DBNDatabaseNode; node = node.getParentNode()) {
-            if (node instanceof DBNDataSource) {
-                if (pathName.length() > 0) {
-                    pathName.insert(0, '/');
-                }
-                pathName.insert(0, node.getNodeItemPath());
-            } else if (node instanceof DBNDatabaseFolder) {
-                if (pathName.length() > 0) {
-                    pathName.insert(0, '/');
-                }
-                DBXTreeFolder folderMeta = ((DBNDatabaseFolder) node).getMeta();
-                String type = folderMeta.getIdOrType();
-                if (CommonUtils.isEmpty(type)) {
-                    type = node.getName();
-                }
-                pathName.insert(0, type);
-            }
-            if (!(node instanceof DBNDatabaseItem) && !(node instanceof DBNDatabaseObject)) {
-                // skip folders
-                continue;
-            }
-
-            if (pathName.length() > 0) {
-                pathName.insert(0, '/');
-            }
-            pathName.insert(0, DBNUtils.encodeNodePath(node.getNodeDisplayName()));
-        }
-        return pathName.toString();
-    }
-
     private void reloadChildren(DBRProgressMonitor monitor, Object source, boolean reflect)
-        throws DBException {
+    throws DBException {
         DBNDatabaseNode[] oldChildren;
         synchronized (this) {
             if (childNodes == null) {
@@ -940,13 +921,19 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
     @NotNull
     public abstract DBXTreeNode getMeta();
 
+    @Nullable
     public DBXTreeItem getItemsMeta() {
         List<DBXTreeNode> metaChildren = getMeta().getChildren(this);
-        if (metaChildren != null) {
+        if (!metaChildren.isEmpty()) {
             for (DBXTreeNode cn : metaChildren) {
-                if (cn instanceof DBXTreeItem) {
-                    return (DBXTreeItem) cn;
+                if (cn instanceof DBXTreeItem treeItem) {
+                    return treeItem;
                 }
+            }
+            // No direct tree item children
+            if (metaChildren.getFirst() instanceof DBXTreeFolder folder) {
+                List<DBXTreeNode> children = folder.getChildren(this);
+                return !children.isEmpty() && children.getFirst() instanceof DBXTreeItem treeItem ? treeItem : null;
             }
         }
         return null;
@@ -954,11 +941,9 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
 
     public DBXTreeFolder getFolderMeta(Class<?> childType) {
         List<DBXTreeNode> metaChildren = getMeta().getChildren(this);
-        if (metaChildren != null) {
-            for (DBXTreeNode cn : metaChildren) {
-                if (cn instanceof DBXTreeFolder && childType.getName().equals(((DBXTreeFolder) cn).getType())) {
-                    return (DBXTreeFolder) cn;
-                }
+        for (DBXTreeNode cn : metaChildren) {
+            if (cn instanceof DBXTreeFolder treeFolder && childType.getName().equals(treeFolder.getType())) {
+                return treeFolder;
             }
         }
         return null;
@@ -973,8 +958,8 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
         } else {
             List<Class<?>> result = new ArrayList<>();
             for (DBXTreeNode childMeta : childMetas) {
-                if (childMeta instanceof DBXTreeItem) {
-                    Class<?> childrenType = getChildrenClass((DBXTreeItem) childMeta);
+                if (childMeta instanceof DBXTreeItem treeItem) {
+                    Class<?> childrenType = getChildrenClass(treeItem);
                     if (childrenType != null) {
                         result.add(childrenType);
                     }
@@ -1003,8 +988,8 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
 
     public Class<?> getChildrenOrFolderClass(DBXTreeItem childMeta) {
         Class<?> childrenClass = this.getChildrenClass(childMeta);
-        if (childrenClass == null && this instanceof DBNContainer) {
-            childrenClass = ((DBNContainer) this).getChildrenClass();
+        if (childrenClass == null && this instanceof DBNContainer dbnContainer) {
+            childrenClass = dbnContainer.getChildrenClass();
         }
         return childrenClass;
     }
@@ -1012,13 +997,17 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
     ////////////////////////////////////////////////////////////////////////////////////
     // Reflection utils
 
-    private static Object extractPropertyValue(DBRProgressMonitor monitor, Object object, DBXTreeItem meta)
-        throws DBException {
+    private static Object extractPropertyValue(
+        @NotNull DBRProgressMonitor monitor,
+        Object object,
+        DBXTreeItem meta
+    ) throws DBException {
         // Read property using reflection
         if (object == null || meta == null) {
             return null;
         }
         String propertyName = meta.getPropertyName();
+
         if (propertyName.contains(".")) {
             // Extract property recursively
             for (String fieldName : propertyName.split("\\.")) {
@@ -1030,9 +1019,6 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
             return object;
         }
         try {
-            if (object instanceof DPIClientObject) {
-                return ((DPIClientObject) object).dpiPropertyValue(monitor, meta.getPropertyName());
-            }
             Method getter = meta.getPropertyReadMethod(object.getClass());
             if (getter == null) {
                 log.warn("Can't find property '" + propertyName + "' read method in '" + object.getClass().getName() + "'");
@@ -1044,17 +1030,18 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
                 return getter.invoke(object);
             } else if (paramTypes.length == 1 && paramTypes[0] == DBRProgressMonitor.class) {
                 // Read with progress monitor
+                monitor.subTask(ModelMessages.model_navigator_load_.trim() + " " + propertyName);
                 return getter.invoke(object, monitor);
             } else {
-                log.warn("Can't read property '" + propertyName + "' - bad method signature: " + getter.toString());
+                log.warn("Can't read property '" + propertyName + "' - bad method signature: " + getter);
                 return null;
             }
         } catch (IllegalAccessException ex) {
             log.warn("Error accessing items " + propertyName, ex);
             return null;
         } catch (InvocationTargetException ex) {
-            if (ex.getTargetException() instanceof DBException) {
-                throw (DBException) ex.getTargetException();
+            if (ex.getTargetException() instanceof DBException dbe) {
+                throw dbe;
             }
             throw new DBException("Can't read " + propertyName + ": " + ex.getTargetException().getMessage(), ex.getTargetException());
         }
@@ -1075,15 +1062,15 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
                 // Read with progress monitor
                 return getter.invoke(object, monitor);
             } else {
-                log.warn("Can't read property '" + propertyName + "' - bad method signature: " + getter.toString());
+                log.warn("Can't read property '" + propertyName + "' - bad method signature: " + getter);
                 return null;
             }
         } catch (IllegalAccessException ex) {
             log.warn("Error accessing items " + propertyName, ex);
             return null;
         } catch (InvocationTargetException ex) {
-            if (ex.getTargetException() instanceof DBException) {
-                throw (DBException) ex.getTargetException();
+            if (ex.getTargetException() instanceof DBException dbe) {
+                throw dbe;
             }
             throw new DBException("Can't read " + propertyName + ": " + ex.getTargetException().getMessage(), ex.getTargetException());
         }
@@ -1091,9 +1078,9 @@ public abstract class DBNDatabaseNode extends DBNNode implements DBNLazyNode, DB
 
     public boolean isVirtual() {
         for (DBNNode node = this; node != null; node = node.getParentNode()) {
-            if (node instanceof DBNDatabaseNode) {
-                DBXTreeNode meta = ((DBNDatabaseNode) node).getMeta();
-                if (meta != null && meta.isVirtual()) {
+            if (node instanceof DBNDatabaseNode dbNode) {
+                DBXTreeNode meta = dbNode.getMeta();
+                if (meta.isVirtual()) {
                     return true;
                 }
             }
