@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,9 +17,8 @@
 package org.jkiss.dbeaver.model.virtual;
 
 import org.apache.commons.jexl3.JexlBuilder;
-import org.apache.commons.jexl3.JexlContext;
-import org.apache.commons.jexl3.JexlEngine;
 import org.apache.commons.jexl3.JexlExpression;
+import org.apache.commons.jexl3.introspection.JexlPermissions;
 import org.eclipse.core.runtime.IAdaptable;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
@@ -72,38 +71,41 @@ public abstract class DBVUtils {
         return null;
     }
 
+    @Nullable
     public static DBVEntity getVirtualEntity(@NotNull DBDAttributeBinding binding, boolean create) {
         DBSEntityAttribute entityAttribute = binding.getEntityAttribute();
-        DBVEntity vEntity;
         if (entityAttribute != null) {
-            vEntity = getVirtualEntity(entityAttribute.getParentObject(), create);
+            return getVirtualEntity(entityAttribute.getParentObject(), create);
         } else {
-            vEntity = getVirtualEntity(binding.getDataContainer(), create);
-
+            DBSDataContainer dataContainer = binding.getDataContainer();
+            if (dataContainer != null) {
+                return getVirtualEntity(dataContainer, create);
+            } else {
+                return null;
+            }
         }
-        return vEntity;
     }
 
     @Nullable
-    public static DBVEntity getVirtualEntity(@NotNull DBSEntity source, boolean create)
-    {
-        if (source instanceof DBVEntity) {
-            return (DBVEntity) source;
+    public static DBVEntity getVirtualEntity(@NotNull DBSEntity source, boolean create) {
+        if (source instanceof DBVEntity vEntity) {
+            return vEntity;
         }
         DBPDataSource dataSource = source.getDataSource();
         return dataSource == null ? null : dataSource.getContainer().getVirtualModel().findEntity(source, create);
     }
 
+    @Nullable
     public static DBVEntity getVirtualEntity(@NotNull DBSDataContainer dataContainer, boolean create) {
-        if (dataContainer instanceof IAdaptable) {
+        if (dataContainer instanceof IAdaptable adaptable) {
             // Data container can be a wrapper around another data container (e.g. ResultSetDataContainer). Virtual entity is linked to the nested one.
-            DBSDataContainer nestedDC = ((IAdaptable) dataContainer).getAdapter(DBSDataContainer.class);
+            DBSDataContainer nestedDC = adaptable.getAdapter(DBSDataContainer.class);
             if (nestedDC != null) {
                 dataContainer = nestedDC;
             }
         }
-        if (dataContainer instanceof DBSEntity) {
-            return getVirtualEntity((DBSEntity)dataContainer, create);
+        if (dataContainer instanceof DBSEntity entity) {
+            return getVirtualEntity(entity, create);
         }
         // Not an entity. Most likely a custom query. Use local cache for such attributes.
         // There shouldn't be too many such settings as they are defined by user manually
@@ -159,13 +161,24 @@ public abstract class DBVUtils {
     }
 
     @Nullable
-    public static DBDAttributeTransformer[] findAttributeTransformers(@NotNull DBDAttributeBinding binding, @Nullable Boolean custom)
-    {
+    public static DBDAttributeTransformer[] findAttributeTransformers(@NotNull DBDAttributeBinding binding, @Nullable Boolean custom) {
+        List<DBDAttributeTransformer> allTransformers = new ArrayList<>();
+        if (binding.getDataContainer() instanceof DBDAttributeTransformerProvider dbdAttributeTransformerProvider) {
+            List<DBDAttributeTransformer> inMemoryAddedTransformers = dbdAttributeTransformerProvider.findTransformerForBinding(binding);
+            allTransformers.addAll(inMemoryAddedTransformers);
+        }
+        List<DBDAttributeTransformer> savedTransformers = findBindingTransformers(binding, custom);
+        allTransformers.addAll(savedTransformers);
+        return allTransformers.isEmpty() ? null : allTransformers.toArray(DBDAttributeTransformer[]::new);
+    }
+
+    @NotNull
+    public static List<DBDAttributeTransformer> findBindingTransformers(@NotNull DBDAttributeBinding binding, @Nullable Boolean custom) {
         DBPDataSource dataSource = binding.getDataSource();
         List<? extends DBDAttributeTransformerDescriptor> tdList =
             DBWorkbench.getPlatform().getValueHandlerRegistry().findTransformers(dataSource, binding.getAttribute(), custom);
         if (tdList == null || tdList.isEmpty()) {
-            return null;
+            return List.of();
         }
         {
             boolean filtered = false;
@@ -185,17 +198,20 @@ public abstract class DBVUtils {
                 }
             }
             if (tdList.isEmpty()) {
-                return null;
+                return List.of();
             }
         }
-        DBDAttributeTransformer[] result = new DBDAttributeTransformer[tdList.size()];
-        for (int i = 0; i < tdList.size(); i++) {
-            result[i] = tdList.get(i).getInstance();
-        }
-        return result;
+        return tdList
+            .stream()
+            .map(DBDAttributeTransformerDescriptor::getInstance)
+            .toList();
     }
 
-    public static String getDictionaryDescriptionColumns(DBRProgressMonitor monitor, DBSEntityAttribute attribute) throws DBException {
+    @Nullable
+    public static String getDictionaryDescriptionColumns(
+        @NotNull DBRProgressMonitor monitor,
+        @NotNull DBSEntityAttribute attribute
+    ) throws DBException {
         DBVEntity dictionary = DBVUtils.getVirtualEntity(attribute.getParentObject(), false);
         String descColumns = null;
         if (dictionary != null) {
@@ -392,9 +408,12 @@ public abstract class DBVUtils {
 
     @NotNull
     public static DBSEntity tryGetRealEntity(@NotNull DBSEntity entity) {
-        if (entity instanceof DBVEntity) {
+        if (entity instanceof DBVEntity vEntity) {
             try {
-                return ((DBVEntity) entity).getRealEntity(new VoidProgressMonitor());
+                DBSEntity realEntity = vEntity.getRealEntity(new VoidProgressMonitor());
+                if (realEntity != null) {
+                    return realEntity;
+                }
             } catch (DBException e) {
                 log.error("Can't get real entity from virtual entity", e);
             }
@@ -406,8 +425,8 @@ public abstract class DBVUtils {
         if (source == null) {
             return null;
         }
-        if (source instanceof DBVObject) {
-            return (DBVObject) source;
+        if (source instanceof DBVObject vObject) {
+            return vObject;
         }
         DBPDataSource dataSource = source.getDataSource();
         return dataSource == null ? null : dataSource.getContainer().getVirtualModel().findObject(source, create);
@@ -423,50 +442,37 @@ public abstract class DBVUtils {
             return null;
         }
 
-        return evaluateDataExpression(allAttributes, row, expression, attribute.getName());
+        DBVEntity entity = attribute.getEntity();
+        DBSObject dataContainer = null;
+        try {
+            dataContainer = entity.getRealEntity(new VoidProgressMonitor());
+        } catch (DBException e) {
+            log.debug(e);
+        }
+        if (dataContainer == null) {
+            dataContainer = entity;
+        }
+
+        return evaluateDataExpression(dataContainer, allAttributes, row, expression, attribute.getName());
     }
 
-    public static Object evaluateDataExpression(DBDAttributeBinding[] allAttributes, Object[] row, JexlExpression expression, String attributeName) {
-        Map<String, Object> nsList = getExpressionNamespaces();
-
-        JexlContext context = new JexlContext() {
-            @Override
-            public Object get(String s) {
-                Object ns = nsList.get(s);
-                if (ns != null) {
-                    return ns;
-                }
-                if (s.equals(attributeName)) {
-                    return null;
-                }
-                for (DBDAttributeBinding attr : allAttributes) {
-                    if (s.equals(attr.getLabel())) {
-                        return DBUtils.getAttributeValue(attr, allAttributes, row);
-                    }
-                }
-                return null;
-            }
-
-            @Override
-            public void set(String s, Object o) {
-
-            }
-
-            @Override
-            public boolean has(String s) {
-                return get(s) != null;
-            }
-        };
+    public static Object evaluateDataExpression(
+        @NotNull DBSObject dataContainer,
+        @NotNull DBDAttributeBinding[] allAttributes,
+        @NotNull Object[] row,
+        @NotNull JexlExpression expression,
+        @Nullable String attributeName
+    ) {
         try {
-            return expression.evaluate(context);
+            return expression.evaluate(new DBVDataContext(dataContainer, allAttributes, row, attributeName));
         } catch (Exception e) {
             return GeneralUtils.getExpressionParseMessage(e);
         }
     }
 
     @NotNull
-    private static Map<String, Object> getExpressionNamespaces() {
-        Map<String, Object> nsList = new HashMap<>();
+    static Map<String, Class<?>> getExpressionNamespaces() {
+        Map<String, Class<?>> nsList = new HashMap<>();
 
         for (ExpressionNamespaceDescriptor ns : ExpressionRegistry.getInstance().getExpressionNamespaces()) {
             Class<?> implClass = ns.getImplClass();
@@ -477,46 +483,49 @@ public abstract class DBVUtils {
         return nsList;
     }
 
-    public static JexlExpression parseExpression(String expression) {
-        Map<String, Object> nsList = getExpressionNamespaces();
+    @NotNull
+    public static JexlExpression parseExpression(@NotNull String expression) {
+        var namespaces = getExpressionNamespaces();
+        var classes = namespaces.values().toArray(Class<?>[]::new);
+        var permissions = new JexlPermissions.ClassPermissions(JexlPermissions.SECURE, classes);
 
-        JexlBuilder jexlBuilder = new JexlBuilder();
-        jexlBuilder.cache(100);
-        jexlBuilder.namespaces(nsList);
+        @SuppressWarnings("unchecked")
+        var engine = new JexlBuilder()
+            .permissions(permissions)
+            .namespaces((Map<String, Object>) (Object) namespaces)
+            .cache(100)
+            .create();
 
-        JexlEngine jexlEngine = jexlBuilder.create();
-        return jexlEngine.createExpression(expression);
+        return engine.createExpression(expression);
     }
 
     public static boolean isIdentifyingAttributes(@NotNull DBRProgressMonitor monitor, @NotNull List<DBSEntityAttribute> attributes) throws DBException {
         if (attributes.isEmpty()) {
             return false;
         }
-        DBSEntity table = attributes.get(0).getParentObject();
+        DBSEntity table = attributes.getFirst().getParentObject();
 
         {
             // Check constraints
             Collection<? extends DBSEntityConstraint> constraints = getAllConstraints(monitor, table);
-            if (constraints != null) {
-                for (DBSEntityConstraint constraint : constraints) {
-                    if (DBUtils.isIdentifierConstraint(monitor, constraint)) {
-                        List<? extends DBSEntityAttributeRef> attrRefs = ((DBSEntityReferrer) constraint).getAttributeReferences(monitor);
-                        if (attrRefs == null) {
-                            continue;
+            for (DBSEntityConstraint constraint : constraints) {
+                if (DBUtils.isIdentifierConstraint(monitor, constraint)) {
+                    List<? extends DBSEntityAttributeRef> attrRefs = ((DBSEntityReferrer) constraint).getAttributeReferences(monitor);
+                    if (attrRefs == null) {
+                        continue;
+                    }
+                    if (attributes.size() != attrRefs.size()) {
+                        continue;
+                    }
+                    boolean matches = true;
+                    for (int i = 0; i < attributes.size(); i++) {
+                        if (attributes.get(i) != attrRefs.get(i).getAttribute()) {
+                            matches = false;
+                            break;
                         }
-                        if (attributes.size() != attrRefs.size()) {
-                            continue;
-                        }
-                        boolean matches = true;
-                        for (int i = 0; i < attributes.size(); i++) {
-                            if (attributes.get(i) != attrRefs.get(i).getAttribute()) {
-                                matches = false;
-                                break;
-                            }
-                        }
-                        if (matches) {
-                            return true;
-                        }
+                    }
+                    if (matches) {
+                        return true;
                     }
                 }
             }
