@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
  */
 package org.jkiss.dbeaver.registry;
 
-import org.eclipse.core.runtime.IAdaptable;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.jobs.Job;
@@ -27,19 +26,19 @@ import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.ModelPreferences;
 import org.jkiss.dbeaver.model.*;
-import org.jkiss.dbeaver.model.access.DBAAuthCredentials;
-import org.jkiss.dbeaver.model.access.DBAAuthModelExternal;
-import org.jkiss.dbeaver.model.access.DBACredentialsProvider;
+import org.jkiss.dbeaver.model.access.*;
 import org.jkiss.dbeaver.model.app.DBPDataSourceRegistry;
 import org.jkiss.dbeaver.model.app.DBPProject;
+import org.jkiss.dbeaver.model.app.DBPWorkspace;
+import org.jkiss.dbeaver.model.auth.SMObjectType;
 import org.jkiss.dbeaver.model.connection.*;
 import org.jkiss.dbeaver.model.data.DBDDataFormatterProfile;
 import org.jkiss.dbeaver.model.data.DBDFormatSettings;
 import org.jkiss.dbeaver.model.data.DBDValueHandler;
 import org.jkiss.dbeaver.model.data.json.JSONUtils;
-import org.jkiss.dbeaver.model.dpi.*;
 import org.jkiss.dbeaver.model.exec.*;
 import org.jkiss.dbeaver.model.impl.SimpleExclusiveLock;
+import org.jkiss.dbeaver.model.impl.auth.AuthModelDatabaseNative;
 import org.jkiss.dbeaver.model.impl.data.DefaultValueHandler;
 import org.jkiss.dbeaver.model.meta.Property;
 import org.jkiss.dbeaver.model.meta.PropertyLength;
@@ -47,9 +46,11 @@ import org.jkiss.dbeaver.model.navigator.DBNBrowseSettings;
 import org.jkiss.dbeaver.model.net.*;
 import org.jkiss.dbeaver.model.preferences.DBPPropertySource;
 import org.jkiss.dbeaver.model.rm.RMProjectType;
-import org.jkiss.dbeaver.model.runtime.*;
+import org.jkiss.dbeaver.model.runtime.AbstractJob;
+import org.jkiss.dbeaver.model.runtime.DBRProcessDescriptor;
+import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
+import org.jkiss.dbeaver.model.runtime.DBRShellCommand;
 import org.jkiss.dbeaver.model.secret.*;
-import org.jkiss.dbeaver.model.security.SMObjectType;
 import org.jkiss.dbeaver.model.sql.SQLDialectMetadata;
 import org.jkiss.dbeaver.model.struct.DBSInstance;
 import org.jkiss.dbeaver.model.struct.DBSObject;
@@ -63,13 +64,14 @@ import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.dbeaver.runtime.IVariableResolver;
 import org.jkiss.dbeaver.runtime.properties.ObjectPropertyDescriptor;
 import org.jkiss.dbeaver.runtime.properties.PropertyCollector;
+import org.jkiss.dbeaver.runtime.ui.UIServiceShellCommands;
+import org.jkiss.dbeaver.utils.DataSourceUtils;
 import org.jkiss.dbeaver.utils.GeneralUtils;
 import org.jkiss.utils.CommonUtils;
 
 import java.io.StringReader;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.text.DateFormat;
@@ -82,7 +84,7 @@ public class DataSourceDescriptor
     implements
     DBPDataSourceContainer,
     DBPImageProvider,
-    IAdaptable,
+    DBPAdaptable,
     DBPStatefulObject,
     DBPRefreshableObject,
     DBSSecretObject {
@@ -148,7 +150,7 @@ public class DataSourceDescriptor
     @NotNull
     private final Map<String, String> tags;
     @NotNull
-    private final Map<String, String> extensions;
+    private final Map<String, Object> extensions;
     @Nullable
     private DBPDataSource dataSource;
     @Nullable
@@ -156,11 +158,9 @@ public class DataSourceDescriptor
 
     private boolean temporary;
     private boolean hidden;
-    private boolean template;
-    private boolean dpiEnabled;
 
     @NotNull
-    private DataSourceNavigatorSettings navigatorSettings;
+    private final DataSourceNavigatorSettings navigatorSettings;
     @NotNull
     private DBVModel virtualModel;
     private final boolean manageable;
@@ -172,18 +172,17 @@ public class DataSourceDescriptor
     private volatile boolean disposed = false;
     private volatile boolean connecting = false;
 
+    private transient DBWNetworkHandler proxyHandler;
+    private transient DBWTunnel tunnelHandler;
+
     // secrets resolved from secret controller
     private volatile boolean secretsResolved = false;
     // secrets resolved from secret controller and contains db creds (we may not have db creds in the case when we store only ssh)
     private volatile boolean secretsContainsDatabaseCreds = false;
 
-    private final List<DBRProcessDescriptor> childProcesses = new ArrayList<>();
-    private transient DBWNetworkHandler proxyHandler;
-    private transient DBWTunnel tunnelHandler;
-    private final List<DBPDataSourceTask> users = new ArrayList<>();
+    private transient final List<DBRProcessDescriptor> childProcesses = new ArrayList<>();
+    private transient final List<DBPDataSourceTask> users = new ArrayList<>();
     private transient String clientApplicationName;
-    // DPI controller
-    private transient DPIProcessController dpiController;
 
     private transient final DBPExclusiveResource exclusiveLock = new SimpleExclusiveLock();
 
@@ -192,7 +191,7 @@ public class DataSourceDescriptor
         @NotNull String id,
         @NotNull DBPDriver driver,
         @NotNull DBPConnectionConfiguration connectionInfo) {
-        this(registry, ((DataSourceRegistry) registry).getDefaultStorage(), DataSourceOriginLocal.INSTANCE, id, driver, connectionInfo);
+        this(registry, ((DataSourceRegistry<?>) registry).getDefaultStorage(), DataSourceOriginLocal.INSTANCE, id, driver, connectionInfo);
     }
 
     public DataSourceDescriptor(
@@ -243,9 +242,9 @@ public class DataSourceDescriptor
      */
     public DataSourceDescriptor(@NotNull DataSourceDescriptor source, @NotNull DBPDataSourceRegistry registry, boolean setDefaultStorage) {
         this.registry = registry;
-        this.storage = setDefaultStorage ? ((DataSourceRegistry) registry).getDefaultStorage() : source.storage;
+        this.storage = setDefaultStorage ? ((DataSourceRegistry<?>) registry).getDefaultStorage() : source.storage;
         this.origin = source.origin;
-        this.manageable = setDefaultStorage && ((DataSourceRegistry) registry).getDefaultStorage().isDefault();
+        this.manageable = setDefaultStorage && ((DataSourceRegistry<?>) registry).getDefaultStorage().isDefault();
         this.accessCheckRequired = manageable;
         this.id = source.id;
         this.name = source.name;
@@ -254,6 +253,9 @@ public class DataSourceDescriptor
         this.sharedCredentials = source.sharedCredentials;
         this.originalShareCredentials = this.sharedCredentials;
         this.navigatorSettings = new DataSourceNavigatorSettings(source.navigatorSettings);
+        if (navigatorSettings.isUserSettings()) {
+            navigatorSettings.setOriginalSettings(source.getOriginalNavigatorSettings());
+        }
         this.connectionReadOnly = source.connectionReadOnly;
         this.forceUseSingleConnection = source.forceUseSingleConnection;
         this.driver = source.driver;
@@ -289,6 +291,7 @@ public class DataSourceDescriptor
 
         this.virtualModel = new DBVModel(this, source.virtualModel);
     }
+
 
     public boolean isDisposed() {
         return disposed;
@@ -349,10 +352,10 @@ public class DataSourceDescriptor
     @NotNull
     @Override
     public DBPDataSourceOrigin getOrigin() {
-        if (origin instanceof DataSourceOriginLazy) {
+        if (origin instanceof DataSourceOriginLazy dsoLazy) {
             DBPDataSourceOrigin realOrigin;
             try {
-                realOrigin = ((DataSourceOriginLazy) this.origin).resolveRealOrigin();
+                realOrigin = dsoLazy.resolveRealOrigin();
             } catch (DBException e) {
                 log.debug("Error reading datasource origin", e);
                 realOrigin = null;
@@ -400,8 +403,13 @@ public class DataSourceDescriptor
         return navigatorSettings;
     }
 
-    public void setNavigatorSettings(DBNBrowseSettings copyFrom) {
-        this.navigatorSettings = new DataSourceNavigatorSettings(copyFrom);
+    @NotNull
+    public DataSourceNavigatorSettings getOriginalNavigatorSettings() {
+        return (DataSourceNavigatorSettings) navigatorSettings.getOriginalSettings();
+    }
+
+    public void setNavigatorSettings(@NotNull DBNBrowseSettings copyFrom) {
+        getOriginalNavigatorSettings().copyFrom(copyFrom);
     }
 
     @NotNull
@@ -411,7 +419,7 @@ public class DataSourceDescriptor
         return name;
     }
 
-    public void setName(String name) {
+    public void setName(@NotNull String name) {
         this.name = name;
     }
 
@@ -480,7 +488,7 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public boolean hasModifyPermission(DBPDataSourcePermission permission) {
+    public boolean hasModifyPermission(@NotNull DBPDataSourcePermission permission) {
         if ((permission == DBPDataSourcePermission.PERMISSION_EDIT_DATA ||
             permission == DBPDataSourcePermission.PERMISSION_EDIT_METADATA) && connectionReadOnly) {
             return false;
@@ -492,6 +500,7 @@ public class DataSourceDescriptor
         }
     }
 
+    @NotNull
     @Override
     public List<DBPDataSourcePermission> getModifyPermission() {
         if (CommonUtils.isEmpty(this.connectionModifyRestrictions)) {
@@ -512,20 +521,11 @@ public class DataSourceDescriptor
 
     @Override
     public boolean isDefaultAutoCommit() {
-        if (connectionInfo.getBootstrap().getDefaultAutoCommit() != null) {
-            return connectionInfo.getBootstrap().getDefaultAutoCommit();
+        Boolean bootstrapAutoCommit = connectionInfo.getBootstrap().getDefaultAutoCommit();
+        if (bootstrapAutoCommit != null) {
+            return bootstrapAutoCommit;
         } else {
             return getConnectionConfiguration().getConnectionType().isAutocommit();
-        }
-    }
-
-    @Override
-    public void setDefaultAutoCommit(final boolean autoCommit) {
-        // Save in preferences
-        if (autoCommit == getConnectionConfiguration().getConnectionType().isAutocommit()) {
-            connectionInfo.getBootstrap().setDefaultAutoCommit(null);
-        } else {
-            connectionInfo.getBootstrap().setDefaultAutoCommit(autoCommit);
         }
     }
 
@@ -534,7 +534,9 @@ public class DataSourceDescriptor
         this.secretsContainsDatabaseCreds = false;
         this.availableSharedCredentials = null;
         this.selectedSharedCredentials = null;
-        if (sharedCredentials) {
+        // we need to reset username and password for connection that are not connected to database
+        // in some cases, when connection is established, username is needed (e.g. retrieving current user info in Cubrid)
+        if (sharedCredentials && !isConnected()) {
             // For shared credentials reset cache also
             connectionInfo.setUserName(null);
             connectionInfo.setUserPassword(null);
@@ -564,15 +566,6 @@ public class DataSourceDescriptor
     @Override
     public Integer getDefaultTransactionsIsolation() {
         return connectionInfo.getBootstrap().getDefaultTransactionIsolation();
-    }
-
-    @Override
-    public void setDefaultTransactionsIsolation(@Nullable final DBPTransactionIsolation isolationLevel) {
-        if (isolationLevel == null) {
-            connectionInfo.getBootstrap().setDefaultTransactionIsolation(null);
-        } else {
-            connectionInfo.getBootstrap().setDefaultTransactionIsolation(isolationLevel.getCode());
-        }
     }
 
     @Override
@@ -640,18 +633,23 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public void setObjectFilter(Class<?> type, DBSObject parentObject, DBSObjectFilter filter) {
+    public void setObjectFilter(@NotNull Class<?> type, @Nullable DBSObject parentObject, @Nullable DBSObjectFilter filter) {
         FilterMapping filterMapping = getFilterMapping(type, parentObject, true);
         if (filterMapping != null) {
             // Update filter
             if (parentObject == null) {
-                filterMapping.defaultFilter = filter;
+                filterMapping.globalFilter = filter;
             } else {
                 filterMapping.customFilters.put(FilterMapping.getFilterContainerUniqueID(parentObject), filter);
             }
+        } else {
+            setObjectFilter(type.getName(), toObjectID(parentObject), filter);
         }
+    }
 
-        updateObjectFilter(type.getName(), parentObject == null ? null : FilterMapping.getFilterContainerUniqueID(parentObject), filter);
+    @Nullable
+    protected String toObjectID(@Nullable DBSObject parentObject) {
+        return parentObject == null ? null : FilterMapping.getFilterContainerUniqueID(parentObject);
     }
 
     @Nullable
@@ -665,18 +663,18 @@ public class DataSourceDescriptor
         this.clientApplicationName = applicationName;
     }
 
-    void clearFilters() {
+    protected void clearFilters() {
         filterMap.clear();
     }
 
-    void updateObjectFilter(String typeName, @Nullable String objectID, DBSObjectFilter filter) {
+    protected void setObjectFilter(@NotNull String typeName, @Nullable String objectID, @Nullable DBSObjectFilter filter) {
         FilterMapping filterMapping = filterMap.get(typeName);
         if (filterMapping == null) {
             filterMapping = new FilterMapping(typeName);
             filterMap.put(typeName, filterMapping);
         }
         if (objectID == null) {
-            filterMapping.defaultFilter = filter;
+            filterMapping.globalFilter = filter;
         } else {
             filterMapping.customFilters.put(objectID, filter);
         }
@@ -706,6 +704,7 @@ public class DataSourceDescriptor
         }
     }
 
+    @Nullable
     @Override
     public DBPNativeClientLocation getClientHome() {
         if (clientHome == null && !CommonUtils.isEmpty(connectionInfo.getClientHomeId())) {
@@ -760,15 +759,6 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public boolean isTemplate() {
-        return template;
-    }
-
-    public void setTemplate(boolean template) {
-        this.template = template;
-    }
-
-    @Override
     public boolean isTemporary() {
         return temporary;
     }
@@ -795,8 +785,8 @@ public class DataSourceDescriptor
     @Override
     public DBSObject refreshObject(@NotNull DBRProgressMonitor monitor)
         throws DBException {
-        if (dataSource instanceof DBPRefreshableObject) {
-            dataSource = (DBPDataSource) ((DBPRefreshableObject) dataSource).refreshObject(monitor);
+        if (dataSource instanceof DBPRefreshableObject refreshableObject) {
+            dataSource = (DBPDataSource) refreshableObject.refreshObject(monitor);
         } else {
             this.reconnect(monitor, false);
         }
@@ -813,6 +803,7 @@ public class DataSourceDescriptor
         this.description = description;
     }
 
+    @Nullable
     public Date getConnectTime() {
         return connectTime;
     }
@@ -871,9 +862,9 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public boolean persistConfiguration() {
+    public boolean persistConfiguration(boolean forcePersistSecrets) {
         try {
-            registry.updateDataSource(this);
+            registry.updateDataSource(this, forcePersistSecrets);
         } catch (DBException e) {
             DBWorkbench.getPlatformUI().showError("Datasource update error", "Error updating datasource", e);
             return false;
@@ -900,7 +891,7 @@ public class DataSourceDescriptor
             this.originalShareCredentials = isSharedCredentials();
         }
         // Save only if secrets were already resolved or it is a new connection
-        if (secretsResolved || (force && getProject().isUseSecretStorage())) {
+        if ((secretsResolved || force) && getProject().isUseSecretStorage()) {
             DBSSecretController secretController = DBSSecretController.getProjectSecretController(getProject());
             persistSecrets(secretController, isNewDataSource);
         }
@@ -916,7 +907,7 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public void persistSecrets(DBSSecretController secretController) throws DBException {
+    public void persistSecrets(@NotNull DBSSecretController secretController) throws DBException {
         persistSecrets(secretController, false);
     }
 
@@ -1006,7 +997,7 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public void resolveSecrets(DBSSecretController secretController) throws DBException {
+    public void resolveSecrets(@NotNull DBSSecretController secretController) throws DBException {
         if (!isSharedCredentials()) {
             // try to load private user credentials
             String secretValue = secretController.getPrivateSecretValue(getSecretValueId());
@@ -1018,7 +1009,7 @@ public class DataSourceDescriptor
         } else {
             this.availableSharedCredentials = secretController.discoverCurrentUserSecrets(this);
             if (this.availableSharedCredentials.size() == 1) {
-                setSelectedSharedCredentials(availableSharedCredentials.get(0));
+                setSelectedSharedCredentials(availableSharedCredentials.getFirst());
             }
         }
 
@@ -1041,7 +1032,7 @@ public class DataSourceDescriptor
         return lastConnectionError;
     }
 
-    public boolean connect(DBRProgressMonitor monitor, boolean initialize, boolean reflect) throws DBException {
+    public boolean connect(@NotNull DBRProgressMonitor monitor, boolean initialize, boolean reflect) throws DBException {
         if (connecting) {
             log.debug("Can't connect - connect/disconnect is in progress");
             return false;
@@ -1055,11 +1046,10 @@ public class DataSourceDescriptor
         boolean succeeded = false;
         connecting = true;
         try {
-            getDriver().validateFilesPresence(monitor);
-            if (isDetachedProcessEnabled() && !detachedProcess) {
-                // Open detached connection
-                succeeded = openDetachedConnection(monitor);
-            }
+            getDriver().validateFilesPresence(monitor, this);
+
+            this.dataSource = openConnectionDetached(monitor, detachedProcess);
+            succeeded = this.dataSource != null;
             if (!succeeded) {
                 if (!detachedProcess) {
                     updateDataSourceObject(succeeded, DBPEvent.Action.BEFORE_CONNECT);
@@ -1086,67 +1076,9 @@ public class DataSourceDescriptor
         }
     }
 
-    public boolean isDetachedProcessEnabled() {
-        return dpiEnabled;
-    }
-
-    public void setDetachedProcessEnabled(boolean enabled) {
-        dpiEnabled = enabled;
-    }
-
-
-    private boolean openDetachedConnection(DBRProgressMonitor monitor) {
-        try {
-            DPIProvider provider = GeneralUtils.adapt(this, DPIProvider.class);
-            if (provider == null) {
-                log.debug("DPI provider not available");
-                return false;
-            }
-            dpiController = provider.detachDatabaseProcess(monitor, this);
-            Map<String, String> credentials = new LinkedHashMap<>();
-            DPIController dpiClient = dpiController.getClient();
-            DPISession session = dpiClient.openSession();
-            if (session == null) {
-                throw new IllegalStateException("No session");
-            }
-            log.debug("New DPI session: " + session.getSessionId());
-            if (!(getRegistry() instanceof DataSourcePersistentRegistry persistentRegistry)) {
-                throw new IllegalStateException("Illegal registry " + getRegistry().getClass());
-            }
-            DataSourceConfigurationManagerBuffer buffer = new DataSourceConfigurationManagerBuffer();
-            persistentRegistry.saveConfigurationToManager(new VoidProgressMonitor(),
-                buffer,
-                dsc -> dsc.equals(this)
-            );
-
-            String[] driverLibraries = getDriver().getDriverLibraries()
-                .stream()
-                .map(DBPDriverLibrary::getLocalFile)
-                .filter(Objects::nonNull)
-                .map(path -> path.toAbsolutePath().toString())
-                .toArray(String[]::new);
-            this.dataSource = dpiClient.openDataSource(
-                new DPIDataSourceParameters(
-                    session.getSessionId(),
-                    new String(buffer.getData(), StandardCharsets.UTF_8),
-                    driverLibraries,
-                    credentials
-                )
-            );
-            log.debug("Opened data source: " + dataSource);
-        } catch (Exception e) {
-            log.debug("Error starting DPI child process", e);
-            closeDetachedProcess();
-            return false;
-        }
-        return true;
-    }
-
-    private void closeDetachedProcess() {
-        if (dpiController != null) {
-            dpiController.close();
-            dpiController = null;
-        }
+    @Nullable
+    protected DBPDataSource openConnectionDetached(@NotNull DBRProgressMonitor monitor, boolean detachedProcess) throws DBException {
+        return null;
     }
 
     private boolean connect0(DBRProgressMonitor monitor, boolean initialize, boolean reflect) throws DBException {
@@ -1154,11 +1086,25 @@ public class DataSourceDescriptor
 
         resolveSecretsIfNeeded();
 
-        if (isSharedCredentials() && !isSharedCredentialsSelected()) {
+        String forceSecretId = getPreferenceStore().getString(DBPConnectionConfiguration.PROP_SECRET_SUBJECT_ID);
+        if (isSharedCredentials() && (!isSharedCredentialsSelected() || CommonUtils.isNotEmpty(forceSecretId))) {
             var sharedCreds = listSharedCredentialFromCache();
-            if (!CommonUtils.isEmpty(sharedCreds)) {
-                log.debug("Shared credentials not selected - use first one: " + sharedCreds.get(0).getDisplayName());
-                setSelectedSharedCredentials(sharedCreds.get(0));
+            if (CommonUtils.isNotEmpty(forceSecretId)) {
+                DBSSecretValue found = null;
+                for (DBSSecretValue secret : sharedCreds) {
+                    if (forceSecretId.equals(secret.getSubjectId())) {
+                        log.debug("Shared credentials forced by preference - use: " + secret.getDisplayName());
+                        found = secret;
+                        break;
+                    }
+                }
+                if (found == null) {
+                    throw new DBException("Shared credentials with subject ID '" + forceSecretId + "' not found");
+                }
+                setSelectedSharedCredentials(found);
+            } else if (!CommonUtils.isEmpty(sharedCreds)) {
+                log.debug("Shared credentials not selected - use first one: " + sharedCreds.getFirst().getDisplayName());
+                setSelectedSharedCredentials(sharedCreds.getFirst());
                 monitor.subTask("Use first available shared credentials");
             } else {
                 log.debug("Shared credentials not found - attempt to connect as is");
@@ -1187,6 +1133,7 @@ public class DataSourceDescriptor
                     monitor.done();
                 }
             }
+            resolvePropertiesFromProfile();
 
             // 2. Get credentials from global provider
             if (!authProvidedFromOrigin) {
@@ -1207,7 +1154,6 @@ public class DataSourceDescriptor
                 }
             }
 
-            resolvePropertiesFromProfile();
             patchConnectionProperties(monitor, resolvedConnectionInfo);
 
             // Handle tunnelHandler
@@ -1247,30 +1193,9 @@ public class DataSourceDescriptor
 
                 if (tunnelConfiguration != null) {
                     monitor.subTask("Initialize tunnel");
-                    tunnelHandler = tunnelConfiguration.createHandler(DBWTunnel.class);
-                    try {
-                        if (!tunnelConfiguration.isSavePassword()) {
-                            DBWTunnel.AuthCredentials rc = tunnelHandler.getRequiredCredentials(tunnelConfiguration);
-                            if (rc != DBWTunnel.AuthCredentials.NONE) {
-                                if (!askForPassword(this, tunnelConfiguration, rc)) {
-                                    tunnelHandler = null;
-                                    return false;
-                                }
-                            }
-                        }
-                        // We need to resolve jump server differently due to it being a part of ssh configuration
-                        DBExecUtils.startContextInitiation(this);
-                        try {
-                            DBPDataSourceProvider dataSourceProvider = driver.getDataSourceProvider();
-                            if (dataSourceProvider instanceof DBWHandlerConfigurator) {
-                                ((DBWHandlerConfigurator) dataSourceProvider).activateHandler(tunnelHandler, resolvedConnectionInfo, tunnelConfiguration);
-                            }
-                            resolvedConnectionInfo = tunnelHandler.initializeHandler(monitor, tunnelConfiguration, resolvedConnectionInfo);
-                        } finally {
-                            DBExecUtils.finishContextInitiation(this);
-                        }
-                    } catch (Exception e) {
-                        throw new DBCException("Can't initialize tunnel", e);
+                    resolvedConnectionInfo = initTunnelHandler(monitor, tunnelConfiguration, resolvedConnectionInfo);
+                    if (resolvedConnectionInfo == null) {
+                        return false;
                     }
                     monitor.worked(1);
                 }
@@ -1279,10 +1204,19 @@ public class DataSourceDescriptor
 
                 openDataSource(monitor, initialize);
 
-                try {
-                    log.debug("Connected (" + getId() + ", " + getPropertyDriver() + ")");
-                } catch (Throwable e) {
-                    log.debug("Connected (" + getId() + ", driver unknown)");
+                if (dataSource != null) {
+                    DBPDataSourceInfo info = dataSource.getInfo();
+                    log.debug(
+                        "Connected to a datasource: id='%s', databaseProductName='%s', databaseProductVersion='%s', driverName='%s', driverVersion='%s'."
+                        .formatted(
+                            id,
+                            info.getDatabaseProductName(),
+                            info.getDatabaseProductVersion(),
+                            info.getDriverName(),
+                            info.getDriverVersion())
+                    );
+                } else {
+                    log.debug("Connected to datasource with id=" + id);
                 }
 
                 this.connectFailed = false;
@@ -1295,6 +1229,7 @@ public class DataSourceDescriptor
             return true;
         } catch (Throwable e) {
             terminateChildProcesses();
+            handleConnectError(e);
             lastConnectionError = e.getMessage();
             //log.debug("Connection failed (" + getId() + ")", e);
             if (dataSource != null) {
@@ -1307,15 +1242,7 @@ public class DataSourceDescriptor
                 }
             }
 
-            if (tunnelHandler != null) {
-                try {
-                    tunnelHandler.closeTunnel(monitor);
-                } catch (Exception e1) {
-                    log.error("Error closing tunnel", e1);
-                } finally {
-                    tunnelHandler = null;
-                }
-            }
+            closeTunnelHandler(monitor);
             if (isSharedCredentials()) {
                 this.resetAllSecrets();
             }
@@ -1330,6 +1257,62 @@ public class DataSourceDescriptor
         } finally {
             monitor.done();
         }
+    }
+
+    @Nullable
+    protected DBPConnectionConfiguration initTunnelHandler(
+        @NotNull DBRProgressMonitor monitor,
+        @NotNull DBWHandlerConfiguration tunnelConfiguration,
+        @NotNull DBPConnectionConfiguration connectionInfo
+    ) throws DBException {
+        // SSH tunneling can be disabled in multi-user apps
+        DBPWorkspace workspace = getProject().getWorkspace();
+        if (!workspace.supportsRealmFeature(DBAPermissionRealm.FEATURE_SSH_TUNNELING)) {
+            throw new DBException(
+                "SSH tunneling is required for this connection, but it is currently disabled. Please contact your administrator.");
+        }
+
+        tunnelHandler = tunnelConfiguration.createHandler(DBWTunnel.class);
+        try {
+            if (!tunnelConfiguration.isSavePassword()) {
+                DBWTunnel.AuthCredentials rc = tunnelHandler.getRequiredCredentials(tunnelConfiguration);
+                if (rc != DBWTunnel.AuthCredentials.NONE) {
+                    if (!askForPassword(this, tunnelConfiguration, rc)) {
+                        tunnelHandler = null;
+                        return null;
+                    }
+                }
+            }
+            // We need to resolve jump server differently due to it being a part of ssh configuration
+            DBExecUtils.startContextInitiation(this);
+            try {
+                DBPDataSourceProvider dataSourceProvider = driver.getDataSourceProvider();
+                if (dataSourceProvider instanceof DBWHandlerConfigurator) {
+                    ((DBWHandlerConfigurator) dataSourceProvider).activateHandler(tunnelHandler, connectionInfo, tunnelConfiguration);
+                }
+                return tunnelHandler.initializeHandler(monitor, tunnelConfiguration, connectionInfo);
+            } finally {
+                DBExecUtils.finishContextInitiation(this);
+            }
+        } catch (Exception e) {
+            throw new DBCException("Error initializing tunnel", e);
+        }
+    }
+
+    protected void closeTunnelHandler(@NotNull DBRProgressMonitor monitor) {
+        if (tunnelHandler != null) {
+            try {
+                tunnelHandler.closeTunnel(monitor);
+            } catch (Throwable e) {
+                log.error("Error closing tunnel", e);
+            } finally {
+                tunnelHandler = null;
+            }
+        }
+    }
+
+    protected void handleConnectError(@NotNull Throwable e) {
+
     }
 
 
@@ -1358,12 +1341,15 @@ public class DataSourceDescriptor
         // Update config from profile
         if (!CommonUtils.isEmpty(resolvedConnectionInfo.getConfigProfileName())) {
             // Update config from profile
-            DBWNetworkProfile profile = registry.getNetworkProfile(
+            DBWNetworkProfile profile = registry.getNetworkProfiles().getProfile(
                 resolvedConnectionInfo.getConfigProfileSource(),
                 resolvedConnectionInfo.getConfigProfileName());
             if (profile != null) {
                 if (secretController != null) {
                     profile.resolveSecrets(secretController);
+                } else if (profile.isGlobal() && !DBWorkbench.isMultiuserOrDistributed()) {
+                    // Global profile secrets are stored in global secret controller for desktop apps
+                    profile.resolveSecrets(DBSSecretController.getGlobalSecretController());
                 }
                 for (DBWHandlerConfiguration handlerCfg : profile.getConfigurations()) {
                     if (handlerCfg.isEnabled()) {
@@ -1381,7 +1367,7 @@ public class DataSourceDescriptor
 
     }
 
-    private void resolveSecretsIfNeeded() throws DBException {
+    protected void resolveSecretsIfNeeded() throws DBException {
         if (secretsResolved || !getProject().isUseSecretStorage()) {
             return;
         }
@@ -1451,6 +1437,10 @@ public class DataSourceDescriptor
         DBPConnectionConfiguration info = getActualConnectionConfiguration();
         DBRShellCommand command = info.getEvent(eventType);
         if (command != null && command.isEnabled()) {
+            UIServiceShellCommands shellCommandsService = DBWorkbench.getService(UIServiceShellCommands.class);
+            if (shellCommandsService != null) {
+                shellCommandsService.validateByUser(command, createApprovalContext(eventType));
+            }
             final DBRProcessDescriptor processDescriptor = new DBRProcessDescriptor(command, getVariablesResolver(true));
 
             monitor.subTask("Execute process " + processDescriptor.getName());
@@ -1459,8 +1449,9 @@ public class DataSourceDescriptor
             {
                 // Run output grab job
                 new AbstractJob(processDescriptor.getName() + ": output reader") {
+                    @NotNull
                     @Override
-                    protected IStatus run(DBRProgressMonitor monitor) {
+                    protected IStatus run(@NotNull DBRProgressMonitor monitor) {
                         try {
                             String output = processDescriptor.dumpErrors();
                             log.debug("Process error output:\n" + output);
@@ -1492,8 +1483,17 @@ public class DataSourceDescriptor
         }
     }
 
+    @NotNull
+    private Map<String, String> createApprovalContext(@NotNull DBPConnectionEventType eventType) {
+        Map<String, String> context = new LinkedHashMap<>();
+        context.put(RegistryMessages.connection_add_shell_cmd_context_project, getProject().getName());
+        context.put(RegistryMessages.connection_add_shell_cmd_context_data_source, getName());
+        context.put(RegistryMessages.connection_add_shell_cmd_context_event_type, eventType.getTitle());
+        return context;
+    }
+
     @Override
-    public boolean disconnect(final DBRProgressMonitor monitor) {
+    public boolean disconnect(@NotNull final DBRProgressMonitor monitor) {
         return disconnect(monitor, true);
     }
 
@@ -1510,10 +1510,6 @@ public class DataSourceDescriptor
         connecting = true;
         releaseDataSourceUsers(monitor);
         try {
-            if (dpiController != null) {
-                closeDetachedProcess();
-                return true;
-            }
             monitor.beginTask("Disconnect from '" + getName() + "'", 5 + dataSource.getAvailableInstances().size());
 
             processEvents(monitor, DBPConnectionEventType.BEFORE_DISCONNECT);
@@ -1547,16 +1543,13 @@ public class DataSourceDescriptor
             if (dataSource != null) {
                 dataSource.shutdown(monitor);
             }
+            closeConnectionDetached();
             monitor.worked(1);
 
             // Close tunnelHandler
             if (tunnelHandler != null) {
                 monitor.subTask("Close tunnel");
-                try {
-                    tunnelHandler.closeTunnel(monitor);
-                } catch (Throwable e) {
-                    log.error("Error closing tunnel", e);
-                }
+                closeTunnelHandler(monitor);
             }
             monitor.worked(1);
 
@@ -1591,6 +1584,10 @@ public class DataSourceDescriptor
             connecting = false;
             log.debug("Disconnected (" + getId() + ")");
         }
+    }
+
+    protected boolean closeConnectionDetached() {
+        return false;
     }
 
     private void releaseDataSourceUsers(DBRProgressMonitor monitor) {
@@ -1637,7 +1634,7 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public boolean reconnect(final DBRProgressMonitor monitor)
+    public boolean reconnect(@NotNull final DBRProgressMonitor monitor)
         throws DBException {
         return reconnect(monitor, true);
     }
@@ -1662,10 +1659,10 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public void acquire(DBPDataSourceTask user) {
+    public void acquire(@NotNull DBPDataSourceTask user) {
         synchronized (users) {
             if (users.contains(user)) {
-                log.warn("Datasource user '" + user + "' already registered in datasource '" + getName() + "'");
+                log.debug("Datasource user '" + user + "' already registered in datasource '" + getName() + "'");
             } else {
                 users.add(user);
             }
@@ -1673,21 +1670,22 @@ public class DataSourceDescriptor
     }
 
     @Override
-    public void release(DBPDataSourceTask user) {
+    public void release(@NotNull DBPDataSourceTask user) {
         synchronized (users) {
             if (!users.remove(user)) {
                 if (!isDisposed()) {
-                    log.warn("Datasource user '" + user + "' is not registered in datasource '" + getName() + "'");
+                    log.debug("Datasource user '" + user + "' is not registered in datasource '" + getName() + "'");
                 }
             }
         }
     }
 
     @Override
-    public void fireEvent(DBPEvent event) {
+    public void fireEvent(@NotNull DBPEvent event) {
         registry.notifyDataSourceListeners(event);
     }
 
+    @NotNull
     @Override
     public Map<String, String> getTags() {
         return new LinkedHashMap<>(tags);
@@ -1698,24 +1696,25 @@ public class DataSourceDescriptor
         this.tags.putAll(tags);
     }
 
+    @Nullable
     @Override
-    public String getTagValue(String tagName) {
+    public String getTagValue(@NotNull String tagName) {
         return tags.get(tagName);
     }
 
     @Override
-    public void setTagValue(String tagName, String tagValue) {
+    public void setTagValue(@NotNull String tagName, @Nullable String tagValue) {
         tags.put(tagName, tagValue);
     }
 
     @Nullable
     @Override
-    public String getExtension(@NotNull String name) {
-        return extensions.get(name);
+    public <T> T getExtension(@NotNull String name) {
+        return (T) extensions.get(name);
     }
 
     @Override
-    public void setExtension(@NotNull String name, @Nullable String value) {
+    public void setExtension(@NotNull String name, @Nullable Object value) {
         if (value == null) {
             this.extensions.remove(name);
         } else {
@@ -1724,15 +1723,16 @@ public class DataSourceDescriptor
     }
 
     @NotNull
-    public Map<String, String> getExtensions() {
+    public Map<String, Object> getExtensions() {
         return extensions;
     }
 
-    public void setExtensions(Map<String, String> extensions) {
+    public void setExtensions(Map<String, Object> extensions) {
         this.extensions.clear();
         this.extensions.putAll(extensions);
     }
 
+    @NotNull
     @Override
     public DBDDataFormatterProfile getDataFormatterProfile() {
         if (this.formatterProfile == null) {
@@ -1786,7 +1786,7 @@ public class DataSourceDescriptor
 
     @Nullable
     @Override
-    public <T> T getAdapter(Class<T> adapter) {
+    public <T> T getAdapter(@NotNull Class<T> adapter) {
         if (DBPDataSourceContainer.class.isAssignableFrom(adapter)) {
             return adapter.cast(this);
         } else if (adapter == DBPPropertySource.class) {
@@ -1801,8 +1801,8 @@ public class DataSourceDescriptor
                     }
                 }
             }
-            if (driver.getClassLoader() instanceof URLClassLoader) {
-                final URL[] urls = ((URLClassLoader) driver.getClassLoader()).getURLs();
+            if (driver.getDefaultDriverLoader().getClassLoader() instanceof URLClassLoader urlClassLoader) {
+                final URL[] urls = urlClassLoader.getURLs();
                 for (int urlIndex = 0; urlIndex < urls.length; urlIndex++) {
                     Object path = urls[urlIndex];
                     try {
@@ -1943,9 +1943,7 @@ public class DataSourceDescriptor
         this.connectionReadOnly = descriptor.connectionReadOnly;
         this.forceUseSingleConnection = descriptor.forceUseSingleConnection;
 
-        this.dpiEnabled = descriptor.dpiEnabled;
-
-        this.navigatorSettings = new DataSourceNavigatorSettings(descriptor.getNavigatorSettings());
+        setNavigatorSettings(descriptor.navigatorSettings);
     }
 
     @Override
@@ -1957,10 +1955,17 @@ public class DataSourceDescriptor
         if (!(obj instanceof DataSourceDescriptor source)) {
             return false;
         }
-        return
-            CommonUtils.equalOrEmptyStrings(this.name, source.name) &&
-                CommonUtils.equalOrEmptyStrings(this.description, source.description) &&
-                equalConfiguration(source);
+        return isLooselyEqualTo(source) && equalConfiguration(source) && equalNavigation(source) &&
+            equalInternalConfiguration(source);
+    }
+
+    public boolean isLooselyEqualTo(DataSourceDescriptor source) {
+        return CommonUtils.equalOrEmptyStrings(this.name, source.name) &&
+            CommonUtils.equalOrEmptyStrings(this.description, source.description);
+    }
+
+    public boolean equalInternalConfiguration(DataSourceDescriptor source) {
+        return CommonUtils.equalObjects(this.extensions, source.extensions);
     }
 
     public boolean equalConfiguration(DataSourceDescriptor source) {
@@ -1974,15 +1979,16 @@ public class DataSourceDescriptor
                 CommonUtils.equalObjects(this.originalDriver, source.originalDriver) &&
                 CommonUtils.equalObjects(this.driverSubstitution, source.driverSubstitution) &&
                 CommonUtils.equalObjects(this.connectionInfo, source.connectionInfo) &&
-                this.dpiEnabled == source.dpiEnabled &&
                 CommonUtils.equalObjects(this.filterMap, source.filterMap) &&
                 CommonUtils.equalObjects(this.formatterProfile, source.formatterProfile) &&
                 CommonUtils.equalObjects(this.clientHome, source.clientHome) &&
                 CommonUtils.equalObjects(this.lockPasswordHash, source.lockPasswordHash) &&
-                CommonUtils.equalObjects(this.folder, source.folder) &&
-                CommonUtils.equalObjects(this.extensions, source.extensions) &&
                 CommonUtils.equalObjects(this.preferenceStore, source.preferenceStore) &&
                 CommonUtils.equalsContents(this.connectionModifyRestrictions, source.connectionModifyRestrictions);
+    }
+
+    public boolean equalNavigation(DataSourceDescriptor source) {
+        return CommonUtils.equalObjects(this.folder, source.folder);
     }
 
     @NotNull
@@ -2026,12 +2032,14 @@ public class DataSourceDescriptor
         }
     }
 
+    @NotNull
     @Override
     public IVariableResolver getVariablesResolver(boolean actualConfig) {
         DBPConnectionConfiguration configuration = actualConfig ? getActualConnectionConfiguration() : getConnectionConfiguration();
         return new DataSourceVariableResolver(this, configuration);
     }
 
+    @NotNull
     @Override
     public DBPDataSourceContainer createCopy(DBPDataSourceRegistry forRegistry) {
         DataSourceDescriptor copy = new DataSourceDescriptor(this, forRegistry, true);
@@ -2039,6 +2047,7 @@ public class DataSourceDescriptor
         return copy;
     }
 
+    @NotNull
     @Override
     public DBPExclusiveResource getExclusiveLock() {
         return exclusiveLock;
@@ -2080,6 +2089,33 @@ public class DataSourceDescriptor
         DBPConnectionConfiguration actualConfig = dataSourceContainer.getActualConnectionConfiguration();
         DBPConnectionConfiguration connConfig = dataSourceContainer.getConnectionConfiguration();
 
+        if (networkHandler == null) {
+            DBAAuthModel<?> authModel = actualConfig.getAuthModel();
+            if (authModel.getClass() != AuthModelDatabaseNative.class) {
+                boolean savedPasswordState = dataSourceContainer.isSavePassword();
+                DBPConnectionConfiguration savedConnectionInfo = new DBPConnectionConfiguration(connConfig);
+                if (!DBWorkbench.getPlatformUI().promptAuthModelCredentials(dataSourceContainer)) {
+                    dataSourceContainer.setSavePassword(savedPasswordState);
+                    return false;
+                }
+                DBPConnectionConfiguration promptConnectionInfo = new DBPConnectionConfiguration(connConfig);
+                if (actualConfig != connConfig || !dataSourceContainer.isSavePassword()) {
+                    dataSourceContainer.resolvedConnectionInfo = promptConnectionInfo;
+                }
+                if (dataSourceContainer.isSavePassword()) {
+                    try {
+                        dataSourceContainer.getRegistry().updateDataSource(dataSourceContainer);
+                    } catch (DBException e) {
+                        DBWorkbench.getPlatformUI().showError("Error saving datasource", null, e);
+                    }
+                } else {
+                    dataSourceContainer.setConnectionInfo(savedConnectionInfo);
+                    dataSourceContainer.setSavePassword(savedPasswordState);
+                }
+                return true;
+            }
+        }
+
         final String prompt = networkHandler != null ?
             NLS.bind(RegistryMessages.dialog_connection_auth_title_for_handler, networkHandler.getTitle()) :
             "'" + dataSourceContainer.getName() + RegistryMessages.dialog_connection_auth_title; //$NON-NLS-1$
@@ -2115,7 +2151,7 @@ public class DataSourceDescriptor
             dataSourceContainer.setSavePassword(authInfo.isSavePassword());
         }
         if (authInfo.isSavePassword()) {
-            if (authInfo.isSavePassword() && connConfig != actualConfig) {
+            if (connConfig != actualConfig) {
                 if (authType == DBWTunnel.AuthCredentials.CREDENTIALS) {
                     if (networkHandler != null) {
                         networkHandler.setUserName(authInfo.getUserName());
@@ -2204,11 +2240,16 @@ public class DataSourceDescriptor
             // Handlers. If config profile is set then props are saved there
             DBWNetworkProfile activeProfile = CommonUtils.isEmpty(connectionInfo.getConfigProfileName())
                 ? null
-                : this.getRegistry().getNetworkProfile(connectionInfo.getConfigProfileSource(), connectionInfo.getConfigProfileName());
+                : this.getRegistry().getNetworkProfiles().getProfile(
+                    connectionInfo.getConfigProfileSource(),
+                    connectionInfo.getConfigProfileName()
+                );
 
             List<Map<String, Object>> handlersConfigs = new ArrayList<>();
             for (DBWHandlerConfiguration hc : connectionInfo.getHandlers()) {
-                DBWHandlerConfiguration profileConfig = activeProfile == null ? null : activeProfile.getConfiguration(hc.getHandlerDescriptor());
+                DBWHandlerConfiguration profileConfig = activeProfile == null ?
+                    null :
+                    activeProfile.getConfiguration(hc.getHandlerDescriptor());
                 if (profileConfig == null || !profileConfig.isEnabled()) {
                     Map<String, Object> handlerProps = hc.saveToSecret();
                     if (!handlerProps.isEmpty()) {
@@ -2240,9 +2281,11 @@ public class DataSourceDescriptor
         if (secretValue == null) {
             if (DBWorkbench.isDistributed()) {
                 // In distributed mode we reset saved password in case of null secret
-                connectionInfo.getHandlers().forEach(handler ->
-                    handler.setSavePassword(false)
-                );
+                connectionInfo.getHandlers().forEach(handler -> {
+                    if (connectionInfo.getConfigProfileName() == null) {
+                        handler.setSavePassword(false);
+                    }
+                });
                 savePassword = false;
             }
             return;
@@ -2287,6 +2330,10 @@ public class DataSourceDescriptor
         if (!CommonUtils.isEmpty(handlerList)) {
             for (Map<String, Object> handlerMap : handlerList) {
                 String handlerId = JSONUtils.getString(handlerMap, RegistryConstants.ATTR_ID);
+                if (handlerId == null) {
+                    log.warn("Network handler ID is missing in the configuration");
+                    continue;
+                }
                 DBWHandlerConfiguration hc = connectionInfo.getHandler(handlerId);
                 if (hc == null) {
                     log.warn("Handler '" + handlerId + "' not found in datasource '" + getId() + "'. Secret configuration will be lost.");
@@ -2308,7 +2355,8 @@ public class DataSourceDescriptor
         if (!isSharedCredentials()) {
             connectionInfo.getHandlers().forEach(
                 handler -> {
-                    if (!handlersFromSecret.contains(handler.getId())) {
+                    // password can be stored in config profile, so we don't reset it if config profile is set
+                    if (connectionInfo.getConfigProfileName() == null && !handlersFromSecret.contains(handler.getId())) {
                         handler.setSavePassword(false);
                     }
                 }
@@ -2354,6 +2402,4 @@ public class DataSourceDescriptor
             log.error("Error reading datasource '" + getId() + "' legacy secrets", e);
         }
     }
-
-
 }
