@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -37,8 +37,8 @@ import org.jkiss.utils.ArrayUtils;
 import org.jkiss.utils.CommonUtils;
 import org.jkiss.utils.IntKeyMap;
 
-import java.util.List;
 import java.util.*;
+import java.util.List;
 
 /**
  * LightGrid
@@ -73,17 +73,10 @@ public abstract class LightGrid extends Canvas {
     private static final int MIN_ROW_HEADER_WIDTH = 40;
     private static final int MAX_ROW_HEADER_WIDTH = 400;
 
-
     /**
      * The minimum width of a column header.
      */
     private static final int MIN_COLUMN_HEADER_WIDTH = 32;
-
-    /**
-     * Threshold for the selection border used for drag n drop
-     * in mode.
-     */
-    private static final int SELECTION_DRAG_BORDER_THRESHOLD = 2;
 
     public enum EventSource {
         MOUSE,
@@ -156,8 +149,8 @@ public abstract class LightGrid extends Canvas {
 
         @Override
         public boolean equals(Object obj) {
-            return obj instanceof RowLocation &&
-                Arrays.equals(this.location, ((RowLocation)obj).location);
+            return obj instanceof RowLocation rowLocation &&
+                Arrays.equals(this.location, rowLocation.location);
         }
 
         @Override
@@ -183,7 +176,7 @@ public abstract class LightGrid extends Canvas {
      * OS's paint event merging to assure that we don't perform this expensive
      * operation when unnecessary.
      */
-    private boolean scrollValuesObsolete = false;
+    private boolean scrollValuesObsolete;
 
     /**
      * Reference to the item in focus.
@@ -332,7 +325,7 @@ public abstract class LightGrid extends Canvas {
     private Color backgroundColor;
     private Color foregroundColor;
     @NotNull
-    private Cursor sortCursor;
+    private final Cursor sortCursor;
 
     private final CustomToolTipHandler toolTipHandler;
 
@@ -491,7 +484,7 @@ public abstract class LightGrid extends Canvas {
     @NotNull
     public abstract IGridLabelProvider getLabelProvider();
 
-    @Nullable
+    @NotNull
     public abstract IGridController getGridController();
 
     public GridCellRenderer getCellRenderer() {
@@ -504,8 +497,8 @@ public abstract class LightGrid extends Canvas {
 
     private void collectRowsFromElements(
         List<IGridRow> result,
-        Object[] elements)
-    {
+        Object[] elements
+    ) {
         int index = 0;
         for (int i = 0; i < elements.length; i++) {
             Object element = elements[i];
@@ -552,8 +545,7 @@ public abstract class LightGrid extends Canvas {
     /**
      * Refresh grid data
      */
-    public void refreshData(boolean refreshColumns, boolean keepState, boolean fitValue)
-    {
+    public void refreshData(boolean refreshColumns, boolean keepState, boolean fitValue) {
         GridPos savedFocus = keepState ? getFocusPos() : null;
         int savedHSB = keepState ? hScroll.getSelection() : -1;
         int savedVSB = keepState ? vScroll.getSelection() : -1;
@@ -582,7 +574,7 @@ public abstract class LightGrid extends Canvas {
         }
         IGridContentProvider contentProvider = getContentProvider();
 
-        Object[] columnElements = null;
+        Object[] columnElements;
         if (refreshColumns) {
             this.maxColumnDepth = 0;
 
@@ -681,13 +673,12 @@ public abstract class LightGrid extends Canvas {
             }
 
             if (oldWidths != null) {
-                // Restore widths
-                if (oldWidths.size() == columns.size()) {
-                    for (GridColumn column : columns) {
-                        Integer newWidth = oldWidths.get(column.getElement());
-                        if (newWidth != null) {
-                            column.setWidth(newWidth);
-                        }
+                // We restore widths per column since the total number of columns may have changed
+                // if e.g. a column was hidden or shown. We want to reflect those individual changes.
+                for (GridColumn column : columns) {
+                    Integer newWidth = oldWidths.get(column.getElement());
+                    if (newWidth != null) {
+                        column.setWidth(newWidth);
                     }
                 }
             }
@@ -763,8 +754,7 @@ public abstract class LightGrid extends Canvas {
     }
 
     @Nullable
-    public GridCell posToCell(GridPos pos)
-    {
+    public GridCell posToCell(@NotNull GridPos pos) {
         if (pos.col < 0 || pos.row < 0) {
             return null;
         }
@@ -775,14 +765,14 @@ public abstract class LightGrid extends Canvas {
     }
 
     @NotNull
-    public GridPos cellToPos(GridCell cell)
-    {
+    public GridPos cellToPos(@NotNull GridCell cell) {
         int colIndex = columns.indexOf(cell.col);
         int rowIndex = ArrayUtils.indexOf(gridRows, cell.row);
         return new GridPos(colIndex, rowIndex);
     }
 
-    public IGridColumn getColumnByElement(Object element) {
+    @Nullable
+    public IGridColumn getColumnByElement(@NotNull Object element) {
         for (IGridColumn col : columns) {
             if (col.getElement() == element) {
                 return col;
@@ -791,6 +781,7 @@ public abstract class LightGrid extends Canvas {
         return null;
     }
 
+    @NotNull
     public Object getColumnElement(int col) {
         return columns.get(col).getElement();
     }
@@ -817,7 +808,9 @@ public abstract class LightGrid extends Canvas {
     @Nullable
     public IGridRow getRow(int row) {
         if (row < 0 || row >= gridRows.length) {
-            log.debug("Row index out of range (" + row + ")" );
+            if (row >= 0) {
+                log.debug("Row index out of range (" + row + ")");
+            }
             return null;
         }
         return gridRows[row];
@@ -830,8 +823,7 @@ public abstract class LightGrid extends Canvas {
     }
 
     @Override
-    public Color getBackground()
-    {
+    public Color getBackground() {
         if (backgroundColor == null) {
             backgroundColor = super.getBackground();
         }
@@ -861,47 +853,20 @@ public abstract class LightGrid extends Canvas {
         getContentProvider().resetColors();
     }
 
-    /**
-     * Adds the listener to the collection of listeners who will be notified
-     * when the receiver's selection changes, by sending it one of the messages
-     * defined in the {@code SelectionListener} interface.
-     * <p/>
-     * Cell selection events may have <code>Event.detail = SWT.DRAG</code> when the
-     * user is drag selecting multiple cells.  A follow up selection event will be generated
-     * when the drag is complete.
-     *
-     * @param listener the listener which should be notified
-     */
-    public void addSelectionListener(SelectionListener listener)
-    {
+    public void addSelectionListener(@NotNull SelectionListener listener) {
         checkWidget();
-        if (listener == null) {
-            SWT.error(SWT.ERROR_NULL_ARGUMENT);
-        }
-        addListener(SWT.Selection, new TypedListener(listener));
-        addListener(SWT.DefaultSelection, new TypedListener(listener));
+        addListener(SWT.Selection, event -> listener.widgetSelected(new SelectionEvent(event)));
+        addListener(SWT.DefaultSelection, event -> listener.widgetDefaultSelected(new SelectionEvent(event)));
     }
 
-    /**
-     * Removes the listener from the collection of listeners who will be
-     * notified when the receiver's selection changes.
-     *
-     * @param listener the listener which should no longer be notified
-     * @see SelectionListener
-     * @see #addSelectionListener(SelectionListener)
-     */
-    public void removeSelectionListener(SelectionListener listener)
-    {
+    public void removeSelectionListener(@NotNull SelectionListener listener) {
         checkWidget();
         removeListener(SWT.Selection, listener);
         removeListener(SWT.DefaultSelection, listener);
     }
 
-
-
     @Override
-    public Point computeSize(int wHint, int hHint, boolean changed)
-    {
+    public Point computeSize(int wHint, int hHint, boolean changed) {
         checkWidget();
 
         Point prefSize = null;
@@ -939,8 +904,7 @@ public abstract class LightGrid extends Canvas {
      * Deselects all selected items in the receiver.  If cell selection is enabled,
      * all cells are deselected.
      */
-    public void deselectAll()
-    {
+    public void deselectAll() {
         checkWidget();
 
         selectedCells.clear();
@@ -949,8 +913,7 @@ public abstract class LightGrid extends Canvas {
     }
 
     @NotNull
-    public GridColumn getColumn(int index)
-    {
+    public GridColumn getColumn(int index) {
         return columns.get(index);
     }
 
@@ -962,13 +925,8 @@ public abstract class LightGrid extends Canvas {
      * @return the column at the given point
      */
     @Nullable
-    private GridColumn getColumn(Point point)
-    {
+    private GridColumn getColumn(@NotNull Point point) {
         checkWidget();
-        if (point == null) {
-            SWT.error(SWT.ERROR_NULL_ARGUMENT);
-            return null;
-        }
 
         int x2 = 0;
 
@@ -992,7 +950,7 @@ public abstract class LightGrid extends Canvas {
     }
 
     @Nullable
-    private GridColumn getColumnWithOffset(Point point, int x2, boolean pinned) {
+    private GridColumn getColumnWithOffset(@NotNull Point point, int x2, boolean pinned) {
         GridColumn overThis = null;
         for (GridColumn column : columns) {
             if (column.isPinned() != pinned) {
@@ -1025,23 +983,20 @@ public abstract class LightGrid extends Canvas {
      *
      * @return the number of columns
      */
-    public int getColumnCount()
-    {
+    public int getColumnCount() {
         return columns.size();
     }
 
-    Collection<GridColumn> getColumns()
-    {
+    @NotNull
+    Collection<GridColumn> getColumns() {
         return columns;
     }
 
-    public IGridScrollBar getHorizontalScrollBarProxy()
-    {
+    public IGridScrollBar getHorizontalScrollBarProxy() {
         return hScroll;
     }
 
-    public IGridScrollBar getVerticalScrollBarProxy()
-    {
+    public IGridScrollBar getVerticalScrollBarProxy() {
         return vScroll;
     }
 
@@ -1051,24 +1006,16 @@ public abstract class LightGrid extends Canvas {
      *
      * @return height of the column header row
      */
-    public int getHeaderHeight()
-    {
+    public int getHeaderHeight() {
         return headerHeight;
     }
 
-    private int getRowHeaderWidth()
-    {
+    public int getRowHeaderWidth() {
         return rowHeaderWidth;
     }
 
-    public int getRow(Point point)
-    {
+    public int getRow(@NotNull Point point) {
         checkWidget();
-
-        if (point == null) {
-            SWT.error(SWT.ERROR_NULL_ARGUMENT);
-            return -1;
-        }
 
         final Rectangle clientArea = getClientArea();
         if (point.x < 0 || point.x > clientArea.width) return -1;
@@ -1106,36 +1053,18 @@ public abstract class LightGrid extends Canvas {
      *
      * @return the number of items
      */
-    public int getItemCount()
-    {
+    public int getItemCount() {
         return gridRows.length;
     }
 
     /**
      * Returns the default height of the items
-     *
-     * @return default height of items
-     * @see #setItemHeight(int)
      */
-    public int getItemHeight()
-    {
+    public int getItemHeight() {
         return itemHeight;
     }
 
-    /**
-     * Sets the default height for this <code>Grid</code>'s items.  When
-     * this method is called, all existing items are resized
-     * to the specified height and items created afterwards will be
-     * initially sized to this height.
-     * <p/>
-     * As long as no default height was set by the client through this method,
-     * the preferred height of the first item in this <code>Grid</code> is
-     * used as a default for all items (and is returned by {@link #getItemHeight()}).
-     *
-     * @param height default height in pixels
-     */
-    private void setItemHeight(int height)
-    {
+    private void setItemHeight(int height) {
         checkWidget();
         if (height < 1)
             SWT.error(SWT.ERROR_INVALID_ARGUMENT);
@@ -1158,11 +1087,12 @@ public abstract class LightGrid extends Canvas {
         this.lineColor = lineColor;
     }
 
+    @NotNull
     public Color getLineSelectedColor() {
         return lineSelectedColor;
     }
 
-    public void setLineSelectedColor(Color lineSelectedColor) {
+    public void setLineSelectedColor(@NotNull Color lineSelectedColor) {
         this.lineSelectedColor = lineSelectedColor;
     }
 
@@ -1171,8 +1101,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @return Returns the linesVisible.
      */
-    public boolean isLinesVisible()
-    {
+    public boolean isLinesVisible() {
         return linesVisible;
     }
 
@@ -1181,8 +1110,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @return next visible item or null
      */
-    private int getNextVisibleItem(int index)
-    {
+    private int getNextVisibleItem(int index) {
         if (index >= getItemCount()) {
             return -1;
         }
@@ -1199,8 +1127,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @return previous visible item or if item==null last visible item
      */
-    private int getPreviousVisibleItem(int index)
-    {
+    private int getPreviousVisibleItem(int index) {
         if (index == 0) {
             return -1;
         }
@@ -1214,8 +1141,7 @@ public abstract class LightGrid extends Canvas {
      * @return previous visible column or null
      */
     @Nullable
-    private GridColumn getPreviousVisibleColumn(GridColumn column)
-    {
+    private GridColumn getPreviousVisibleColumn(@NotNull GridColumn column) {
         int index = indexOf(column);
         if (index <= 0)
             return null;
@@ -1223,15 +1149,8 @@ public abstract class LightGrid extends Canvas {
         return columns.get(index - 1);
     }
 
-    /**
-     * Returns the next visible column in the table.
-     *
-     * @param column column
-     * @return next visible column or null
-     */
     @Nullable
-    private GridColumn getNextVisibleColumn(GridColumn column)
-    {
+    private GridColumn getNextVisibleColumn(@NotNull GridColumn column) {
         int index = indexOf(column);
 
         if (index < 0 || index >= columns.size() - 1)
@@ -1240,13 +1159,7 @@ public abstract class LightGrid extends Canvas {
         return columns.get(index + 1);
     }
 
-    /**
-     * Returns the number of selected cells contained in the receiver.
-     *
-     * @return the number of selected cells
-     */
-    private int getCellSelectionCount()
-    {
+    private int getCellSelectionCount() {
         return selectedCells.size();
     }
 
@@ -1257,8 +1170,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @return the index of the selected item
      */
-    public int getSelectionIndex()
-    {
+    public int getSelectionIndex() {
         if (selectedCells.isEmpty())
             return -1;
 
@@ -1272,8 +1184,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @return the index of the top item
      */
-    public int getTopIndex()
-    {
+    public int getTopIndex() {
         if (topIndex != -1)
             return topIndex;
 
@@ -1301,8 +1212,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @return the index of the bottom item
      */
-    public int getBottomIndex()
-    {
+    public int getBottomIndex() {
         if (bottomIndex != -1)
             return bottomIndex;
 
@@ -1333,9 +1243,7 @@ public abstract class LightGrid extends Canvas {
      * @param endIndex   index of the last item in the range or -1 to use the last visible item in this grid
      */
     @Nullable
-    private RowRange getRowRange(int startIndex, int endIndex)
-    {
-
+    private RowRange getRowRange(int startIndex, int endIndex) {
         // parameter preparation
         int itemCount = getItemCount();
         if (startIndex == -1) {
@@ -1385,9 +1293,12 @@ public abstract class LightGrid extends Canvas {
      * @return range of grid rows
      * @see RowRange
      */
-    private RowRange getRowRange(int startIndex, int availableHeight,
-                                 boolean forceEndCompletelyInside, boolean inverse)
-    {
+    private RowRange getRowRange(
+        int startIndex,
+        int availableHeight,
+        boolean forceEndCompletelyInside,
+        boolean inverse
+    ) {
         // parameter preparation
         if (startIndex == -1) {
             if (!inverse) {
@@ -1446,8 +1357,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @return height of plain grid
      */
-    private int getGridHeight()
-    {
+    private int getGridHeight() {
         RowRange range = getRowRange(-1, -1);
         return range != null ? range.height : 0;
     }
@@ -1459,13 +1369,12 @@ public abstract class LightGrid extends Canvas {
      *
      * @return height of visible grid in pixels
      */
-    private int getVisibleGridHeight()
-    {
+    private int getVisibleGridHeight() {
         Rectangle clientArea = getClientArea();
         return getVisibleGridHeight(clientArea);
     }
 
-    private int getVisibleGridHeight(Rectangle clientArea) {
+    private int getVisibleGridHeight(@NotNull Rectangle clientArea) {
         return clientArea.height - (columnHeadersVisible ? headerHeight : 0);
     }
 
@@ -1477,8 +1386,7 @@ public abstract class LightGrid extends Canvas {
      * @param column the search column
      * @return the index of the column
      */
-    int indexOf(GridColumn column)
-    {
+    int indexOf(@Nullable GridColumn column) {
         if (column == null) {
             return -1;
         }
@@ -1497,8 +1405,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @return the receiver's row header's visibility state
      */
-    private boolean isRowHeaderVisible()
-    {
+    private boolean isRowHeaderVisible() {
         return rowHeaderVisible;
     }
 
@@ -1508,11 +1415,7 @@ public abstract class LightGrid extends Canvas {
      * @param cell cell
      * @return true if the cell is selected.
      */
-    private boolean isCellSelected(GridPos cell)
-    {
-        if (cell == null)
-            SWT.error(SWT.ERROR_NULL_ARGUMENT);
-
+    private boolean isCellSelected(@NotNull GridPos cell) {
         return selectedCells.contains(cell);
     }
 
@@ -1539,8 +1442,7 @@ public abstract class LightGrid extends Canvas {
     /**
      * Removes all of the items from the receiver.
      */
-    public void removeAll()
-    {
+    public void removeAll() {
         checkWidget();
         deselectAll();
         vScroll.setSelection(0);
@@ -1567,8 +1469,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @param index the index of the item to select
      */
-    public void select(int index)
-    {
+    public void select(int index) {
         checkWidget();
 
         if (index < 0 || index >= getItemCount()) return;
@@ -1595,8 +1496,7 @@ public abstract class LightGrid extends Canvas {
      * @param end   the end of the range
      * @see LightGrid#setSelection(int,int)
      */
-    public void select(int start, int end)
-    {
+    public void select(int start, int end) {
         checkWidget();
 
         if (selectionType == SWT.SINGLE && start != end) return;
@@ -1631,14 +1531,8 @@ public abstract class LightGrid extends Canvas {
      * @param indices the array of indices for the items to select
      * @see LightGrid#setSelection(int[])
      */
-    public void select(int[] indices)
-    {
+    public void select(@NotNull int[] indices) {
         checkWidget();
-
-        if (indices == null) {
-            SWT.error(SWT.ERROR_NULL_ARGUMENT);
-            return;
-        }
 
         if (selectionType == SWT.SINGLE && indices.length > 1) return;
 
@@ -1656,8 +1550,7 @@ public abstract class LightGrid extends Canvas {
      * If the receiver is single-select, do nothing.  If cell selection is enabled,
      * all cells are selected.
      */
-    public void selectAll()
-    {
+    public void selectAll() {
         checkWidget();
 
         if (selectionType == SWT.SINGLE) return;
@@ -1665,44 +1558,21 @@ public abstract class LightGrid extends Canvas {
         selectAllCells();
     }
 
-    /**
-     * Marks the receiver's header as visible if the argument is {@code true},
-     * and marks it invisible otherwise.
-     *
-     * @param show the new visibility state
-     */
-    public void setHeaderVisible(boolean show)
-    {
+    public void setHeaderVisible(boolean show) {
         checkWidget();
         this.columnHeadersVisible = show;
         redraw();
     }
 
-    /**
-     * Sets the line visibility.
-     *
-     * @param linesVisible Te linesVisible to set.
-     */
-    public void setLinesVisible(boolean linesVisible)
-    {
+    public void setLinesVisible(boolean linesVisible) {
         checkWidget();
         this.linesVisible = linesVisible;
         redraw();
     }
 
-    /**
-     * Marks the receiver's row header as visible if the argument is
-     * {@code true}, and marks it invisible otherwise. When row headers are
-     * visible, horizontal scrolling is always done by column rather than by
-     * pixel.
-     *
-     * @param show the new visibility state
-     */
-    public void setRowHeaderVisible(boolean show)
-    {
+    public void setRowHeaderVisible(boolean show) {
         checkWidget();
         this.rowHeaderVisible = show;
-        //setColumnScrolling(true);
 
         redraw();
     }
@@ -1716,8 +1586,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @param index the index of the item to select
      */
-    public void setSelection(int index)
-    {
+    public void setSelection(int index) {
         checkWidget();
 
         if (index >= 0 && index < getItemCount()) {
@@ -1742,8 +1611,7 @@ public abstract class LightGrid extends Canvas {
      * @see LightGrid#deselectAll()
      * @see LightGrid#select(int,int)
      */
-    public void setSelection(int start, int end)
-    {
+    public void setSelection(int start, int end) {
         checkWidget();
 
         if (selectionType == SWT.SINGLE && start != end) return;
@@ -1774,11 +1642,8 @@ public abstract class LightGrid extends Canvas {
      * If cell selection is enabled, all cells within the given indices are selected.
      *
      * @param indices the indices of the items to select
-     * @see LightGrid#deselectAll()
-     * @see LightGrid#select(int[])
      */
-    public void setSelection(int[] indices)
-    {
+    public void setSelection(@NotNull int[] indices) {
         checkWidget();
 
         if (selectionType == SWT.SINGLE && indices.length > 1) return;
@@ -1805,8 +1670,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @param index the index of the top item
      */
-    private void setTopIndex(int index)
-    {
+    private void setTopIndex(int index) {
         checkWidget();
         if (index < 0 || index >= getItemCount()) {
             return;
@@ -1828,14 +1692,12 @@ public abstract class LightGrid extends Canvas {
      * column is visible.
      *
      */
-    public void showColumn(int column)
-    {
+    public void showColumn(int column) {
         GridColumn col = getColumn(column);
         showColumn(col);
     }
 
-    public void showColumn(Object element)
-    {
+    public void showColumn(@Nullable Object element) {
         for (GridColumn column : columns) {
             if (column.getElement() == element) {
                 showColumn(column);
@@ -1844,8 +1706,7 @@ public abstract class LightGrid extends Canvas {
         }
     }
 
-    private void showColumn(@NotNull GridColumn col)
-    {
+    private void showColumn(@NotNull GridColumn col) {
         checkWidget();
 
         if (!hScroll.getVisible()) {
@@ -1921,8 +1782,7 @@ public abstract class LightGrid extends Canvas {
      * @param row row number
      * @return true if 'item' is shown
      */
-    private boolean isShown(int row)
-    {
+    private boolean isShown(int row) {
         checkWidget();
 
         if (row == -1)
@@ -1985,8 +1845,7 @@ public abstract class LightGrid extends Canvas {
      * selection is visible.
      *
      */
-    public void showSelection()
-    {
+    public void showSelection() {
         checkWidget();
 
         if (scrollValuesObsolete)
@@ -2002,7 +1861,6 @@ public abstract class LightGrid extends Canvas {
     /**
      * Computes and sets the height of the header row. This method will ask for
      * the preferred size of all the column headers and use the max.
-     * @param decreaseSize
      */
     private void computeHeaderSizes(GC gc, boolean decreaseSize)
     {
@@ -2045,8 +1903,7 @@ public abstract class LightGrid extends Canvas {
      * @param column given column
      * @return x position
      */
-    private int getColumnHeaderXPosition(@NotNull GridColumn column)
-    {
+    private int getColumnHeaderXPosition(@NotNull GridColumn column) {
         int x = 0;
 
         x -= getHScrollSelectionInPixels();
@@ -2072,8 +1929,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @return the horizontal scroll selection in pixels
      */
-    private int getHScrollSelectionInPixels()
-    {
+    private int getHScrollSelectionInPixels() {
         int selection = hScroll.getSelection();
         if (columnScrolling) {
             int pixels = 0;
@@ -2090,8 +1946,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @return the preferred size of the table.
      */
-    private Point getTableSize()
-    {
+    private Point getTableSize() {
         int x = 0;
         int y = 0;
 
@@ -2118,8 +1973,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @param x mouse x
      */
-    private void handleColumnResizerDragging(int x)
-    {
+    private void handleColumnResizerDragging(int x) {
         int newWidth = resizingColumnStartWidth + (x - resizingStartX);
         if (newWidth < MIN_COLUMN_HEADER_WIDTH) {
             newWidth = MIN_COLUMN_HEADER_WIDTH;
@@ -2152,8 +2006,7 @@ public abstract class LightGrid extends Canvas {
      * @param x mouse x
      * @param y mouse y
      */
-    private void handleHoverOnColumnHeader(int x, int y)
-    {
+    private void handleHoverOnColumnHeader(int x, int y) {
         boolean overSorter = false, overResizer = false, overFilter = false;
         hoveringOnHeader = false;
         boolean overIcon = false;
@@ -2300,14 +2153,8 @@ public abstract class LightGrid extends Canvas {
      * @return the cell at the given point
      */
     @Nullable
-    public GridPos getCell(Point point)
-    {
+    public GridPos getCell(@NotNull Point point) {
         checkWidget();
-
-        if (point == null) {
-            SWT.error(SWT.ERROR_NULL_ARGUMENT);
-            return null;
-        }
 
         if (point.x < 0 || point.x > getClientArea().width) return null;
 
@@ -2336,9 +2183,9 @@ public abstract class LightGrid extends Canvas {
 
     private int getPinnedColumnsWidth() {
         int x = 0;
-        for (int k = 0; k < columns.size(); k++) {
-            if (columns.get(k).isPinned()) {
-                x += columns.get(k).getWidth();
+        for (GridColumn column : columns) {
+            if (column.isPinned()) {
+                x += column.getWidth();
             } else {
                 break;
             }
@@ -2356,13 +2203,11 @@ public abstract class LightGrid extends Canvas {
         gc.setBackground(getBackground());
         int redrawRow = -1;
         GridColumn redrawColumn = null;
-        if (e.data instanceof RedrawCell redrawCell) {
-            redrawRow = redrawCell.row;
-            redrawColumn = redrawCell.column;
+        if (e.data instanceof RedrawCell(int row, GridColumn column)) {
+            redrawRow = row;
+            redrawColumn = column;
         }
         boolean isSingleCellPaint = redrawRow >= 0 || redrawColumn != null;
-
-        //this.drawBackground(gc, 0, 0, getSize().x, getSize().y);
 
         if (scrollValuesObsolete) {
             updateScrollbars();
@@ -2602,7 +2447,7 @@ public abstract class LightGrid extends Canvas {
 
         if (!columns.isEmpty() && gridRows.length > 0) {
             int lastRow = row >= gridRows.length ? gridRows.length - 1 : row;
-            getContentProvider().validateDataPresence(columns.get(columns.size() - 1), gridRows[lastRow]);
+            getContentProvider().validateDataPresence(columns.getLast(), gridRows[lastRow]);
         }
     }
 
@@ -2611,10 +2456,8 @@ public abstract class LightGrid extends Canvas {
      *
      * @param gc gc from paint event
      */
-    private void paintHeader(@NotNull GC gc)
-    {
+    private void paintHeader(@NotNull GC gc) {
         int x = 0;
-        int y;
 
         x -= getHScrollSelectionInPixels();
 
@@ -2625,15 +2468,14 @@ public abstract class LightGrid extends Canvas {
         x += getPinnedColumnsWidth();
 
         final Rectangle clientArea = getClientArea();
-        for (int i = 0, columnsSize = topColumns.size(); i < columnsSize; i++) {
-            GridColumn column = topColumns.get(i);
+        for (GridColumn column : topColumns) {
             if (column.isPinned()) {
                 continue;
             }
             if (x > clientArea.width)
                 break;
 
-            y = paintColumnHeader(gc, x, column);
+            paintColumnHeader(gc, x, column);
 
             x += column.getWidth();
         }
@@ -2698,8 +2540,7 @@ public abstract class LightGrid extends Canvas {
      * Manages the state of the scrollbars when new items are added or the
      * bounds are changed.
      */
-    public void updateScrollbars()
-    {
+    public void updateScrollbars() {
         Point preferredSize = getTableSize();
 
         Rectangle clientArea = getClientArea();
@@ -2810,12 +2651,12 @@ public abstract class LightGrid extends Canvas {
      */
     @Nullable
     private Event updateCellSelection(
-            @NotNull GridPos newCell,
-            int stateMask,
-            boolean dragging,
-            boolean reverseDuplicateSelections,
-            EventSource eventSource)
-    {
+        @NotNull GridPos newCell,
+        int stateMask,
+        boolean dragging,
+        boolean reverseDuplicateSelections,
+        @NotNull EventSource eventSource
+    ) {
         return updateCellSelection(Collections.singletonList(newCell), stateMask, dragging, reverseDuplicateSelections, eventSource);
     }
 
@@ -2834,8 +2675,8 @@ public abstract class LightGrid extends Canvas {
         int stateMask,
         boolean dragging,
         boolean reverseDuplicateSelections,
-        EventSource eventSource)
-    {
+        EventSource eventSource
+    ) {
         if (RuntimeUtils.isMacOS() && (stateMask & SWT.CTRL) == SWT.CTRL) {
             /*
              * On macOS, Ctrl + Click is a system shortcut that opens a context menu.
@@ -2863,7 +2704,7 @@ public abstract class LightGrid extends Canvas {
         if (!shift && !ctrl) {
             if (newCells.size() == 1 &&
                 newCells.size() == selectedCells.size() &&
-                newCells.get(0).equals(selectedCells.iterator().next()))
+                newCells.getFirst().equals(selectedCells.iterator().next()))
             {
                 return null;
             }
@@ -2875,7 +2716,7 @@ public abstract class LightGrid extends Canvas {
 
         } else if (shift) {
 
-            GridPos newCell = newCells.get(0); //shift selection should only occur with one cell, ignoring others
+            GridPos newCell = newCells.getFirst(); //shift selection should only occur with one cell, ignoring others
             oldSelection = new ArrayList<>(selectedCells);
 
             if ((focusColumn == null) || (focusItem < 0)) {
@@ -2948,9 +2789,9 @@ public abstract class LightGrid extends Canvas {
                 } while (currentColumn != endColumn && currentColumn != null);
             } while (currentItem != endItem);
 
-            if (selectedCells.equals(newCells)) {
-                return null;
-            }
+//            if (selectedCells.equals(newCells)) {
+//                return null;
+//            }
 
         } else /*if (eventSource == EventSource.MOUSE)*/ {
             // Ctrl selection works only for mouse events
@@ -2967,7 +2808,7 @@ public abstract class LightGrid extends Canvas {
             if (reverse) {
                 if (alt && newCells.size() == 1) {
                     // Alt pressed - deselect all cells selected in other rows (#6613)
-                    int row = newCells.get(0).row;
+                    int row = newCells.getFirst().row;
                     newCells = new ArrayList<>();
                     for (GridColumn col : selectedColumns) {
                         newCells.add(new GridPos(col.getIndex(), row));
@@ -2977,7 +2818,7 @@ public abstract class LightGrid extends Canvas {
             } else {
                 if (alt && newCells.size() == 1) {
                     // Alt pressed - select all cells selected in other rows (#5988)
-                    int row = newCells.get(0).row;
+                    int row = newCells.getFirst().row;
                     newCells = new ArrayList<>();
                     for (GridColumn col : selectedColumns) {
                         newCells.add(new GridPos(col.getIndex(), row));
@@ -3315,7 +3156,7 @@ public abstract class LightGrid extends Canvas {
                     }
 
                     if (!altPressed) {
-                        selectionEvent = updateCellSelection(new GridPos(col.getIndex(), row), e.stateMask, false, true, EventSource.MOUSE);
+                        updateCellSelection(new GridPos(col.getIndex(), row), e.stateMask, false, true, EventSource.MOUSE);
                     }
                     // Trigger selection event always!
                     // It makes sense if grid content was changed but selection remains the same
@@ -3325,7 +3166,6 @@ public abstract class LightGrid extends Canvas {
 
                     //showColumn(col);
                     showItem(row);
-                    redraw();
                 }
             } else {
                 return;
@@ -3377,8 +3217,7 @@ public abstract class LightGrid extends Canvas {
         if (selectionEvent != null) {
             selectionEvent.stateMask = e.stateMask;
             selectionEvent.button = e.button;
-            selectionEvent.data = new GridCell(
-                col, row < 0 ? null : gridRows[row]);
+            selectionEvent.data = col == null || row < 0 ? null : new GridCell(col, gridRows[row]);
             selectionEvent.x = e.x;
             selectionEvent.y = e.y;
             notifyListeners(SWT.Selection, selectionEvent);
@@ -3395,7 +3234,7 @@ public abstract class LightGrid extends Canvas {
         return rowState != null && rowState.isColumnExpanded(column);
     }
 
-    private boolean isRowExpanded(IGridRow gridRow) {
+    private boolean isRowExpanded(@NotNull IGridRow gridRow) {
         final RowLocation gridPos = new RowLocation(gridRow);
         final RowExpandState rowState = expandedRows.get(gridPos);
         return rowState != null && rowState.isAllColumnsExpanded();
@@ -3414,7 +3253,10 @@ public abstract class LightGrid extends Canvas {
         return IGridContentProvider.ElementState.NONE;
     }
 
-    public void toggleRowExpand(@NotNull IGridRow gridRow, @Nullable IGridColumn gridColumn) {
+    public void toggleRowExpand(@Nullable IGridRow gridRow, @Nullable IGridColumn gridColumn) {
+        if (gridRow == null) {
+            return;
+        }
         final IGridContentProvider provider = getContentProvider();
 
         RowLocation gridPos = new RowLocation(gridRow);
@@ -3628,7 +3470,13 @@ public abstract class LightGrid extends Canvas {
      *
      * @param e event
      */
-    private void onMouseMove(MouseEvent e) {
+    private void onMouseMove(@NotNull MouseEvent e) {
+        if (e.x < 0 && e.y < 0) {
+            // Reject invalid events that often are originated from our GIS viewer (#37034)
+            log.trace("Invalid mouse event received: " + e);
+            return;
+        }
+
         List<RedrawCell> redrawCells = new ArrayList<>();
         //if populated will be fired at end of method.
         Event selectionEvent = null;
@@ -3704,9 +3552,9 @@ public abstract class LightGrid extends Canvas {
                     if (hoveringColumn == null) {
                         if (e.x > rowHeaderWidth) {
                             //then we must be hovering way to the right
-                            intentColumn = columns.get(columns.size() - 1);
+                            intentColumn = columns.getLast();
                         } else {
-                            intentColumn = columns.get(0);
+                            intentColumn = columns.getFirst();
                         }
                     }
 
@@ -3816,10 +3664,8 @@ public abstract class LightGrid extends Canvas {
      *
      * @param x mouse x coordinate
      * @param y mouse y coordinate
-     * @return
      */
-    private boolean handleHovering(int x, int y)
-    {
+    private boolean handleHovering(int x, int y) {
         boolean hoverChanged = handleCellHover(x, y);
 
         if (columnHeadersVisible) {
@@ -3838,8 +3684,7 @@ public abstract class LightGrid extends Canvas {
      * the state of the table to change and therefore the hover effects may have
      * become out of date.
      */
-    private void refreshHoverState()
-    {
+    private void refreshHoverState() {
         Point p = getDisplay().map(null, this, getDisplay().getCursorLocation());
         handleHovering(p.x, p.y);
     }
@@ -3849,8 +3694,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @param e event
      */
-    private void onMouseExit(MouseEvent e)
-    {
+    private void onMouseExit(@NotNull MouseEvent e) {
         hoveringItem = -1;
         hoveringDetail = null;
         hoveringColumn = null;
@@ -3890,15 +3734,9 @@ public abstract class LightGrid extends Canvas {
         }
     }
 
-    /**
-     * Key down event handler.
-     *
-     * @param e event
-     */
-    private void onKeyDown(Event e)
-    {
+    private void onKeyDown(Event e) {
         if (focusColumn == null) {
-            if (columns.size() == 0)
+            if (columns.isEmpty())
                 return;
 
             focusColumn = getColumn(0);
@@ -3986,7 +3824,7 @@ public abstract class LightGrid extends Canvas {
                 } else {
                     newSelection = impliedFocusItem;
                 }
-                newColumnFocus = columns.get(0);
+                newColumnFocus = columns.getFirst();
 
                 break;
             case SWT.END:
@@ -3996,7 +3834,7 @@ public abstract class LightGrid extends Canvas {
                     } else {
                         newSelection = impliedFocusItem;
                     }
-                    newColumnFocus = columns.get(columns.size() - 1);
+                    newColumnFocus = columns.getLast();
                 }
 
                 break;
@@ -4117,8 +3955,7 @@ public abstract class LightGrid extends Canvas {
     /**
      * Scrollbar selection event handler.
      */
-    private void onScrollSelection()
-    {
+    private void onScrollSelection() {
         topIndex = -1;
         bottomIndex = -1;
         refreshHoverState();
@@ -4133,8 +3970,8 @@ public abstract class LightGrid extends Canvas {
      * @param item   item
      * @return x,y of top left corner of the cell
      */
-    Point getOrigin(IGridColumn column, int item)
-    {
+    @NotNull
+    Point getOrigin(@NotNull IGridColumn column, int item) {
         int x = 0;
 
         if (rowHeaderVisible) {
@@ -4159,10 +3996,6 @@ public abstract class LightGrid extends Canvas {
             }
 
             int currIndex = getTopIndex();
-
-            if (item == -1) {
-                SWT.error(SWT.ERROR_INVALID_ARGUMENT);
-            }
 
             while (currIndex != item) {
                 if (currIndex < item) {
@@ -4191,8 +4024,7 @@ public abstract class LightGrid extends Canvas {
      * @param y mouse y
      * @return true if a new section of the table is now being hovered
      */
-    private boolean handleCellHover(int x, int y)
-    {
+    private boolean handleCellHover(int x, int y) {
         Point point = new Point(x, y);
         final GridColumn col = getColumn(point);
         final int row = getRow(point);
@@ -4296,8 +4128,7 @@ public abstract class LightGrid extends Canvas {
      * @param column new column
      * @param index  index to insert new column
      */
-    void newColumn(GridColumn column, int index)
-    {
+    void newColumn(GridColumn column, int index) {
         if (index == -1) {
             columns.add(column);
         } else {
@@ -4320,8 +4151,8 @@ public abstract class LightGrid extends Canvas {
      *
      * @return cell in focus or {@code null}. x represents the column and y the row the cell is in
      */
-    public GridPos getFocusPos()
-    {
+    @NotNull
+    public GridPos getFocusPos() {
         checkWidget();
 
         int x = -1;
@@ -4360,37 +4191,18 @@ public abstract class LightGrid extends Canvas {
     }
 
     @Nullable
-    public GridCell getFocusCell()
-    {
+    public GridCell getFocusCell() {
         return posToCell(getFocusPos());
     }
-    /**
-     * Sets the focused item to the given item.
-     *
-     * @param item item to focus.
-     */
-    public void setFocusItem(int item)
-    {
+
+    public void setFocusItem(int item) {
         checkWidget();
         focusItem = item;
     }
 
-    /**
-     * Sets the focused item to the given column. Column focus is only applicable when cell
-     * selection is enabled.
-     *
-     * @param col column to focus.
-     */
-    public void setFocusColumn(int col)
-    {
+    public void setFocusColumn(int col) {
         checkWidget();
-        GridColumn column = getColumn(col);
-        if (column == null || column.getGrid() != this) {
-            SWT.error(SWT.ERROR_INVALID_ARGUMENT);
-            return;
-        }
-
-        focusColumn = column;
+        focusColumn = getColumn(col);
     }
 
     public void resetFocus() {
@@ -4404,8 +4216,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @return true if the table is scrolled horizontally by column
      */
-    private boolean getColumnScrolling()
-    {
+    private boolean getColumnScrolling() {
         checkWidget();
         return columnScrolling;
     }
@@ -4417,8 +4228,7 @@ public abstract class LightGrid extends Canvas {
      * @param columnScrolling true to horizontally scroll by column, false to
      *                        scroll by pixel
      */
-    public void setColumnScrolling(boolean columnScrolling)
-    {
+    public void setColumnScrolling(boolean columnScrolling) {
         checkWidget();
 //        if (rowHeaderVisible && !columnScrolling) {
 //            return;
@@ -4429,13 +4239,7 @@ public abstract class LightGrid extends Canvas {
         redraw();
     }
 
-    /**
-     * Selects the given cell.  Invalid cells are ignored.
-     *
-     * @param cell point whose x values is a column index and y value is an item index
-     */
-    public void selectCell(@NotNull GridPos cell)
-    {
+    public void selectCell(@NotNull GridPos cell) {
         checkWidget();
 
         addToCellSelection(cell);
@@ -4443,13 +4247,7 @@ public abstract class LightGrid extends Canvas {
         redraw();
     }
 
-    /**
-     * Selects the given cells.  Invalid cells are ignored.
-     *
-     * @param cells an array of points whose x value is a column index and y value is an item index
-     */
-    public void selectCells(@NotNull Collection<GridPos> cells)
-    {
+    public void selectCells(@NotNull Collection<GridPos> cells) {
         checkWidget();
 
         for (GridPos cell : cells) {
@@ -4457,14 +4255,9 @@ public abstract class LightGrid extends Canvas {
         }
 
         updateSelectionCache();
-        redraw();
     }
 
-    /**
-     * Selects all cells in the receiver.
-     */
-    public void selectAllCells()
-    {
+    public void selectAllCells() {
         checkWidget();
         selectAllCellsInternal(0);
     }
@@ -4475,9 +4268,8 @@ public abstract class LightGrid extends Canvas {
      * @return An Event object
      */
     @Nullable
-    private Event selectAllCellsInternal(int stateMask)
-    {
-        if (columns.size() == 0)
+    private Event selectAllCellsInternal(int stateMask) {
+        if (columns.isEmpty())
             return null;
 
         if (getItemCount() == 0)
@@ -4486,7 +4278,7 @@ public abstract class LightGrid extends Canvas {
         GridColumn oldFocusColumn = focusColumn;
         int oldFocusItem = focusItem;
 
-        focusColumn = columns.get(0);
+        focusColumn = columns.getFirst();
         focusItem = 0;
 
         List<GridPos> cells = getAllCells();
@@ -4508,8 +4300,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @param cell point whose x values is a column index and y value is an item index
      */
-    public void setCellSelection(@NotNull GridPos cell)
-    {
+    public void setCellSelection(@NotNull GridPos cell) {
         checkWidget();
 
         if (!isValidCell(cell))
@@ -4533,16 +4324,15 @@ public abstract class LightGrid extends Canvas {
      * @return an array representing the cell selection
      */
     @NotNull
-    public Collection<GridPos> getSelection()
-    {
+    public Collection<GridPos> getSelection() {
         if (isDisposed()) {
             return Collections.emptyList();
         }
         return Collections.unmodifiableCollection(selectedCells);
     }
 
-    public List<GridCell> getCellSelection()
-    {
+    @NotNull
+    public List<GridCell> getCellSelection() {
         if (isDisposed() || selectedCells.isEmpty()) {
             return Collections.emptyList();
         }
@@ -4564,11 +4354,7 @@ public abstract class LightGrid extends Canvas {
         if (selectedColumns.isEmpty()) {
             return Collections.emptyList();
         }
-        List<IGridColumn> selection = new ArrayList<>();
-        for (GridColumn col : selectedColumns) {
-            selection.add(col);
-        }
-        return selection;
+        return new ArrayList<>(selectedColumns);
     }
 
     public int getColumnSelectionSize() {
@@ -4579,12 +4365,8 @@ public abstract class LightGrid extends Canvas {
         return selectedRows.containsKey(row);
     }
 
-    /**
-     * Returns selected rows indexes
-     * @return indexes of selected rows
-     */
-    public Collection<Integer> getRowSelection()
-    {
+    @NotNull
+    public Collection<Integer> getRowSelection() {
         return Collections.unmodifiableCollection(selectedRows.keySet());
     }
 
@@ -4592,8 +4374,7 @@ public abstract class LightGrid extends Canvas {
         return selectedRows.size();
     }
 
-    private void getCells(GridColumn col, List<GridPos> cells)
-    {
+    private void getCells(@NotNull GridColumn col, @NotNull List<GridPos> cells) {
         if (col.getChildren() != null) {
             // Get cells for all leafs
             for (int i = 0; i < columns.size(); i++) {
@@ -4612,15 +4393,14 @@ public abstract class LightGrid extends Canvas {
         }
     }
 
-    private void getCells(int row, List<GridPos> cells)
-    {
+    private void getCells(int row, @NotNull List<GridPos> cells) {
         for (int i = 0; i < columns.size(); i++) {
             cells.add(new GridPos(i, row));
         }
     }
 
-    private List<GridPos> getAllCells()
-    {
+    @NotNull
+    private List<GridPos> getAllCells() {
         int itemCount = getItemCount();
         int columnCount = columns.size();
         List<GridPos> cells = new ArrayList<>(itemCount * columnCount);
@@ -4633,16 +4413,14 @@ public abstract class LightGrid extends Canvas {
         return cells;
     }
 
-    private List<GridPos> getCells(int row)
-    {
+    @NotNull
+    private List<GridPos> getCells(int row) {
         List<GridPos> cells = new ArrayList<>();
         getCells(row, cells);
         return cells;
     }
 
-
-    private void getCells(int startRow, int endRow, List<GridPos> cells)
-    {
+    private void getCells(int startRow, int endRow, @NotNull List<GridPos> cells) {
         boolean descending = (startRow < endRow);
 
         int iterItem = endRow;
@@ -4664,8 +4442,8 @@ public abstract class LightGrid extends Canvas {
      * Returns a point whose x and y values are the to and from column indexes of the new selection
      * range inclusive of all spanned columns.
      */
-    private Point getSelectionRange(int fromItem, GridColumn fromColumn, int toItem, GridColumn toColumn)
-    {
+    @NotNull
+    private Point getSelectionRange(int fromItem, @NotNull GridColumn fromColumn, int toItem, @NotNull GridColumn toColumn) {
         if (indexOf(fromColumn) > indexOf(toColumn)) {
             GridColumn temp = fromColumn;
             fromColumn = toColumn;
@@ -4710,8 +4488,7 @@ public abstract class LightGrid extends Canvas {
      * Returns a point whose x and y value are the to and from column indexes of the new selection
      * range inclusive of all spanned columns.
      */
-    private Point getRowSelectionRange(GridColumn fromColumn, GridColumn toColumn)
-    {
+    private Point getRowSelectionRange(GridColumn fromColumn, GridColumn toColumn) {
         int newFrom = fromColumn.getIndex();
         int newTo = toColumn.getIndex();
         return new Point(newFrom, newTo);
@@ -4723,8 +4500,7 @@ public abstract class LightGrid extends Canvas {
      *
      * @param cell cell
      */
-    private boolean isValidCell(GridPos cell)
-    {
+    private boolean isValidCell(@NotNull GridPos cell) {
         if (cell.col < 0 || cell.col >= columns.size())
             return false;
 
@@ -4738,8 +4514,7 @@ public abstract class LightGrid extends Canvas {
 
 
     @Override
-    public void setFont(Font font)
-    {
+    public void setFont(Font font) {
         super.setFont(font);
 
         GC sizingGC = new GC(this);
@@ -4786,6 +4561,9 @@ public abstract class LightGrid extends Canvas {
         }
         IGridRow gridRow = gridRows[row];
         String toolTip = getContentProvider().getCellToolTip(col, gridRow);
+        if (toolTip == null) {
+            return null;
+        }
         if (toolTip.length() > MAX_TOOLTIP_LENGTH) {
             toolTip = toolTip.substring(0, MAX_TOOLTIP_LENGTH) + "...";
         }
@@ -4838,8 +4616,7 @@ public abstract class LightGrid extends Canvas {
         }
     }
 
-    private void drawEmptyColumnHeader(GC gc, int x, int y, int width, int height)
-    {
+    private void drawEmptyColumnHeader(GC gc, int x, int y, int width, int height) {
         gc.setBackground(getLabelProvider().getHeaderBackground(null, false));
 
         gc.fillRectangle(
@@ -4849,8 +4626,7 @@ public abstract class LightGrid extends Canvas {
             height + 1);
     }
 
-    private void drawEmptyRowHeader(GC gc, int x, int y, int width, int height)
-    {
+    private void drawEmptyRowHeader(GC gc, int x, int y, int width, int height) {
         gc.setBackground(getLabelProvider().getHeaderBackground(null, false));
 
         gc.fillRectangle(x, y, width, height + 1);
@@ -4938,10 +4714,8 @@ public abstract class LightGrid extends Canvas {
 
     /////////////////////////////////////////////////////////////////////////////////
     // DnD
-    /////////////////////////////////////////////////////////////////////////////////
 
-    private void addDragAndDropSupport()
-    {
+    private void addDragAndDropSupport() {
         final int operations = DND.DROP_MOVE | DND.DROP_COPY;// | DND.DROP_MOVE | DND.DROP_LINK | DND.DROP_DEFAULT;
 
         final DragSource source = new DragSource(this, operations);
@@ -5001,7 +4775,7 @@ public abstract class LightGrid extends Canvas {
                         if (selectedColumns.size() > 1 && !isDragSingleColumn()) {
                             StringBuilder text = new StringBuilder();
                             for (GridColumn column : selectedColumns) {
-                                if (text.length() > 0) text.append(", ");
+                                if (!text.isEmpty()) text.append(", ");
                                 text.append(getLabelProvider().getText(column));
                             }
                             event.data = text.toString();
@@ -5032,11 +4806,11 @@ public abstract class LightGrid extends Canvas {
 
                         StringBuilder text = new StringBuilder();
                         for (Integer row : rows) {
-                            if (text.length() > 0) text.append("\n");
+                            if (!text.isEmpty()) text.append("\n");
                             for (int i = 0; i < columns.size(); i++) {
                                 GridColumn column = columns.get(i);
                                 Object cellText = getContentProvider().
-                                    getCellValue(column, getRow(row), true);
+                                    getCellValue(column, gridRows[row], true);
 
                                 if (i > 0) text.append(", ");
                                 text.append(cellText);
@@ -5062,32 +4836,27 @@ public abstract class LightGrid extends Canvas {
         dropTarget.setTransfer(GridColumnTransfer.INSTANCE, TextTransfer.getInstance());
         dropTarget.addDropListener(new DropTargetListener() {
             @Override
-            public void dragEnter(DropTargetEvent event)
-            {
+            public void dragEnter(DropTargetEvent event) {
                 handleDragEvent(event);
             }
 
             @Override
-            public void dragLeave(DropTargetEvent event)
-            {
+            public void dragLeave(DropTargetEvent event) {
                 handleDragEvent(event);
             }
 
             @Override
-            public void dragOperationChanged(DropTargetEvent event)
-            {
+            public void dragOperationChanged(DropTargetEvent event) {
                 handleDragEvent(event);
             }
 
             @Override
-            public void dragOver(DropTargetEvent event)
-            {
+            public void dragOver(DropTargetEvent event) {
                 handleDragEvent(event);
             }
 
             @Override
-            public void drop(DropTargetEvent event)
-            {
+            public void drop(DropTargetEvent event) {
                 handleDragEvent(event);
                 if (event.detail == DND.DROP_MOVE) {
                     moveColumns(event);
@@ -5095,13 +4864,11 @@ public abstract class LightGrid extends Canvas {
             }
 
             @Override
-            public void dropAccept(DropTargetEvent event)
-            {
+            public void dropAccept(DropTargetEvent event) {
                 handleDragEvent(event);
             }
 
-            private void handleDragEvent(DropTargetEvent event)
-            {
+            private void handleDragEvent(DropTargetEvent event) {
                 if (!isDropSupported(event)) {
                     event.detail = DND.DROP_NONE;
                 } else {
@@ -5127,25 +4894,22 @@ public abstract class LightGrid extends Canvas {
                 return getColumn(dragPoint);
             }
 
-            private void moveColumns(DropTargetEvent event)
-            {
+            private void moveColumns(DropTargetEvent event) {
                 GridColumn overColumn = getOverColumn(event);
                 if (overColumn == null || draggingColumn == null || draggingColumn == overColumn) {
                     return;
                 }
-                IGridController gridController = getGridController();
-                if (gridController != null) {
-                    IGridController.DropLocation location;// = IGridController.DropLocation.SWAP;
+                IGridController.DropLocation location;// = IGridController.DropLocation.SWAP;
 
-                    Point dropPoint = getDisplay().map(null, LightGrid.this, new Point(event.x, event.y));
-                    Rectangle columnBounds = overColumn.getBounds();
-                    if (dropPoint.x > columnBounds.x + columnBounds.width / 2) {
-                        location = IGridController.DropLocation.DROP_AFTER;
-                    } else {
-                        location = IGridController.DropLocation.DROP_BEFORE;
-                    }
-                    gridController.moveColumn(draggingColumn.getElement(), overColumn.getElement(), location);
+                Point dropPoint = getDisplay().map(null, LightGrid.this, new Point(event.x, event.y));
+                Rectangle columnBounds = overColumn.getBounds();
+                if (dropPoint.x > columnBounds.x + columnBounds.width / 2) {
+                    location = IGridController.DropLocation.DROP_AFTER;
+                } else {
+                    location = IGridController.DropLocation.DROP_BEFORE;
                 }
+                getGridController().moveColumn(draggingColumn.getElement(), overColumn.getElement(), location);
+
                 draggingColumn = null;
             }
         });
@@ -5180,7 +4944,4 @@ public abstract class LightGrid extends Canvas {
 
     }
 
-
 }
-
-
