@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,7 +24,6 @@ import org.eclipse.jface.text.IFindReplaceTarget;
 import org.eclipse.jface.viewers.ISelection;
 import org.eclipse.jface.viewers.ISelectionProvider;
 import org.eclipse.jface.viewers.IStructuredSelection;
-import org.eclipse.jface.viewers.Viewer;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.dnd.Clipboard;
@@ -32,6 +31,7 @@ import org.eclipse.swt.dnd.HTMLTransfer;
 import org.eclipse.swt.dnd.TextTransfer;
 import org.eclipse.swt.dnd.Transfer;
 import org.eclipse.swt.events.*;
+import org.eclipse.swt.events.SelectionListener;
 import org.eclipse.swt.graphics.*;
 import org.eclipse.swt.layout.FillLayout;
 import org.eclipse.swt.layout.GridData;
@@ -53,10 +53,9 @@ import org.jkiss.dbeaver.model.data.hints.DBDAttributeHintProvider;
 import org.jkiss.dbeaver.model.data.hints.DBDCellHintProvider;
 import org.jkiss.dbeaver.model.data.hints.DBDValueHint;
 import org.jkiss.dbeaver.model.data.hints.DBDValueHintProvider;
-import org.jkiss.dbeaver.model.exec.DBCException;
-import org.jkiss.dbeaver.model.exec.DBCSession;
-import org.jkiss.dbeaver.model.exec.DBExecUtils;
+import org.jkiss.dbeaver.model.exec.*;
 import org.jkiss.dbeaver.model.impl.data.DBDValueError;
+import org.jkiss.dbeaver.model.impl.data.ResultSetHintContext;
 import org.jkiss.dbeaver.model.preferences.DBPPreferenceStore;
 import org.jkiss.dbeaver.model.runtime.VoidProgressMonitor;
 import org.jkiss.dbeaver.model.sql.SQLConstants;
@@ -68,10 +67,10 @@ import org.jkiss.dbeaver.ui.*;
 import org.jkiss.dbeaver.ui.controls.PropertyPageStandard;
 import org.jkiss.dbeaver.ui.controls.bool.BooleanMode;
 import org.jkiss.dbeaver.ui.controls.bool.BooleanStyleSet;
+import org.jkiss.dbeaver.ui.controls.findandreplace.FindReplaceOverlay;
 import org.jkiss.dbeaver.ui.controls.lightgrid.*;
 import org.jkiss.dbeaver.ui.controls.resultset.*;
 import org.jkiss.dbeaver.ui.controls.resultset.IResultSetController.RowPlacement;
-import org.jkiss.dbeaver.ui.controls.resultset.handler.ResultSetHandlerMain;
 import org.jkiss.dbeaver.ui.controls.resultset.handler.ResultSetPropertyTester;
 import org.jkiss.dbeaver.ui.controls.resultset.internal.ResultSetMessages;
 import org.jkiss.dbeaver.ui.controls.resultset.panel.valueviewer.ValueViewerPanel;
@@ -87,6 +86,7 @@ import org.jkiss.dbeaver.ui.navigator.database.NavigatorThemeSettings;
 import org.jkiss.dbeaver.ui.properties.PropertySourceDelegate;
 import org.jkiss.dbeaver.utils.ContentUtils;
 import org.jkiss.dbeaver.utils.GeneralUtils;
+import org.jkiss.dbeaver.utils.ListNode;
 import org.jkiss.utils.ArrayUtils;
 import org.jkiss.utils.CommonUtils;
 import org.jkiss.utils.Pair;
@@ -111,6 +111,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
     private Spreadsheet spreadsheet;
 
+    private SpreadsheetFindReplaceTarget findReplaceTarget;
+    private ResultsetFindReplaceOverlay findReplaceOverlay;
+
     @Nullable
     private DBDAttributeBinding curAttribute;
     private int columnOrder = SWT.DEFAULT;
@@ -131,7 +134,8 @@ public class SpreadsheetPresentation extends AbstractPresentation
     private boolean supportsAttributeFilter;
     private boolean autoFetchSegments;
     private boolean showAttributeIcons;
-    private boolean showAttributeDescription;
+    private ResultSetPreferences.ColumnHeaderExtraContent columnHeaderExtra;
+    private Map<DBDAttributeBinding, String> columnTypeDescriptions = Collections.emptyMap();
     private boolean calcColumnWidthByValue;
 
     private boolean rightJustifyNumbers = true;
@@ -195,15 +199,12 @@ public class SpreadsheetPresentation extends AbstractPresentation
             this);
         this.spreadsheet.setLayoutData(new GridData(GridData.FILL_BOTH));
 
-        this.spreadsheet.addSelectionListener(new SelectionAdapter() {
-            @Override
-            public void widgetSelected(SelectionEvent e) {
-                if (e.detail != SWT.DRAG && e.detail != SWT.DROP_DOWN) {
+        this.spreadsheet.addSelectionListener(SelectionListener.widgetSelectedAdapter(e -> {
+                if (e.detail != SWT.DRAG && e.detail != SWT.DROP_DOWN && e.data != null) {
                     updateGridCursor((GridCell) e.data);
                 }
                 fireSelectionChanged(new SpreadsheetSelectionImpl());
-            }
-        });
+            }));
         this.spreadsheet.addMouseWheelListener(e -> {
 
         });
@@ -228,6 +229,37 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
         trackPresentationControl();
         TextEditorUtils.enableHostEditorKeyBindingsSupport(controller.getSite(), spreadsheet);
+
+        this.findReplaceTarget = new SpreadsheetFindReplaceTarget(this.spreadsheet);
+        this.findReplaceOverlay = new ResultsetFindReplaceOverlay(
+            this.controller.getSite().getPart(),
+            this.spreadsheet,
+            this.findReplaceTarget,
+            this
+        ) {
+            @NotNull
+            @Override
+            protected Point obtainControlTopLeftPadding(@NotNull Control control) {
+                return new Point(spreadsheet.getRowHeaderWidth(), spreadsheet.getHeaderHeight());
+            }
+
+            @Override
+            protected boolean hasSelectionBoundsConflict(@Nullable ISelection selection, @NotNull Rectangle bounds) {
+                for (GridPos cellPos : spreadsheet.getSelection()) {
+                    if (spreadsheet.getCellBounds(cellPos.col, cellPos.row).intersects(bounds)) {
+                        return true;
+                    }
+                }
+                return false;
+            }
+        };
+        this.findReplaceOverlay.setFilterState(this.controller.getModel().getQuickFilter());
+    }
+
+    @NotNull
+    @Override
+    public FindReplaceOverlay getFindReplaceOverlay() {
+        return this.findReplaceOverlay;
     }
 
     @Override
@@ -361,6 +393,17 @@ public class SpreadsheetPresentation extends AbstractPresentation
         return null;
     }
 
+    @Nullable
+    public ResultSetValuePath getCurrentRowValuePath() {
+        if (controller.isRecordMode()) {
+            GridPos focusPos = spreadsheet.getFocusPos();
+            if (focusPos.row >= 0) {
+                return getRowValuePath(spreadsheet.getRow(focusPos.row));
+            }
+        }
+        return null;
+    }
+
     @Override
     public Point getCursorLocation() {
         GridPos focusPos = spreadsheet.getFocusPos();
@@ -379,6 +422,11 @@ public class SpreadsheetPresentation extends AbstractPresentation
     @Override
     protected void performHorizontalScroll(int scrollCount) {
         spreadsheet.scrollHorizontally(scrollCount);
+    }
+
+    private void revealCursor() {
+        GridPos position = spreadsheet.getCursorPosition();
+        spreadsheet.showItem(position.row);
     }
 
     void highlightRows(int firstLine, int lastLine, Color color) {
@@ -426,8 +474,19 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
     private void updateGridCursor(GridCell cell) {
         boolean changed;
-        IGridColumn newCol = cell == null ? null : cell.col;
-        IGridRow newRow = cell == null ? null : cell.row;
+        IGridColumn newCol;
+        IGridRow newRow;
+        if (cell == null) {
+            newCol = null;
+            newRow = null;
+        } else if (isArrayColAndFirstRow(cell.getColumn(), cell.getRow())) {
+            newCol = cell.getColumn().getParent();
+            newRow = cell.getRow();
+        } else {
+            newCol = cell.getColumn();
+            newRow = cell.getRow();
+        }
+        
         ResultSetRow curRow = controller.getCurrentRow();
         if (!controller.isRecordMode()) {
             changed = (newRow != null && curRow != newRow.getElement()) ||
@@ -462,7 +521,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
     @NotNull
     @Override
-    public Map<Transfer, Object> copySelection(ResultSetCopySettings settings) {
+    public Map<Transfer, Object> copySelection(@NotNull ResultSetCopySettings settings) {
         boolean copyHTML = settings.isCopyHTML();
 
         StringBuilder tdt = new StringBuilder();
@@ -546,6 +605,10 @@ public class SpreadsheetPresentation extends AbstractPresentation
             }
 
             DBDAttributeBinding column = getAttributeFromGrid(cell.col, cell.row);
+            if (column == null) {
+                log.debug("Null attribute for cell " + cell);
+                continue;
+            }
             Object value = spreadsheet.getContentProvider().getCellValue(cell.col, cell.row, false);
             //Object value = controller.getModel().getCellValue(column, row);
             if (binaryData == null && (column.getDataKind() == DBPDataKind.BINARY || column.getDataKind() == DBPDataKind.CONTENT)) {
@@ -576,7 +639,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
                 IValueController valueController = new SpreadsheetValueController(
                     controller,
-                    new ResultSetCellLocation(column, row, getRowNestedIndexes(cell.row)),
+                    makeResultSetCellLocation(column, row, cell.row),
                     IValueController.EditType.NONE,
                     null);
                 if (!valueController.isReadOnly()) {
@@ -622,6 +685,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
                 if (CommonUtils.isEmpty(strValue)) {
                     return;
                 }
+                boolean insertNewRows = settings.isInsertNewRows();
                 final Pair<GridPos, GridPos> targetRange;
                 if (spreadsheet.getItemCount() == 0) {
                     // A special case when the grid is empty
@@ -640,20 +704,23 @@ public class SpreadsheetPresentation extends AbstractPresentation
                 final GridPos rangeEnd = targetRange.getSecond();
                 int rowNum = rangeStart.row;
                 //boolean overNewRow = controller.getModel().getRow(rowNum).getState() == ResultSetRow.STATE_ADDED;
-                try (DBCSession session = DBUtils.openUtilSession(new VoidProgressMonitor(), controller.getDataContainer(), "Advanced paste")) {
+                DBSDataContainer dataContainer = controller.getDataContainer();
+                assert dataContainer != null;
+                try (DBCSession session = DBUtils.openUtilSession(new VoidProgressMonitor(), dataContainer, "Advanced paste")) {
 
                     String[][] newLines = parseGridLines(strValue, settings.isInsertMultipleRows(), settings.isIgnoreQuotes());
 
-                    // FIXME: do not create rows twice! Probably need to delete comment after testing. #9095
-                    /*if (overNewRow) {
-                        for (int i = 0 ; i < newLines.length - 1; i++) {
-                            controller.addNewRow(false, true, false);
+                    if (insertNewRows) {
+                        for (int i = 0; i < newLines.length; i++) {
+                            controller.addNewRow(RowPlacement.BEFORE_SELECTION, false, false);
                         }
                         spreadsheet.refreshRowsData();
-                    } else {*/
-                    while (rangeEnd == null && rowNum + newLines.length > spreadsheet.getItemCount()) {
-                        controller.addNewRow(RowPlacement.AT_END, false, false);
-                        spreadsheet.refreshRowsData();
+                        //rowNum++;
+                    } else {
+                        while (rangeEnd == null && rowNum + newLines.length > spreadsheet.getItemCount()) {
+                            controller.addNewRow(RowPlacement.AT_END, false, false);
+                            spreadsheet.refreshRowsData();
+                        }
                     }
                     //}
                     if (rowNum < 0 || rowNum >= spreadsheet.getItemCount()) {
@@ -668,7 +735,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
                             final DBDAttributeBinding attr = getAttributeFromGrid(colElement, gridRow);
                             final ResultSetRow row = getResultRowFromGrid(colElement, gridRow);
                             if (attr == null || row == null ||
-                                controller.getAttributeReadOnlyStatus(attr, true, true) != null
+                                controller.getAttributeReadOnlyStatus(attr, true, false) != null
                             ) {
                                 continue;
                             }
@@ -682,7 +749,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
                             }
                             new SpreadsheetValueController(
                                 controller,
-                                new ResultSetCellLocation(attr, row, getRowNestedIndexes(gridRow)),
+                                makeResultSetCellLocation(attr, row, gridRow),
                                 IValueController.EditType.NONE, null).updateValue(newValue, false);
 
                             colNum++;
@@ -728,7 +795,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
                     SpreadsheetValueController valueController = new SpreadsheetValueController(
                         controller,
-                        new ResultSetCellLocation(attr, row, getRowNestedIndexes(gridRow)),
+                        makeResultSetCellLocation(attr, row, gridRow),
                         IValueController.EditType.NONE, null);
 
                     Object newValue = null;
@@ -780,9 +847,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
     private Pair<GridPos, GridPos> getContinuousRange(@NotNull List<GridPos> selection) {
         return switch (selection.size()) {
             case 0 -> null;
-            case 1 -> new Pair<>(selection.get(0), null);
+            case 1 -> new Pair<>(selection.getFirst(), null);
             default -> {
-                GridPos min = selection.get(0);
+                GridPos min = selection.getFirst();
                 GridPos max = new GridPos(min);
 
                 for (int i = 0; i < selection.size(); i++) {
@@ -875,6 +942,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
         return lines.toArray(new String[lines.size()][]);
     }
 
+    @Nullable
     @Override
     public Control getControl() {
         return spreadsheet;
@@ -898,7 +966,36 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
         showAttrOrdering = preferenceStore.getBoolean(ResultSetPreferences.RESULT_SET_SHOW_ATTR_ORDERING);
         showAttributeIcons = controller.getPreferenceStore().getBoolean(ResultSetPreferences.RESULT_SET_SHOW_ATTR_ICONS);
-        showAttributeDescription = getPreferenceStore().getBoolean(ResultSetPreferences.RESULT_SET_SHOW_DESCRIPTION);
+        String headerExtraStr = getPreferenceStore().getString(ResultSetPreferences.RESULT_SET_COLUMN_HEADER_EXTRA);
+        if (CommonUtils.isEmpty(headerExtraStr)) {
+            // Backward compatibility: check old boolean preference
+            if (getPreferenceStore().getBoolean(ResultSetPreferences.RESULT_SET_SHOW_DESCRIPTION)) {
+                columnHeaderExtra = ResultSetPreferences.ColumnHeaderExtraContent.DESCRIPTION;
+            } else {
+                columnHeaderExtra = ResultSetPreferences.ColumnHeaderExtraContent.NOTHING;
+            }
+        } else {
+            columnHeaderExtra = CommonUtils.valueOf(
+                ResultSetPreferences.ColumnHeaderExtraContent.class,
+                headerExtraStr,
+                ResultSetPreferences.ColumnHeaderExtraContent.NOTHING
+            );
+        }
+        if (columnHeaderExtra == ResultSetPreferences.ColumnHeaderExtraContent.DATA_TYPE) {
+            Map<DBDAttributeBinding, String> typeDescs = new HashMap<>();
+            for (DBDAttributeBinding binding : controller.getModel().getVisibleAttributes()) {
+                String typeName = DBUtils.getFullTypeName(binding.getDataSource(), binding);
+                DBDRowIdentifier rowIdentifier = binding.getRowIdentifier();
+                if (rowIdentifier != null && rowIdentifier.hasAttribute(binding)
+                    && rowIdentifier.getUniqueKey().getConstraintType() == DBSEntityConstraintType.PRIMARY_KEY) {
+                    typeName = "PK " + typeName;
+                }
+                typeDescs.put(binding, typeName);
+            }
+            columnTypeDescriptions = typeDescs;
+        } else {
+            columnTypeDescriptions = Collections.emptyMap();
+        }
         supportsAttributeFilter =
             controller.getDataContainer() != null &&
                 (controller.getDecorator().getDecoratorFeatures() & IResultSetDecorator.FEATURE_FILTERS) != 0 &&
@@ -949,7 +1046,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
     public void fillMenu(@NotNull IMenuManager menu) {
         menu.add(ActionUtils.makeCommandContribution(
             controller.getSite(),
-            ResultSetHandlerMain.CMD_TOGGLE_PANELS,
+            IResultSetCommands.CMD_TOGGLE_PANELS,
             CommandContributionItem.STYLE_CHECK));
     }
 
@@ -987,12 +1084,26 @@ public class SpreadsheetPresentation extends AbstractPresentation
     void fillContextMenu(
         @NotNull IMenuManager manager,
         @Nullable IGridColumn colObject,
-        @Nullable IGridRow rowObject)
+        @Nullable IGridRow rowObject,
+        boolean columnHeaderMenu,
+        boolean rowHeaderMenu
+    )
     {
         boolean recordMode = controller.isRecordMode();
-        final DBDAttributeBinding attr = colObject == null ? getFocusAttribute() : getAttributeFromGrid(colObject, rowObject);
+        DBDAttributeBinding attr;
+        if (colObject == null) {
+            attr = getFocusAttribute();
+        } else if (isArrayColAndFirstRow(colObject, rowObject)) {
+            attr = getAttributeFromGrid(colObject.getParent(), rowObject);
+        } else {
+            attr = getAttributeFromGrid(colObject, rowObject);
+        }
         final ResultSetRow row = rowObject == null ? getFocusRow() : getResultRowFromGrid(colObject, rowObject);
-        controller.fillContextMenu(manager, attr, row, getRowNestedIndexes(rowObject));
+        IResultSetController.ContextMenuLocation menuLocation = columnHeaderMenu ?
+            IResultSetController.ContextMenuLocation.COLUMN_HEADER :
+                rowHeaderMenu ? IResultSetController.ContextMenuLocation.ROW_HEADER :
+                    IResultSetController.ContextMenuLocation.DATA;
+        controller.fillContextMenu(manager, attr, row, getRowNestedIndexes(rowObject), getRowValuePath(rowObject), menuLocation);
 
         if (colObject != null && rowObject == null) {
             final List<IGridColumn> selectedColumns = spreadsheet.getColumnSelection();
@@ -1020,10 +1131,10 @@ public class SpreadsheetPresentation extends AbstractPresentation
                     if (allUnpinned != allPinned) {
                         final String pinnedTitle = allUnpinned
                             ? selectedColumns.size() == 1
-                            ? NLS.bind(ResultSetMessages.controls_resultset_viewer_pin_column, ((DBDAttributeBinding) selectedColumns.get(0).getElement()).getName())
+                            ? NLS.bind(ResultSetMessages.controls_resultset_viewer_pin_column, ((DBDAttributeBinding) selectedColumns.getFirst().getElement()).getName())
                             : NLS.bind(ResultSetMessages.controls_resultset_viewer_pin_columns, selectedColumns.size())
                             : selectedColumns.size() == 1
-                            ? NLS.bind(ResultSetMessages.controls_resultset_viewer_unpin_column, ((DBDAttributeBinding) selectedColumns.get(0).getElement()).getName())
+                            ? NLS.bind(ResultSetMessages.controls_resultset_viewer_unpin_column, ((DBDAttributeBinding) selectedColumns.getFirst().getElement()).getName())
                             : NLS.bind(ResultSetMessages.controls_resultset_viewer_unpin_columns, selectedColumns.size());
 
                         manager.insertBefore(IResultSetController.MENU_GROUP_ADDITIONS, new Action(pinnedTitle) {
@@ -1061,7 +1172,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
                     String hideTitle;
                     if (selectedColumns.size() == 1) {
-                        DBDAttributeBinding columnToHide = (DBDAttributeBinding) selectedColumns.get(0).getElement();
+                        DBDAttributeBinding columnToHide = (DBDAttributeBinding) selectedColumns.getFirst().getElement();
                         hideTitle = NLS.bind(ResultSetMessages.controls_resultset_viewer_hide_column_x, columnToHide.getName());
                     } else {
                         hideTitle = NLS.bind(ResultSetMessages.controls_resultset_viewer_hide_columns_x, selectedColumns.size());
@@ -1134,6 +1245,15 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
         return maxIndex;
     }
+    
+    private boolean isArrayColAndFirstRow(@Nullable IGridColumn colObject, @Nullable IGridRow rowObject) {
+        return colObject != null
+            && colObject.getParent() != null
+            && colObject.getParent().getElement() instanceof DBDAttributeBinding binding
+            && binding.getDataKind() == DBPDataKind.ARRAY
+            && rowObject != null
+            && rowObject.getParent() == null;
+    }
 
     /////////////////////////////////////////////////
     // Edit
@@ -1160,7 +1280,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             return null;
         }
 
-        ResultSetCellLocation cellLocation = new ResultSetCellLocation(attr, row, getRowNestedIndexes(focusRow));
+        ResultSetCellLocation cellLocation = makeResultSetCellLocation(attr, row, focusRow);
         Object cellValue = getController().getModel().getCellValue(cellLocation);
         if (cellValue instanceof DBDValueSurrogate) {
             return null;
@@ -1236,18 +1356,17 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
         if (activeInlineEditor != null) {
             activeInlineEditor.createControl();
-            if (activeInlineEditor.getControl() != null) {
-                activeInlineEditor.getControl().setFocus();
-                activeInlineEditor.getControl().setData(DATA_VALUE_CONTROLLER, valueController);
-                activeInlineEditor.getControl().addKeyListener(KeyListener.keyPressedAdapter(
-                    e -> scrollToRow(RowPosition.CURRENT)
-                ));
-                activeInlineEditor.getControl().addTraverseListener(e -> {
+            Control control = activeInlineEditor.getControl();
+            if (control != null) {
+                control.setFocus();
+                control.setData(DATA_VALUE_CONTROLLER, valueController);
+                control.addKeyListener(KeyListener.keyPressedAdapter(e -> revealCursor()));
+                control.addTraverseListener(e -> {
                     if (e.keyCode == SWT.ESC || e.keyCode == SWT.CR) {
-                        scrollToRow(RowPosition.CURRENT);
+                        revealCursor();
                     }
                 });
-                scrollToRow(RowPosition.CURRENT);
+                revealCursor();
             }
         }
         if (activeInlineEditor instanceof IValueEditorStandalone editorStandalone) {
@@ -1311,18 +1430,18 @@ public class SpreadsheetPresentation extends AbstractPresentation
     public void navigateLink(@NotNull GridCell cell, int x, int y, int state) {
         final DBDAttributeBinding attr = getAttributeFromGrid(cell.col, cell.row);
         final ResultSetRow row = getResultRowFromGrid(cell.col, cell.row);
+        if (attr == null || row == null) {
+            return;
+        }
 
-        Object value = controller.getModel().getCellValue(
-            new ResultSetCellLocation(attr, row, getRowNestedIndexes(cell.row)));
+        Object value = controller.getModel().getCellValue(makeResultSetCellLocation(attr, row, cell.row));
         if ((value instanceof Boolean || value instanceof Number || value == null) && isShowAsCheckbox(attr)) {
             if (!getPreferenceStore().getBoolean(ResultSetPreferences.RESULT_SET_CLICK_TOGGLE_BOOLEAN)) {
                 return;
             }
             if (!DBExecUtils.isAttributeReadOnly(attr)) {
                 // Switch boolean value
-                toggleBooleanValue(
-                    new ResultSetCellLocation(attr, row, getRowNestedIndexes(cell.row)),
-                    value);
+                toggleBooleanValue(makeResultSetCellLocation(attr, row, cell.row), value);
             }
         } else if (isAttributeExpandable(cell.row, attr)) {
             spreadsheet.toggleCellValue(cell.col, cell.row);
@@ -1343,16 +1462,21 @@ public class SpreadsheetPresentation extends AbstractPresentation
                         true);
                     dialog.open();
                 }
+            } else if (!isComplexValuesExpansionEnabled() && (value instanceof DBDComposite || value instanceof Collection<?>)) {
+                this.controller.activatePanel(ValueViewerPanel.PANEL_ID, true, true);
             } else {
                 spreadsheet.getCellRenderer().executeHintAction(cell.row, cell.col, cellInfo, x, y, state);
             }
         }
     }
 
-    public void toggleCellValue(IGridColumn columnElement, IGridRow rowElement) {
+    public void toggleCellValue(@NotNull IGridColumn columnElement, @NotNull IGridRow rowElement) {
         final DBDAttributeBinding attr = getAttributeFromGrid(columnElement, rowElement);
         final ResultSetRow row = getResultRowFromGrid(columnElement, rowElement);
-        final ResultSetCellLocation cellLocation = new ResultSetCellLocation(attr, row, getRowNestedIndexes(rowElement));
+        if (attr == null || row == null) {
+            return;
+        }
+        final ResultSetCellLocation cellLocation = makeResultSetCellLocation(attr, row, rowElement);
 
         if (isShowAsCheckbox(attr)) {
             // Switch boolean value
@@ -1384,7 +1508,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             IValueController.EditType.NONE, null);
         // Update value in all selected rows
         for (ResultSetRow selRow : getSelection().getSelectedRows()) {
-            valueController.setCurRow(selRow, cellLocation.getRowIndexes());
+            valueController.setCurRow(selRow, cellLocation.getRowIndexes(), cellLocation.getValuePath());
             valueController.updateValue(value, true);
         }
     }
@@ -1393,10 +1517,13 @@ public class SpreadsheetPresentation extends AbstractPresentation
     // Themes
 
     @Override
-    protected void applyThemeSettings(ITheme currentTheme) {
+    protected void applyThemeSettings(@NotNull ITheme currentTheme) {
         this.spreadsheet.setFont(ResultSetThemeSettings.instance.resultSetFont);
 
         {
+            this.backgroundDefault = null;
+            this.foregroundDefault = null;
+
             if (this.cellHeaderSelectionBackground != null) {
                 UIUtils.dispose(this.cellHeaderSelectionBackground);
                 this.cellHeaderSelectionBackground = null;
@@ -1433,7 +1560,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             dataContainer.isFeatureSupported(DBSDataContainer.FEATURE_DATA_FILTER);
     }
 
-    public void changeSorting(Object columnElement, final int state) {
+    public void changeSorting(@Nullable Object columnElement, final int state) {
         if (columnElement == null) {
             columnOrder = columnOrder == SWT.DEFAULT ? SWT.UP : (columnOrder == SWT.UP ? SWT.DOWN : SWT.DEFAULT);
             spreadsheet.refreshData(false, true, false);
@@ -1451,7 +1578,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
     ///////////////////////////////////////////////
     // Filtering
 
-    void handleColumnIconClick(Object columnElement) {
+    void handleColumnIconClick(@NotNull Object columnElement) {
         if (!(columnElement instanceof DBDAttributeBinding attributeBinding)) {
             log.debug("Unable to show distinct filter for columnElement" + columnElement);
             return;
@@ -1462,12 +1589,13 @@ public class SpreadsheetPresentation extends AbstractPresentation
     ///////////////////////////////////////////////
     // Misc
 
+    @NotNull
     public DBPPreferenceStore getPreferenceStore() {
         return controller.getPreferenceStore();
     }
 
     @Override
-    public <T> T getAdapter(Class<T> adapter) {
+    public <T> T getAdapter(@NotNull Class<T> adapter) {
         if (adapter == IPropertySheetPage.class) {
             // Show cell properties
             PropertyPageStandard page = new PropertyPageStandard();
@@ -1477,8 +1605,10 @@ public class SpreadsheetPresentation extends AbstractPresentation
                     final ResultSetRow row = getResultRowFromGrid(cell.col, cell.row);
                     final SpreadsheetValueController valueController = new SpreadsheetValueController(
                         controller,
-                        new ResultSetCellLocation(attr, row, getRowNestedIndexes(cell.row)),
-                        IValueController.EditType.NONE, null);
+                        makeResultSetCellLocation(attr, row, cell.row),
+                        IValueController.EditType.NONE,
+                        null
+                    );
                     PropertyCollector props = new PropertyCollector(valueController.getBinding().getAttribute(), false);
                     props.collectProperties();
                     valueController.getValueManager().contributeProperties(props, valueController);
@@ -1488,7 +1618,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             });
             return adapter.cast(page);
         } else if (adapter == IFindReplaceTarget.class) {
-            return adapter.cast(SpreadsheetFindReplaceTarget.getInstance().owned(this));
+            return adapter.cast(this.findReplaceTarget);
         }
         return null;
     }
@@ -1526,6 +1656,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
         return highlightScopeLastLine;
     }
 
+    @NotNull
     @Override
     public SpreadsheetSelectionImpl getSelection() {
         return new SpreadsheetSelectionImpl();
@@ -1598,7 +1729,8 @@ public class SpreadsheetPresentation extends AbstractPresentation
         boolean pin = pinnedAttrsCount > 0;
         int order = delta > 0 ? -1 : 1;
         // right to left while shifting right, left to right while shifting left
-        constraintsToMove.sort((a, b) -> Integer.compare(getConstraintPosition(a, pin), getConstraintPosition(b, pin)) * order);
+        constraintsToMove.sort((a, b) ->
+            Integer.compare(getConstraintPosition(a, pin), getConstraintPosition(b, pin)) * order);
         List<DBDAttributeConstraint> allConstraints = getOrderedConstraints(dataFilter, pin);
         int leftmostIndex = constraintsToMove.stream().mapToInt(c -> getConstraintPosition(c, pin)).min().getAsInt();
         int rightmostIndex = constraintsToMove.stream().mapToInt(c -> getConstraintPosition(c, pin)).max().getAsInt();
@@ -1622,7 +1754,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
     }
 
     @Override
-    public void moveColumn(Object dragColumn, Object dropColumn, DropLocation location) {
+    public void moveColumn(@NotNull Object dragColumn, @NotNull Object dropColumn, @NotNull DropLocation location) {
         if (dragColumn instanceof DBDAttributeBinding dragBinding && dropColumn instanceof DBDAttributeBinding dropBinding) {
             final DBDDataFilter dataFilter = new DBDDataFilter(controller.getModel().getDataFilter());
             final DBDAttributeConstraint dragC = dataFilter.getConstraint(dragBinding);
@@ -1635,7 +1767,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             int targetPosition = getConstraintPosition(dropC, pin);
             switch (location) {
                 case DROP_AFTER:
-                    if (sourcePosition > targetPosition && targetPosition < dataFilter.getConstraints().size() - 1) {
+                    if (sourcePosition > targetPosition && targetPosition < dataFilter.getConstraintsCount() - 1) {
                         targetPosition++;
                     }
                     break;
@@ -1690,14 +1822,14 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
     @NotNull
     private static List<DBDAttributeConstraint> getOrderedConstraints(@NotNull DBDDataFilter filter, boolean pin) {
-        final List<DBDAttributeConstraint> constraints = filter.getConstraints();
+        DBDAttributeConstraint[] constraints = filter.getConstraints();
         if (pin) {
-            return constraints.stream()
+            return Arrays.stream(constraints)
                 .filter(x -> x.hasOption(DBDAttributeConstraintBase.ATTR_OPTION_PINNED))
                 .sorted(Comparator.comparing(x -> x.getOption(DBDAttributeConstraintBase.ATTR_OPTION_PINNED)))
                 .collect(Collectors.toList());
         } else {
-            return constraints.stream()
+            return Arrays.stream(constraints)
                 .sorted(Comparator.comparing(DBDAttributeConstraintBase::getVisualPosition))
                 .collect(Collectors.toList());
         }
@@ -1708,14 +1840,17 @@ public class SpreadsheetPresentation extends AbstractPresentation
         return controller.isRecordMode();
     }
 
+    @NotNull
     public Color getBackgroundDeleted() {
         return ResultSetThemeSettings.instance.backgroundDeleted;
     }
 
+    @NotNull
     public Color getBackgroundModified() {
         return ResultSetThemeSettings.instance.backgroundModified;
     }
 
+    @Nullable
     private DBDAttributeBinding getAttributeFromGrid(IGridColumn colObject, IGridRow rowObject) {
         if (controller.isRecordMode()) {
             if (rowObject == null) {
@@ -1743,7 +1878,8 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
     }
 
-    private ResultSetRow getResultRowFromGrid(IGridColumn colObject, IGridRow rowObject) {
+    @Nullable
+    private ResultSetRow getResultRowFromGrid(@Nullable IGridColumn colObject, @Nullable IGridRow rowObject) {
         if (controller.isRecordMode()) {
             return colObject == null ? null : (ResultSetRow) colObject.getElement();
         } else {
@@ -1751,16 +1887,16 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
     }
 
-        private boolean isAttributeExpandable(@Nullable IGridRow row, @NotNull DBSAttributeBase attr) {
-        if (attr.getDataKind() == DBPDataKind.STRUCT && controller.isRecordMode()) {
-            return true;
+    private boolean isAttributeExpandable(@Nullable IGridRow row, @NotNull DBSAttributeBase attr) {
+        if ((attr.getDataKind() == DBPDataKind.STRUCT || attr.getDataKind() == DBPDataKind.ARRAY) && controller.isRecordMode()) {
+            return this.isComplexValuesExpansionEnabled();
         }
 
         if (attr instanceof DBDAttributeBinding binding) {
             for (DBDAttributeBinding cur = binding; cur != null; cur = cur.getParentObject()) {
                 final DBPDataKind kind = cur.getDataKind();
                 if (kind == DBPDataKind.ARRAY) {
-                    return true;
+                    return this.isComplexValuesExpansionEnabled();
                 }
             }
         }
@@ -1884,6 +2020,17 @@ public class SpreadsheetPresentation extends AbstractPresentation
             return getRowNestedIndexes(row);
         }
 
+        @Nullable
+        @Override
+        public ResultSetValuePath getElementValuePath(@NotNull Object element) {
+            if (controller.isRecordMode()) {
+                IGridRow row = spreadsheet.getRow(((GridPos) element).row);
+                return row == null ? null : getRowValuePath(row);
+            } else {
+                return null;
+            }
+        }
+
         @Override
         public int getSelectedColumnCount() {
             return spreadsheet.getColumnSelectionSize();
@@ -1914,9 +2061,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
                 } else {
                     int[] selectedRecords = controller.getSelectedRecords();
                     List<Object> rows = new ArrayList<>(selectedRecords.length);
-                    for (int i = 0; i < selectedRecords.length; i++) {
-                        if (selectedRecords[i] < controller.getModel().getRowCount()) {
-                            rows.add(controller.getModel().getRow(selectedRecords[i]));
+                    for (int selectedRecord : selectedRecords) {
+                        if (selectedRecord < controller.getModel().getRowCount()) {
+                            rows.add(controller.getModel().getRow(selectedRecord));
                         }
                     }
                     return rows.toArray();
@@ -1924,7 +2071,8 @@ public class SpreadsheetPresentation extends AbstractPresentation
             } else {
                 // rows
                 if (!recordMode) {
-                    return model.getAllRows().toArray();
+                    List<ResultSetRow> rows = model.getAllRows();
+                    return rows.toArray();
                 } else {
                     DBDAttributeBinding[] columns = model.getVisibleAttributes().toArray(new DBDAttributeBinding[model.getVisibleAttributeCount()]);
                     if (columnOrder != SWT.NONE && columnOrder != SWT.DEFAULT) {
@@ -1944,7 +2092,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
                 };
             } else if (controller.isRecordMode()) {
                 if (item.getElement() instanceof DBDComplexValue) {
-                    return true;
+                    return isComplexValuesExpansionEnabled();
                 }
             }
             return false;
@@ -1959,6 +2107,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
                         binding,
                         controller.getCurrentRow(),
                         getRowNestedIndexes(item),
+                        getRowValuePath(item),
                         false);
                     if (cellValue instanceof Collection<?> col) {
                         return col.toArray();
@@ -1984,6 +2133,65 @@ public class SpreadsheetPresentation extends AbstractPresentation
             } else if (item.getElement() instanceof DBDComposite composite) {
                 // This happens in record mode and dynamic databases
                 return composite.getAttributes();
+            } else if (controller.isRecordMode()) {
+                ListNode<DBSAttributeBase> subpath = null;
+                DBDComposite subrootComposite = null;
+                { // traverse up till the first explicitly represented composite value, whose nested content info we are trying to obtain
+                    IGridItem node = item;
+                    IGridItem parent = node.getParent();
+                    while (node.getElement() instanceof DBSAttributeBase attr && parent != null && subrootComposite == null) {
+                        subpath = ListNode.push(subpath, attr);
+                        if (parent.getElement() instanceof DBDComposite c) {
+                            subrootComposite = c;
+                        }
+                        node = parent;
+                        parent = node.getParent();
+                    }
+                }
+
+                if (subrootComposite == null) {
+                    return null;
+                }
+
+                DBDComposite composite = subrootComposite;
+                for (ListNode<DBSAttributeBase> subpathNode = subpath; subpathNode != null; subpathNode = subpathNode.next) {
+                    DBSAttributeBase compositeAttr = subpathNode.data;
+                    Object attributeValue;
+                    try {
+                        attributeValue = composite.getAttributeValue(compositeAttr);
+                    } catch (DBCException e) {
+                        log.debug("Failed to obtain composite attribute value while trying to obtain grid node's children info", e);
+                        return null;
+                    }
+                    if (compositeAttr.getDataKind() == DBPDataKind.STRUCT && attributeValue instanceof DBDComposite nestedComposite) {
+                        if (subpathNode.next == null) {
+                            return nestedComposite.getAttributes();
+                        } else {
+                            composite = nestedComposite;
+                        }
+                    } else if (compositeAttr.getDataKind() == DBPDataKind.ARRAY && attributeValue instanceof Collection<?> collection) {
+                        if (subpathNode.next == null) {
+                            return collection.toArray();
+                        } else {
+                            // should never happen, because collection items already represented explicitly
+                            //                      and thus shouldn't be traversed through
+                            // we should've stop at the previous step facing its item value
+                            log.debug(
+                                "Unexpected collection object found in the middle of non-bound grid hierarchy subpath" +
+                                "while trying to obtain grid node's children info: " +
+                                compositeAttr + " - " + attributeValue
+                            );
+                            return null;
+                        }
+                    } else {
+                        log.debug(
+                            "An item of an unexpected kind found in the grid items hierarchy " +
+                            "while trying to obtain grid node's children info - it is both non-collection and non-composite: " +
+                            compositeAttr + " - " + attributeValue
+                        );
+                        return null; // should never happen
+                    }
+                }
             }
 
             return null;
@@ -1996,8 +2204,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
 
             // Get indexes for parent node
-            int[] nestedIndexes = getRowNestedIndexes(rowElement);
-            final ResultSetCellLocation cellLocation = new ResultSetCellLocation(attr, row, nestedIndexes);
+            final ResultSetCellLocation cellLocation = makeResultSetCellLocation(attr, row, rowElement);
             final Object cellValue = controller.getModel().getCellValue(cellLocation);
 
             if (cellValue instanceof List<?>) {
@@ -2026,6 +2233,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             return SWT.NONE;
         }
 
+        @NotNull
         @Override
         public ElementState getDefaultState(@NotNull IGridColumn element) {
             if (element.getElement() instanceof DBDAttributeBinding binding) {
@@ -2056,6 +2264,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             return ElementState.NONE;
         }
 
+        @NotNull
         @Override
         public IGridStatusColumn[] getStatusColumns() {
             return new IGridStatusColumn[] {
@@ -2100,6 +2309,17 @@ public class SpreadsheetPresentation extends AbstractPresentation
                             if (rowIdentifier == null) {
                                 return "Table metadata not found. Data edit is not possible.";
                             }
+                            DBCExecutionContext executionContext = getController().getExecutionContext();
+                            if (executionContext != null) {
+                                boolean useAllColumnsAsKey = executionContext
+                                    .getDataSource()
+                                    .getContainer()
+                                    .getPreferenceStore()
+                                    .getBoolean(ResultSetPreferences.RS_EDIT_USE_ALL_COLUMNS);
+                                if (useAllColumnsAsKey) {
+                                    return "Virtual key is used";
+                                }
+                            }
                             if (rowIdentifier.isIncomplete()) {
                                 return "No unique key was found. Data modification is not possible.";
                             }
@@ -2125,7 +2345,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
 
         @Override
-        public boolean isVoidCell(IGridColumn gridColumn, IGridRow gridRow) {
+        public boolean isVoidCell(@NotNull IGridColumn gridColumn, @NotNull IGridRow gridRow) {
             return getCellValue(gridColumn, gridRow, false) == DBDVoid.INSTANCE;
         }
 
@@ -2159,11 +2379,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
 
         @Override
-        public boolean isElementReadOnly(IGridColumn element) {
-            if (element.getElement() instanceof DBDAttributeBinding) {
-                return controller.getAttributeReadOnlyStatus(
-                    (DBDAttributeBinding) element.getElement(),
-                    true, true) != null;
+        public boolean isElementReadOnly(@NotNull IGridColumn element) {
+            if (element.getElement() instanceof DBDAttributeBinding binding) {
+                return controller.getAttributeReadOnlyStatus(binding, true, false) != null;
             }
             return false;
         }
@@ -2180,7 +2398,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             for (int i = 0; i < spreadsheet.getColumnCount(); i++) {
                 Object cellValue = getCellValue(spreadsheet.getColumn(i), row, false);
                 if (cellValue instanceof DBDComplexValue) {
-                    return true;
+                    return isComplexValuesExpansionEnabled();
                 }
             }
             return false;
@@ -2192,9 +2410,12 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
 
         @Override
-        public void validateDataPresence(IGridColumn gridColumn, IGridRow gridRow) {
+        public void validateDataPresence(@NotNull IGridColumn gridColumn, @NotNull IGridRow gridRow) {
             // Check for next segment read
             ResultSetRow row = getResultRowFromGrid(gridColumn, gridRow);
+            if (row == null) {
+                return;
+            }
             int rowNum = row.getVisualNumber();
             if (rowNum > 0 &&
                 rowNum == controller.getModel().getRowCount() - 1 &&
@@ -2202,7 +2423,8 @@ public class SpreadsheetPresentation extends AbstractPresentation
                 !controller.isRefreshInProgress() &&
                 !(controller.getContainer().getDataContainer() != null && controller.getContainer().getDataContainer().isFeatureSupported(DBSDataContainer.FEATURE_DATA_MODIFIED_ON_REFRESH)) &&
                 !(getPreferenceStore().getInt(ModelPreferences.RESULT_SET_MAX_ROWS) < getSpreadsheet().getMaxVisibleRows()) &&
-                (controller.isRecordMode() || spreadsheet.isRowVisible(rowNum))) {
+                (controller.isRecordMode() || spreadsheet.isRowVisible(rowNum))
+            ) {
                 controller.readNextSegment();
             }
         }
@@ -2230,7 +2452,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
                         info.state |= booleanStyles.getMode() == BooleanMode.TEXT ? STATE_TOGGLE : STATE_LINK;
                     } else if (
                         (cellValue instanceof DBDCollection col && !col.isEmpty()) ||
-                        (cellValue instanceof DBDComposite && controller.isRecordMode())
+                        (cellValue instanceof DBDComposite)
                     ) {
                         if (!DBUtils.isNullValue(cellValue)) {
                             info.state |= STATE_LINK;
@@ -2277,7 +2499,8 @@ public class SpreadsheetPresentation extends AbstractPresentation
                 }
                 // Collections
                 if (info.image == null && cellValue instanceof DBDComplexValue cv && !cv.isNull() &&
-                    (!(cellValue instanceof Collection<?> col && col.isEmpty()))
+                    (!(cellValue instanceof Collection<?> col && col.isEmpty())) &&
+                    isComplexValuesExpansionEnabled()
                 ) {
                     final GridCell cell = new GridCell(colElement, rowElement);
                     boolean cellExpanded = spreadsheet.isCellExpanded(cell);
@@ -2311,17 +2534,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
             return info;
         }
 
-        @Override
-        public void dispose() {
-        }
-
-        @Override
-        public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
-        }
-
         @Nullable
         @Override
-        public Object getCellValue(IGridColumn gridColumn, IGridRow gridRow, boolean formatString) {
+        public Object getCellValue(@NotNull IGridColumn gridColumn, @NotNull IGridRow gridRow, boolean formatString) {
             final Object value = getCellValue(gridColumn, gridRow, getRowNestedIndexes(gridRow), false);
             if (formatString) {
                 return formatValue(gridColumn, gridRow, value);
@@ -2340,13 +2555,15 @@ public class SpreadsheetPresentation extends AbstractPresentation
             if (gridRow.getParent() != null && !spreadsheet.isCellExpanded(gridRow.getParent(), gridColumn)) {
                 return DBDVoid.INSTANCE;
             }
+
             DBDAttributeBinding attr = getAttributeFromGrid(gridColumn, gridRow);
             ResultSetRow row = getResultRowFromGrid(gridColumn, gridRow);
             if (attr == null || row == null) {
                 return null;
             }
 
-            return controller.getModel().getCellValue(attr, row, rowIndexes, retrieveDeepestCollectionElement);
+            ResultSetValuePath valuePath = getRowValuePath(gridRow);
+            return controller.getModel().getCellValue(attr, row, rowIndexes, valuePath, retrieveDeepestCollectionElement);
         }
 
         @Nullable
@@ -2413,7 +2630,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             }
         }
 
-        public int getCellAlign(@Nullable DBDAttributeBinding attr, ResultSetRow row, Object cellValue) {
+        public int getCellAlign(@Nullable DBDAttributeBinding attr, @Nullable ResultSetRow row, @Nullable Object cellValue) {
             if (!controller.isRecordMode()) {
                 if (attr != null) {
                     if (cellValue instanceof DBDCollection) {
@@ -2447,10 +2664,19 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
 
         @Nullable
-        private Color getCellForeground(DBDAttributeBinding attribute, ResultSetRow row, Object cellValue, Color background, boolean selected) {
+        private Color getCellForeground(
+            @Nullable DBDAttributeBinding attribute,
+            @Nullable ResultSetRow row,
+            @Nullable Object cellValue,
+            @Nullable Color background,
+            boolean selected
+        ) {
+            if (attribute == null || row == null) {
+                return ResultSetThemeSettings.instance.foregroundNull;
+            }
             if (selected) {
                 Color fg = ResultSetThemeSettings.instance.foregroundSelected;
-                if (colorizeDataTypes && isSimpleAttribute(attribute) && !DBUtils.isNullValue(cellValue)) {
+                if (colorizeDataTypes && !DBUtils.isNullValue(cellValue)) {
                     Color color = dataTypesForegrounds.get(attribute.getDataKind());
                     if (color != null) {
                         RGB mixRGB = UIUtils.blend(
@@ -2497,7 +2723,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
                 if (DBUtils.isNullValue(cellValue)) {
                     return ResultSetThemeSettings.instance.foregroundNull;
                 } else {
-                    if (colorizeDataTypes && isSimpleAttribute(attribute)) {
+                    if (colorizeDataTypes) {
                         Color color = dataTypesForegrounds.get(attribute.getDataKind());
                         if (color != null) {
                             return color;
@@ -2509,9 +2735,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
 
         private Color getCellBackground(
-            DBDAttributeBinding attribute,
-            ResultSetRow row,
-            Object cellValue,
+            @NotNull DBDAttributeBinding attribute,
+            @NotNull ResultSetRow row,
+            @Nullable Object cellValue,
             int rowPosition,
             boolean cellSelected,
             boolean ignoreRowSelection)
@@ -2548,10 +2774,6 @@ public class SpreadsheetPresentation extends AbstractPresentation
                 );
                 return UIUtils.getSharedTextColors().getColor(mixRGB);
             }
-
-            final SpreadsheetFindReplaceTarget findReplaceTarget = SpreadsheetFindReplaceTarget
-                .getInstance()
-                .owned(SpreadsheetPresentation.this);
 
             if (findReplaceTarget.isSessionActive()) {
                 boolean hasScope = highlightScopeFirstLine >= 0 && highlightScopeLastLine >= 0;
@@ -2652,11 +2874,10 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
         @NotNull
         @Override
-        public String getCellLinkText(IGridColumn colElement, IGridRow rowElement) {
+        public String getCellLinkText(@NotNull IGridColumn colElement, @NotNull IGridRow rowElement) {
             DBDAttributeBinding attr = getAttributeFromGrid(colElement, rowElement);
             ResultSetRow row = getResultRowFromGrid(colElement, rowElement);
-            Object value = controller.getModel().getCellValue(
-                new ResultSetCellLocation(attr, row, getRowNestedIndexes(rowElement)));
+            Object value = controller.getModel().getCellValue(makeResultSetCellLocation(attr, row, rowElement));
 
             List<IGridHint> cellHints = getCellHints(colElement, rowElement, value, DBDValueHintProvider.OPTION_ACTION_TOOLTIP);
             if (cellHints != null) {
@@ -2673,9 +2894,10 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
 
         @Override
-        public String getCellToolTip(IGridColumn colElement, IGridRow rowElement) {
+        public String getCellToolTip(@NotNull IGridColumn colElement, @NotNull IGridRow rowElement) {
             Object cellValue = getCellValue(colElement, rowElement, false);
             StringBuilder toolTip = new StringBuilder();
+
             toolTip.append(formatValue(colElement, rowElement, cellValue));
 
             // Add tips
@@ -2701,8 +2923,14 @@ public class SpreadsheetPresentation extends AbstractPresentation
             return toolTip.toString();
         }
 
+        @Nullable
         @Override
-        public List<IGridHint> getCellHints(IGridColumn colElement, IGridRow rowElement, Object cellValue, int options) {
+        public List<IGridHint> getCellHints(
+            @NotNull IGridColumn colElement,
+            @NotNull IGridRow rowElement,
+            @Nullable Object cellValue,
+            int options
+        ) {
             DBDAttributeBinding attr = getAttributeFromGrid(colElement, rowElement);
             if (attr == null) {
                 return null;
@@ -2716,7 +2944,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
             if ((IGridContentProvider.STATE_EXPANDED & cellInfo.state) != 0) {
                 hintOptions |= DBDValueHintProvider.OPTION_ROW_EXPANDED;
             }
-
+            if (controller.isRecordMode()) {
+                hintOptions |= DBDValueHintProvider.OPTION_RECORD_MODE;
+            }
             List<IGridHint> gridHints = null;
             for (DBDCellHintProvider hintProvider : controller.getModel().getHintContext().getCellHintProviders(attr)) {
                 DBDValueHint[] valueHints = hintProvider.getCellHints(
@@ -2739,8 +2969,9 @@ public class SpreadsheetPresentation extends AbstractPresentation
             return gridHints;
         }
 
+        @Nullable
         @Override
-        public List<IGridHint> getColumnHints(IGridItem element, int options) {
+        public List<IGridHint> getColumnHints(@NotNull IGridItem element, int options) {
             DBDAttributeBinding attr = element instanceof IGridColumn gc ? getAttributeFromGrid(gc, null) : null;
             if (attr == null) {
                 return null;
@@ -2768,7 +2999,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
         }
 
         @Override
-        public int getColumnHintsWidth(IGridColumn colElement) {
+        public int getColumnHintsWidth(@NotNull IGridColumn colElement) {
             DBDAttributeBinding attr = colElement.getElement() instanceof DBDAttributeBinding ab ? ab : null;
             if (attr == null) {
                 return 0;
@@ -2790,33 +3021,84 @@ public class SpreadsheetPresentation extends AbstractPresentation
     }
 
     // Simple attribute is attribute which is not a part of FK or PK
-    private boolean isSimpleAttribute(DBDAttributeBinding attr) {
+    private boolean isSimpleAttribute(@NotNull DBDAttributeBinding attr) {
         DBDRowIdentifier rowIdentifier = attr.getRowIdentifier();
         return CommonUtils.isEmpty(attr.getReferrers()) &&
                (rowIdentifier == null || !rowIdentifier.hasAttribute(attr) ||
                 rowIdentifier.getUniqueKey().getConstraintType() != DBSEntityConstraintType.PRIMARY_KEY);
     }
 
-    private static boolean isHyperlinkText(String strValue) {
+    private static boolean isHyperlinkText(@NotNull String strValue) {
         return strValue.startsWith("http://") || strValue.startsWith("https://");
     }
 
+    @Override
+    @Nullable
     public ResultSetCellLocation getCurrentCellLocation() {
         DBDAttributeBinding currentAttribute = getCurrentAttribute();
         ResultSetRow currentRow = getController().getCurrentRow();
         IGridRow focusRow = spreadsheet.getFocusRow();
-        return new ResultSetCellLocation(currentAttribute, currentRow, getRowNestedIndexes(focusRow));
+        return currentAttribute == null || currentRow == null ? null : makeResultSetCellLocation(currentAttribute, currentRow, focusRow);
     }
 
-    public ResultSetCellLocation getCellLocation(GridCell cell) {
+    @NotNull
+    public ResultSetCellLocation getCellLocation(@NotNull GridCell cell) {
         final boolean recordMode = getController().isRecordMode();
         final DBDAttributeBinding attr = (DBDAttributeBinding)(recordMode ? cell.row.getElement() : cell.col.getElement());
         final ResultSetRow row = (ResultSetRow)(recordMode ? cell.col.getElement() : cell.row.getElement());
-        return new ResultSetCellLocation(attr, row, getRowNestedIndexes(cell.row));
+        return makeResultSetCellLocation(attr, row, cell.row);
+    }
+
+    @NotNull
+    private ResultSetCellLocation makeResultSetCellLocation(
+        @NotNull DBDAttributeBinding attribute,
+        @NotNull ResultSetRow row,
+        @Nullable IGridRow gridRow
+    ) {
+        ResultSetValuePath valuePath = getRowValuePath(gridRow);
+        int[] nestedIndexes = getRowNestedIndexes(gridRow);
+        return new ResultSetCellLocation(attribute, row, nestedIndexes, valuePath);
+    }
+
+    /**
+     * Prepare value path through the subvalues hierarchy by traversing it up to the binding root
+     * @param item representing internal location of the data value of interest
+     */
+    @Nullable
+    ResultSetValuePath getRowValuePath(@Nullable IGridItem item) {
+        if (!controller.isRecordMode() || item == null) {
+            return null;
+        }
+        ArrayDeque<ResultSetValuePath.PathItem> path = new ArrayDeque<>(item.getLevel());
+        for (IGridItem gr = item; gr != null; gr = gr.getParent()) {
+            Object element = gr.getElement();
+            if (gr.getParent() != null && (
+                gr.getParent().getElement() instanceof Collection<?> ||
+                gr.getParent().getElement() instanceof DBSAttributeBase attr && attr.getDataKind() == DBPDataKind.ARRAY
+            )) {
+                path.addFirst(new ResultSetValuePath.PathIndexItem(gr.getRelativeIndex()));
+            } else if (element instanceof DBSAttributeBase attr) {
+                path.addFirst(new ResultSetValuePath.PathAttributeItem(attr));
+                if (gr.getParent() == null && attr instanceof DBDAttributeBinding attrBinding) {
+                    DBDAttributeBinding parentBinding = attrBinding.getParentObject();
+                    while (parentBinding != null) {
+                        path.addFirst(new ResultSetValuePath.PathAttributeItem(parentBinding));
+                        parentBinding = parentBinding.getParentObject();
+                    }
+                }
+            } else {
+                if (!path.isEmpty()) {
+                    log.debug("Failed to prepare resultset value path item for " + gr + " [" + gr.getClass().getName() + "] " + gr.getElement());
+                } else {
+                    // nothing to do, this is the leaf value
+                }
+            }
+        }
+        return new ResultSetValuePath(List.copyOf(path));
     }
 
     @Nullable
-    private int[] getRowNestedIndexes(IGridItem gridRow) {
+    private int[] getRowNestedIndexes(@Nullable IGridItem gridRow) {
         int[] nestedIndexes = null;
         if (gridRow != null && gridRow.getParent() != null) {
             nestedIndexes = new int[gridRow.getLevel()];
@@ -2852,7 +3134,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
     // Checks whether there is parent row with attribute of type array
     // We need to check this recursively because of multi-dimensional arrays
     // where we may have multiple levels of nested rows for a single array attribute
-    private boolean hasParentArrayRow(IGridItem item) {
+    private boolean hasParentArrayRow(@NotNull IGridItem item) {
         for (IGridItem gr = item.getParent(); gr != null; gr = gr.getParent()) {
             if (gr.getElement() instanceof DBSTypedObject b) {
                 return b.getDataKind() == DBPDataKind.ARRAY;
@@ -2863,25 +3145,27 @@ public class SpreadsheetPresentation extends AbstractPresentation
         return false;
     }
 
-    private DBDDisplayFormat getValueRenderFormat(DBDAttributeBinding attr, Object value) {
+    @NotNull
+    private DBDDisplayFormat getValueRenderFormat(@NotNull DBDAttributeBinding attr, @Nullable Object value) {
         if (value instanceof Number && useNativeNumbersFormat) {
             return DBDDisplayFormat.NATIVE;
         }
         return gridValueFormat;
     }
 
+    @NotNull
     @Override
     public DBDDisplayFormat getDefaultDisplayFormat() {
         return gridValueFormat;
     }
 
     @Override
-    public void setDefaultDisplayFormat(DBDDisplayFormat displayFormat) {
+    public void setDefaultDisplayFormat(@NotNull DBDDisplayFormat displayFormat) {
         this.gridValueFormat = displayFormat;
         getPreferenceStore().setValue(ResultSetPreferences.RESULT_GRID_VALUE_FORMAT, this.gridValueFormat.name());
     }
 
-    private boolean isShowAsCheckbox(DBDAttributeBinding attr) {
+    private boolean isShowAsCheckbox(@NotNull DBDAttributeBinding attr) {
         return showBooleanAsCheckbox && attr.getPresentationAttribute().getDataKind() == DBPDataKind.BOOLEAN;
     }
 
@@ -2889,6 +3173,10 @@ public class SpreadsheetPresentation extends AbstractPresentation
         return value instanceof DBDCollection collection
             && !collection.isNull()
             && (collection.isEmpty() || spreadsheet.isCellExpanded(row, column));
+    }
+
+    private boolean isComplexValuesExpansionEnabled() {
+        return this.controller.getPreferenceStore().getBoolean(ModelPreferences.RESULT_TRANSFORM_COMPLEX_TYPES);
     }
 
     private class GridLabelProvider implements IGridLabelProvider {
@@ -2900,11 +3188,10 @@ public class SpreadsheetPresentation extends AbstractPresentation
             }
 
             if (item.getElement() instanceof DBDAttributeBinding attr) {
-                DBPImage image = DBValueFormatting.getObjectImage(attr.getAttribute());
-                return DBeaverIcons.getImage(image);
+                boolean includeModifiers = controller.isRecordMode();
+                return DBeaverIcons.getImage(DBValueFormatting.getObjectImage(attr.getAttribute(), true, includeModifiers));
             } else if (item.getElement() instanceof DBSAttributeBase attrBase) {
-                return DBeaverIcons.getImage(
-                    DBValueFormatting.getObjectImage(attrBase));
+                return DBeaverIcons.getImage(DBValueFormatting.getObjectImage(attrBase));
             }
 
             return null;
@@ -3003,20 +3290,25 @@ public class SpreadsheetPresentation extends AbstractPresentation
 
         @NotNull
         private String getAttributeText(DBDAttributeBinding binding) {
-            if (CommonUtils.isEmpty(binding.getLabel())) {
-                return binding.getName();
-            } else {
-                return binding.getLabel();
+            String label = CommonUtils.isEmpty(binding.getLabel()) ? binding.getName() : binding.getLabel();
+            // get show column position configuration
+            DBPPreferenceStore store = DBWorkbench.getPlatform().getPreferenceStore();
+            if (store.getBoolean(ResultSetPreferences.RESULT_SET_SHOW_COLUMN_POS)) {
+                label = label + " (" + (binding.getOrdinalPosition() + 1) + ")";
             }
+            return label;
         }
 
         @Nullable
         @Override
-        public String getDescription(IGridItem element) {
-            if (!showAttributeDescription || element.getParent() != null) {
+        public String getDescription(@NotNull IGridItem element) {
+            if (columnHeaderExtra == ResultSetPreferences.ColumnHeaderExtraContent.NOTHING || element.getParent() != null) {
                 return null;
             }
             if (element.getElement() instanceof DBDAttributeBinding attributeBinding) {
+                if (columnHeaderExtra == ResultSetPreferences.ColumnHeaderExtraContent.DATA_TYPE) {
+                    return columnTypeDescriptions.get(attributeBinding);
+                }
                 return attributeBinding.getDescription();
             } else {
                 return null;
@@ -3046,13 +3338,18 @@ public class SpreadsheetPresentation extends AbstractPresentation
                 final String typeName = attributeBinding.getFullTypeName();
                 final String description = attributeBinding.getDescription();
                 StringBuilder tip = new StringBuilder();
-                tip.append("Column: ");
+                tip.append(SpreadsheetMessages.tooltip_column).append(": ");
                 tip.append(name).append(" ").append(typeName);
                 if (attributeBinding.isRequired()) {
                     tip.append(" NOT NULL");
                 }
+                // Show source table name so users can identify column origins in JOINs
+                String sourceTable = getSourceTableName(attributeBinding);
+                if (sourceTable != null) {
+                    tip.append("\n").append(SpreadsheetMessages.tooltip_table).append(": ").append(sourceTable);
+                }
                 if (!CommonUtils.isEmpty(description)) {
-                    tip.append("\nDescription: ").append(description);
+                    tip.append("\n").append(SpreadsheetMessages.tooltip_description).append(": ").append(description);
                 }
                 // Add hints
                 ResultSetHintContext hintContext = controller.getModel().getHintContext();
@@ -3065,8 +3362,47 @@ public class SpreadsheetPresentation extends AbstractPresentation
                     }
                 }
                 return tip.toString();
+            } else {
+                IGridItem gr = element;
+                DBSAttributeBase attr = null;
+                while (gr != null && attr == null) {
+                    if (gr.getElement() instanceof DBSAttributeBase elementAttr) {
+                        attr = elementAttr;
+                    }
+                    gr = gr.getParent();
+                }
+                if (attr != null) {
+                    final String name = attr.getName();
+                    final String typeName = attr.getFullTypeName();
+                    final String description = attr instanceof DBSEntityAttribute ea ? ea.getDescription() : null;
+                    StringBuilder tip = new StringBuilder();
+                    tip.append(SpreadsheetMessages.tooltip_attribute).append(": ");
+                    tip.append(name).append(" ").append(typeName);
+                    if (!CommonUtils.isEmpty(description)) {
+                        tip.append("\n").append(SpreadsheetMessages.tooltip_description).append(": ").append(description);
+                    }
+                    return tip.toString();
+                }
             }
             return null;
+        }
+
+        @Nullable
+        private String getSourceTableName(@NotNull DBDAttributeBinding binding) {
+            DBCAttributeMetaData metaAttribute = binding.getMetaAttribute();
+            if (metaAttribute == null) {
+                return null;
+            }
+            DBCEntityMetaData entityMeta = metaAttribute.getEntityMetaData();
+            if (entityMeta == null) {
+                return null;
+            }
+            String qualifiedName = DBUtils.getSimpleQualifiedName(
+                entityMeta.getCatalogName(),
+                entityMeta.getSchemaName(),
+                entityMeta.getEntityName()
+            );
+            return CommonUtils.isEmpty(qualifiedName) ? null : qualifiedName;
         }
 
         @Override
@@ -3136,6 +3472,7 @@ public class SpreadsheetPresentation extends AbstractPresentation
             DBDAttributeBinding origAttr = getBinding();
             ResultSetRow origRow = getCurRow();
             int[] origRowIndexes = cellLocation.getRowIndexes();
+            ResultSetValuePath origRowValuePath = cellLocation.getValuePath();
             try {
                 Collection<GridPos> ssSelection = spreadsheet.getSelection();
                 for (GridPos pos : ssSelection) {
@@ -3157,14 +3494,15 @@ public class SpreadsheetPresentation extends AbstractPresentation
                         continue;
                     }
                     setBinding(attr);
-                    setCurRow(row, spreadsheet.getPresentation().getCurrentRowIndexes());
+                    SpreadsheetPresentation presentation = spreadsheet.getPresentation();
+                    setCurRow(row, presentation.getCurrentRowIndexes(), presentation.getCurrentRowValuePath());
                     updateValue(value, false);
                 }
                 spreadsheet.redrawGrid();
                 controller.updatePanelsContent(false);
             } finally {
                 setBinding(origAttr);
-                setCurRow(origRow, origRowIndexes);
+                setCurRow(origRow, origRowIndexes, origRowValuePath);
             }
         }
 
