@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,9 +19,9 @@ package org.jkiss.dbeaver.ui.search.data;
 import org.eclipse.jface.viewers.*;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.custom.SashForm;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
+import org.eclipse.swt.events.SelectionListener;
 import org.eclipse.swt.layout.GridData;
+import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.*;
 import org.jkiss.code.NotNull;
 import org.jkiss.dbeaver.DBException;
@@ -67,12 +67,12 @@ public class SearchDataPage extends AbstractSearchPage {
 
     private Combo searchText;
 
-    private SearchDataParams params = new SearchDataParams();
-    private Set<String> searchHistory = new LinkedHashSet<>();
+    private final SearchDataParams params = new SearchDataParams();
+    private final Set<String> searchHistory = new LinkedHashSet<>();
 
     private DatabaseNavigatorTree navigatorTree;
 
-    private DBPProject currentProject;
+    private final DBPProject currentProject;
     private boolean showConnected;
 
     public SearchDataPage() {
@@ -88,7 +88,8 @@ public class SearchDataPage extends AbstractSearchPage {
 
         initializeDialogUnits(parent);
 
-        Composite searchGroup = UIUtils.createComposite(parent, 1);
+        Composite searchGroup = new Composite(parent, SWT.NONE);
+        searchGroup.setLayout(new GridLayout(1, false));
         searchGroup.setLayoutData(new GridData(GridData.FILL_BOTH));
 
         searchText = new Combo(searchGroup, SWT.DROP_DOWN);
@@ -105,16 +106,15 @@ public class SearchDataPage extends AbstractSearchPage {
             updateEnablement();
         });
 
-        SashForm optionsGroup = new SashForm(parent, SWT.NONE);
+        SashForm optionsGroup = new SashForm(searchGroup, SWT.NONE);
         optionsGroup.setLayoutData(new GridData(GridData.FILL_BOTH));
 
         {
-            Group databasesGroup = UIUtils.createControlGroup(
+            Composite databasesGroup = UIUtils.createTitledComposite(
                 optionsGroup,
                 UISearchMessages.dialog_data_search_control_group_databases,
                 1,
-                GridData.FILL_BOTH,
-                0);
+                GridData.FILL_BOTH);
             databasesGroup.setLayoutData(new GridData(GridData.FILL_BOTH));
 
             DBPPlatform platform = DBWorkbench.getPlatform();
@@ -141,8 +141,7 @@ public class SearchDataPage extends AbstractSearchPage {
                         }
                     }
                     if (element instanceof DBNNode) {
-                        if (element instanceof DBNDatabaseFolder) {
-                            DBNDatabaseFolder folder = (DBNDatabaseFolder) element;
+                        if (element instanceof DBNDatabaseFolder folder) {
                             Class<? extends DBSObject> folderItemsClass = folder.getChildrenClass();
                             return folderItemsClass != null
                                 && (DBSObjectContainer.class.isAssignableFrom(folderItemsClass)
@@ -182,23 +181,19 @@ public class SearchDataPage extends AbstractSearchPage {
             final Button showConnectedCheck = new Button(databasesGroup, SWT.CHECK);
             showConnectedCheck.setText(UINavigatorMessages.label_show_connected);
             showConnectedCheck.setSelection(showConnected);
-            showConnectedCheck.addSelectionListener(new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
+            showConnectedCheck.addSelectionListener(SelectionListener.widgetSelectedAdapter(e -> {
                     showConnected = showConnectedCheck.getSelection();
                     treeViewer.refresh();
                     DBWorkbench.getPlatform().getPreferenceStore().setValue(PROP_SHOW_CONNECTED, showConnected);
-                }
-            });
+                }));
         }
 
         {
-            Composite optionsGroup2 = UIUtils.createControlGroup(
+            Composite optionsGroup2 = UIUtils.createTitledComposite(
                 optionsGroup,
                 UISearchMessages.dialog_data_search_control_group_settings,
                 2,
-                GridData.FILL_HORIZONTAL,
-                0);
+                GridData.FILL_HORIZONTAL);
             optionsGroup2.setLayoutData(new GridData(GridData.FILL_HORIZONTAL
                 | GridData.HORIZONTAL_ALIGN_BEGINNING
                 | GridData.VERTICAL_ALIGN_BEGINNING));
@@ -221,24 +216,16 @@ public class SearchDataPage extends AbstractSearchPage {
                 UISearchMessages.dialog_search_objects_case_sensitive,
                 UISearchMessages.dialog_data_search_checkbox_case_sensitive_tip, params.caseSensitive,
                 2);
-            caseCheckbox.addSelectionListener(new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-                    params.caseSensitive = caseCheckbox.getSelection();
-                }
-            });
+            caseCheckbox.addSelectionListener(SelectionListener.widgetSelectedAdapter(e ->
+                params.caseSensitive = caseCheckbox.getSelection()));
 
             final Button fastSearchCheckbox = UIUtils.createCheckbox(
                 optionsGroup2,
                 UISearchMessages.dialog_data_search_checkbox_fast_search,
                 UISearchMessages.dialog_data_search_checkbox_fast_search_tip, params.fastSearch,
                 2);
-            fastSearchCheckbox.addSelectionListener(new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-                    params.fastSearch = fastSearchCheckbox.getSelection();
-                }
-            });
+            fastSearchCheckbox.addSelectionListener(SelectionListener.widgetSelectedAdapter(e ->
+                params.fastSearch = fastSearchCheckbox.getSelection()));
 
 
             final Button searchNumbersCheckbox = UIUtils.createCheckbox(
@@ -246,24 +233,16 @@ public class SearchDataPage extends AbstractSearchPage {
                 UISearchMessages.dialog_data_search_checkbox_search_in_numbers,
                 UISearchMessages.dialog_data_search_checkbox_search_in_numbers_tip, params.searchNumbers,
                 2);
-            searchNumbersCheckbox.addSelectionListener(new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-                    params.searchNumbers = searchNumbersCheckbox.getSelection();
-                }
-            });
+            searchNumbersCheckbox.addSelectionListener(SelectionListener.widgetSelectedAdapter(e ->
+                params.searchNumbers = searchNumbersCheckbox.getSelection()));
 
             final Button searchLOBCheckbox = UIUtils.createCheckbox(
                 optionsGroup2,
                 UISearchMessages.dialog_data_search_checkbox_search_in_lob,
                 UISearchMessages.dialog_data_search_checkbox_search_in_lob_tip, params.searchLOBs,
                 2);
-            searchLOBCheckbox.addSelectionListener(new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-                    params.searchLOBs = searchNumbersCheckbox.getSelection();
-                }
-            });
+            searchLOBCheckbox.addSelectionListener(SelectionListener.widgetSelectedAdapter(e ->
+                params.searchLOBs = searchLOBCheckbox.getSelection()));
 
             final Button searchForeignCheckbox = UIUtils.createCheckbox(
                 optionsGroup2,
@@ -271,12 +250,8 @@ public class SearchDataPage extends AbstractSearchPage {
                 UISearchMessages.dialog_data_search_checkbox_search_in_foreign_objects_tip,
                 params.searchForeignObjects,
                 2);
-            searchForeignCheckbox.addSelectionListener(new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-                    params.searchForeignObjects = searchForeignCheckbox.getSelection();
-                }
-            });
+            searchForeignCheckbox.addSelectionListener(SelectionListener.widgetSelectedAdapter(e ->
+                params.searchForeignObjects = searchForeignCheckbox.getSelection()));
 
             Control infoLabel = UIUtils.createInfoLabel(
                 optionsGroup2,
@@ -414,7 +389,7 @@ public class SearchDataPage extends AbstractSearchPage {
             if (node instanceof DBNDatabaseNode) {
                 DBSObject object = ((DBNDatabaseNode) node).getObject();
                 if (object instanceof DBSDataContainer || object instanceof DBSObjectContainer) {
-                    if (sourcesString.length() > 0) {
+                    if (!sourcesString.isEmpty()) {
                         sourcesString.append("|"); //$NON-NLS-1$
                     }
                     sourcesString.append(((DBNDatabaseNode) node).getNodeUri());
@@ -452,7 +427,7 @@ public class SearchDataPage extends AbstractSearchPage {
 
         if (!checkedNodes.isEmpty()) {
             navigatorTree.getViewer().setSelection(new StructuredSelection(checkedNodes));
-            DBNDataSource node = DBNDataSource.getDataSourceNode(checkedNodes.get(0));
+            DBNDataSource node = DBNDataSource.getDataSourceNode(checkedNodes.getFirst());
             if (node != null) {
                 navigatorTree.getViewer().reveal(node);
             }
